--- a/stories/es/0052_simbegwire.html
+++ b/stories/es/0052_simbegwire.html
@@ -112,7 +112,7 @@ Rukia Nantale<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
 
-<p>A la mañana siguiente, Simbegwire cantó una vez más. Cuando unas mujeres vinieron a iban a lavar sus ropas en el riachuelo, escucharon la triste canción que venía de lo alto del árbol. Pensaron que sólo era el viento moviendo las hojas, y siguieron con su trabajo. Pero una de las mujeres le puso más atención a la canción.</p>
+<p>A la mañana siguiente, Simbegwire cantó una vez más. Cuando unas mujeres vinieron a lavar sus ropas en el riachuelo, escucharon la triste canción que venía de lo alto del árbol. Pensaron que sólo era el viento moviendo las hojas, y siguieron con su trabajo. Pero una de las mujeres le puso más atención a la canción.</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
