--- a/stories/es/0072_la-venganza-del-pájaro-miel_slides.html
+++ b/stories/es/0072_la-venganza-del-pájaro-miel_slides.html
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
-<p>Un día, después de varias semanas, Gingile escuchó el canto de Ngede nuevamente. Él recordó lo deliciosa que era esa miel y con entusiasmo siguió el canto del Pájaro Miel. Después de un largo viaje por el borde del bosque, Ngede se detuvo a descansar en un espino de parasol. &quot;Ah,&quot; pensó Gingile. &quot;el panal de abejas debe estar en este árbol.&quot; Entonces, rápidamente hizo su fogata y comenzó a trepar el árbol con la rama quemada entre sus dientes. Ngede se sentó y miró todo atentamente.</p>
+<p>Un día, después de varias semanas, Gingile escuchó el canto de Ngede nuevamente. Él recordó lo deliciosa que era esa miel y con entusiasmo siguió el canto del Pájaro Miel. Después de un largo viaje por el borde del bosque, Ngede se detuvo a descansar bajo una acacia de copa plana. &quot;Ah,&quot; pensó Gingile. &quot;el panal de abejas debe estar en este árbol.&quot; Entonces, rápidamente hizo su fogata y comenzó a trepar el árbol con la rama quemada entre sus dientes. Ngede se sentó y miró todo atentamente.</p>
 <center>
 <strong>8</strong>
 </center>
