--- a/stories/es/0243_de-vacaciones-con-la-abuela_slides.html
+++ b/stories/es/0243_de-vacaciones-con-la-abuela_slides.html
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>Odongo y Apiyo estaban emocionadas con la idea de visitar de nuevo a su abuela. La noche antes del viaje, empacaron sus cosas y dejaron todo listo para irse a la aldea. No pudieron dormir y se quedaron toda la noche hablando sobre sus vacaciones.</p>
+<p>Odongo y Apiyo estaban emocionados con la idea de visitar de nuevo a su abuela. La noche antes del viaje, empacaron sus cosas y dejaron todo listo para irse a la aldea. No pudieron dormir y se quedaron toda la noche hablando sobre sus vacaciones.</p>
 <center>
 <strong>2</strong>
 </center>
