--- a/stories/tr/0271_i̇ki_slides.html
+++ b/stories/tr/0271_i̇ki_slides.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
 <meta charset="utf-8">
-  <title>میرا جسم - Global African Storybook</title>
+  <title>İki - Global African Storybook</title>
   <style type="text/css">code{white-space: pre;}</style>
 <style>
   html { background-color: black; }
@@ -87,17 +87,17 @@
 </head>
 <body>
 
-<section id="میرا-جسم" class="slide level1">
-<h1>میرا جسم</h1>
+<section id="iki" class="slide level1">
+<h1>İki</h1>
 <center>
-<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/01.jpg" />
+<img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/01.jpg" />
 </center>
 
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/02.jpg" /></p>
-<p>میں اس کے ساتھ چل سکتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
+<p>Tutmak için iki küçük el.</p>
 <center>
 <strong>1</strong>
 </center>
@@ -105,8 +105,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/03.jpg" /></p>
-<p>میں اس کے ساتھ کود سکتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/03.jpg" /></p>
 <center>
 <strong>2</strong>
 </center>
@@ -114,8 +113,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/04.jpg" /></p>
-<p>میں اس کے ساتھ رقص کرسکتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
+<p>Vurmak için iki küçük ayak.</p>
 <center>
 <strong>3</strong>
 </center>
@@ -123,8 +122,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/05.jpg" /></p>
-<p>میں اس کے ساتھ تیر کر سکتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/05.jpg" /></p>
 <center>
 <strong>4</strong>
 </center>
@@ -132,8 +130,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
-<p>میں اس کے ساتھ چھوڑ سکتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
+<p>Görmek için iki küçük göz.</p>
 <center>
 <strong>5</strong>
 </center>
@@ -141,8 +139,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/07.jpg" /></p>
-<p>میں اس کے ساتھ لینا چاہتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/07.jpg" /></p>
 <center>
 <strong>6</strong>
 </center>
@@ -150,8 +147,8 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/08.jpg" /></p>
-<p>میں اس سے بچ سکتا ہوں۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
+<p>Duymak için iki küçük kulak.</p>
 <center>
 <strong>7</strong>
 </center>
@@ -159,8 +156,7 @@
 </section>
 <section class="slide level1">
 
-<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
-<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا۔</p>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/09.jpg" /></p>
 <center>
 <strong>8</strong>
 </center>
@@ -168,12 +164,29 @@
 </section>
 <section class="slide level1">
 
-<h2 id="میرا-جسم-1">میرا جسم</h2>
-<strong>Text:</strong> Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br> <strong>Illustrations:</strong> Mlungisi Dlamini<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
+<p>ve SARILMAK için iki sevgi dolu kol!</p>
+<center>
+<strong>9</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/11.jpg" /></p>
+<center>
+<strong>10</strong>
+</center>
+
+</section>
+<section class="slide level1">
+
+<h2 id="iki-1">İki</h2>
+<strong>Text:</strong> Carole Bloch<br> <strong>Illustrations:</strong> Richard MacIntosh<br> <strong>Translation:</strong> Nahide Büşra Ertekin<br> <strong>Language:</strong> Turkish<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
-You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/my-body'>here</a>
+You can view the original story on the ASP website <a href='http://africanstorybook.org/stories/two'>here</a>
 <p><div class="license">
 <a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </div>
