--- a/stories/ur/0001_ایک-بہت-قد-آدمی.html
+++ b/stories/ur/0001_ایک-بہت-قد-آدمی.html
@@ -49,77 +49,77 @@ Cornelius Gulere<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
 
-<p>اس کی کشتی بہت مختصر تھی.</p>
+<p>اس کی کشتی بہت مختصر تھی۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
 
-<p>اس کا دروازہ بہت کم تھا.</p>
+<p>اس کا دروازہ بہت کم تھا۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
 
-<p>اس کا بستر بہت مختصر تھا.</p>
+<p>اس کا بستر بہت مختصر تھا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
 
-<p>اس کی سائیکل بہت مختصر تھی.</p>
+<p>اس کی سائیکل بہت مختصر تھی۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
 
-<p>یہ آدمی بہت لمبا تھا.</p>
+<p>یہ آدمی بہت لمبا تھا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
 
-<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا.</p>
+<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
 
-<p>اس نے بہت اعلی دروازے بنا دیا.</p>
+<p>اس نے بہت اعلی دروازے بنا دیا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
 
-<p>اس نے بہت طویل بستر بنایا.</p>
+<p>اس نے بہت طویل بستر بنایا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
 
-<p>اس نے ایک بہت زیادہ سائیکل خریدا.</p>
+<p>اس نے ایک بہت زیادہ سائیکل خریدا۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
 
-<p>وہ ایک بہت اعلی کرسی پر بیٹھا تھا. انہوں نے ایک بہت لمبے کانٹا کے ساتھ کھایا.</p>
+<p>وہ ایک بہت اعلی کرسی پر بیٹھا تھا۔ انہوں نے ایک بہت لمبے کانٹا کے ساتھ کھایا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
 
-<p>وہ اپنے گھر چھوڑ کر ایک بڑے جنگل میں رہتا تھا. وہ کئی سال تک رہتا تھا.</p>
+<p>وہ اپنے گھر چھوڑ کر ایک بڑے جنگل میں رہتا تھا۔ وہ کئی سال تک رہتا تھا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
