--- a/stories/ur/0002_جانوروں-کو-دیکھو.html
+++ b/stories/ur/0002_جانوروں-کو-دیکھو.html
@@ -49,49 +49,49 @@ Jenny Katz<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
 
-<p>جانوروں کو دیکھو.</p>
+<p>جانوروں کو دیکھو۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
 
-<p>گائے کا کہنا ہے کہ، “مو.”</p>
+<p>گائے کا کہنا ہے کہ، “مو۔”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
 
-<p>بکری کا کہنا ہے کہ “مہ، مہ.”</p>
+<p>بکری کا کہنا ہے کہ “مہ، مہ۔”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
 
-<p>گھوڑے کا کہنا ہے کہ، “قریب.”</p>
+<p>گھوڑے کا کہنا ہے کہ، “قریب۔”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
 
-<p>سور کہتے ہیں، “گریج”.</p>
+<p>سور کہتے ہیں، “گریج”۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
 
-<p>چکن کا کہنا ہے کہ “کلک.”</p>
+<p>چکن کا کہنا ہے کہ “کلک۔”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
 
-<p>کتے کا کہنا ہے کہ “Woof.”</p>
+<p>کتے کا کہنا ہے کہ “Woof۔”</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
