--- a/stories/ur/0003_اسکول-کے-کپڑے_slides.html
+++ b/stories/ur/0003_اسکول-کے-کپڑے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
-<p>یہ لباس طویل ہے.</p>
+<p>یہ لباس طویل ہے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
-<p>یہ جرسی بڑی ہے.</p>
+<p>یہ جرسی بڑی ہے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
-<p>یہ بیگ بڑی ہے.</p>
+<p>یہ بیگ بڑی ہے۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
-<p>یہ بیلٹ ہے ...</p>
+<p>یہ بیلٹ ہے ۔۔۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
-<p>یہ ٹوپی چھوٹا ہے.</p>
+<p>یہ ٹوپی چھوٹا ہے۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
-<p>جرابیں مختصر ہیں.</p>
+<p>جرابیں مختصر ہیں۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
-<p>لیکن یہ جوتے نئے ہیں.</p>
+<p>لیکن یہ جوتے نئے ہیں۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
-<p>... وہ ٹھیک ہیں.</p>
+<p>۔۔۔ وہ ٹھیک ہیں۔</p>
 <center>
 <strong>8</strong>
 </center>
