--- a/stories/ur/0030_احساسات_slides.html
+++ b/stories/ur/0030_احساسات_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
-<p>میرا دل بہت سی چیزیں محسوس کرتی ہے.</p>
+<p>میرا دل بہت سی چیزیں محسوس کرتا ہے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
-<p>جب میری نانی شام میں کہانیوں کو بتاتی ہے تو مجھے خوشی محسوس ہوتی ہے.</p>
+<p>جب میری نانی شام میں کہانیوں کو بتاتی ہے تو مجھے خوشی محسوس ہوتی ہے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
-<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو مجھے خاموش محسوس ہوتا ہے.</p>
+<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو مجھے بیوقوفی محسوس ہوتی ہے۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
-<p>مجھے برا لگتا ہے جب میرے والد کا کہنا ہے کہ اس کی رقم نہیں ہے.</p>
+<p>مجھے برا لگتا ہے جب میرے والد کہتے ھیں ہے کہ ان کے پاس رقم نہیں ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
-<p>جب میری ماں نے مجھے گلے لگایا تو میں پیار کرتا ہوں.</p>
+<p>جب میری ماں نے مجھے گلے لگاتی ہے تو مجھے لگتا ہے کہ کوئ مجھ سے پیار کرتا ہوں۔</p>
 <center>
 <strong>5</strong>
 </center>
