--- a/stories/ur/0066_نوزیل-اور-تین-بال.html
+++ b/stories/ur/0066_نوزیل-اور-تین-بال.html
@@ -49,91 +49,91 @@ Tessa Welch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
 
-<p>ایک طویل عرصے سے، لکڑی جمع کرنے کے لئے تین لڑکیوں باہر گئے.</p>
+<p>ایک طویل عرصے سے، لکڑی جمع کرنے کے لئے تین لڑکیوں باہر گئے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
 
-<p>یہ ایک گرم دن تھا لہذا وہ دریا پر تیرے پاس نیچے آ گئے. انہوں نے کھیلنا اور تقسیم کیا اور پانی میں سواری.</p>
+<p>یہ ایک گرم دن تھا لہذا وہ دریا پر تیرے پاس نیچے آ گئے۔ انہوں نے کھیلنا اور تقسیم کیا اور پانی میں سواری۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
 
-<p>اچانک، وہ احساس ہوا کہ دیر ہو چکی تھی. انہوں نے گاؤں میں جلدی جلدی.</p>
+<p>اچانک، وہ احساس ہوا کہ دیر ہو چکی تھی۔ انہوں نے گاؤں میں جلدی جلدی۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
 
-<p>جب وہ تقریبا گھر میں تھے، نوزیل نے اپنا ہاتھ اپنی گردن پر ڈال دیا. اس نے اپنا ہار بھول گیا تھا! “میرے ساتھ واپس آو!” اس نے اپنے دوستوں سے درخواست کی. لیکن اس کے دوست نے کہا کہ بہت دیر ہو چکی ہے.</p>
+<p>جب وہ تقریبا گھر میں تھے، نوزیل نے اپنا ہاتھ اپنی گردن پر ڈال دیا۔ اس نے اپنا ہار بھول گیا تھا! “میرے ساتھ واپس آو!” اس نے اپنے دوستوں سے درخواست کی۔ لیکن اس کے دوست نے کہا کہ بہت دیر ہو چکی ہے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
 
-<p>تو نوزیلے اکیلے دریا پر چلا گیا. اس نے اپنا ہار پایا اور گھر جلدی. لیکن وہ اندھیرے میں کھو گیا.</p>
+<p>تو نوزیلے اکیلے دریا پر چلا گیا۔ اس نے اپنا ہار پایا اور گھر جلدی۔ لیکن وہ اندھیرے میں کھو گیا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
 
-<p>فاصلے پر اس نے ہلکا پھلکا سے آکر دیکھا. اس نے اپنی طرف جلدی اور دروازے پر دستخط کیا.</p>
+<p>فاصلے پر اس نے ہلکا پھلکا سے آکر دیکھا۔ اس نے اپنی طرف جلدی اور دروازے پر دستخط کیا۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
 
-<p>اس کی حیرت میں، ایک کتے نے دروازہ کھولا اور کہا، “آپ کیا چاہتے ہیں؟” نیوزیبل نے کہا، “میں کھو گیا ہوں اور مجھے سونے کی جگہ کی ضرورت ہے.” “اندر آو، یا میں تمہیں کاٹ دونگا!” کتا نے کہا. تو نوزیلل اندر چلا گیا.</p>
+<p>اس کی حیرت میں، ایک کتے نے دروازہ کھولا اور کہا، “آپ کیا چاہتے ہیں؟” نیوزیبل نے کہا، “میں کھو گیا ہوں اور مجھے سونے کی جگہ کی ضرورت ہے۔” “اندر آو، یا میں تمہیں کاٹ دونگا!” کتا نے کہا۔ تو نوزیلل اندر چلا گیا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
 
-<p>پھر کتا نے کہا، “میرے لئے کک!” انہوں نے جواب دیا کہ “لیکن میں نے پہلے ہی کسی کتے کے لئے پکایا نہیں ہے.” “کک، یا میں تمہیں کاٹ دونگا!” کتا نے کہا. تو نوزیل نے کتے کے لئے کچھ کھانا پکایا.</p>
+<p>پھر کتا نے کہا، “میرے لئے کک!” انہوں نے جواب دیا کہ “لیکن میں نے پہلے ہی کسی کتے کے لئے پکایا نہیں ہے۔” “کک، یا میں تمہیں کاٹ دونگا!” کتا نے کہا۔ تو نوزیل نے کتے کے لئے کچھ کھانا پکایا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
 
-<p>پھر کتا نے کہا، “میرے لئے بستر بنائیں!” نوزیل نے جواب دیا، “میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے.” “بستر بنائیں، یا میں تمہیں کاٹ دونگا!” کتا نے کہا. تو نوزیل نے بستر بنایا.</p>
+<p>پھر کتا نے کہا، “میرے لئے بستر بنائیں!” نوزیل نے جواب دیا، “میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے۔” “بستر بنائیں، یا میں تمہیں کاٹ دونگا!” کتا نے کہا۔ تو نوزیل نے بستر بنایا۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
 
-<p>ہر دن اسے کتے کے لئے کھانا پکانا اور دھوپ کرنا پڑا تھا. پھر ایک دن کتا نے کہا، “نزیلبل، آج مجھے کچھ دوستوں کا دورہ کرنا ہوگا، گھر چھڑانا، کھانا پکانا اور میری واپس آنے سے پہلے میری چیزیں دھو.”</p>
+<p>ہر دن اسے کتے کے لئے کھانا پکانا اور دھوپ کرنا پڑا تھا۔ پھر ایک دن کتا نے کہا، “نزیلبل، آج مجھے کچھ دوستوں کا دورہ کرنا ہوگا، گھر چھڑانا، کھانا پکانا اور میری واپس آنے سے پہلے میری چیزیں دھو۔”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
 
-<p>جیسے ہی کتا چلا گیا، نوزیل نے اس کے سر سے تین بال لے لیا. اس نے ایک بال بستر کے نیچے، ایک دروازے کے پیچھے اور ایک کررا میں رکھا. پھر وہ گھر کے طور پر جلدی کے طور پر وہ کر سکتے تھے بھاگ گیا.</p>
+<p>جیسے ہی کتا چلا گیا، نوزیل نے اس کے سر سے تین بال لے لیا۔ اس نے ایک بال بستر کے نیچے، ایک دروازے کے پیچھے اور ایک کررا میں رکھا۔ پھر وہ گھر کے طور پر جلدی کے طور پر وہ کر سکتے تھے بھاگ گیا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
 
-<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا. “نوزیل، آپ کہاں ہیں؟” انہوں نے زور دیا. پہلے بال نے کہا “میں یہاں ہوں، بستر کے نیچے.” دوسرے بال نے کہا “میں یہاں، دروازے کے پیچھے ہوں”. تیسرے بال نے کہا “میں یہاں، کررا میں ہوں”.</p>
+<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا۔ “نوزیل، آپ کہاں ہیں؟” انہوں نے زور دیا۔ پہلے بال نے کہا “میں یہاں ہوں، بستر کے نیچے۔” دوسرے بال نے کہا “میں یہاں، دروازے کے پیچھے ہوں”۔ تیسرے بال نے کہا “میں یہاں، کررا میں ہوں”۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
 
-<p>پھر کتا جانتا تھا کہ نوزیل نے انہیں دھوکہ دیا تھا. لہذا وہ بھاگ گیا اور گاؤں کے راستے میں بھاگ گیا. لیکن نوزیل کے بھائی بڑے لچک کے ساتھ وہاں انتظار کر رہے تھے. کتے کو بدل دیا اور بھاگ گیا اور کبھی نہیں دیکھا تھا.</p>
+<p>پھر کتا جانتا تھا کہ نوزیل نے انہیں دھوکہ دیا تھا۔ لہذا وہ بھاگ گیا اور گاؤں کے راستے میں بھاگ گیا۔ لیکن نوزیل کے بھائی بڑے لچک کے ساتھ وہاں انتظار کر رہے تھے۔ کتے کو بدل دیا اور بھاگ گیا اور کبھی نہیں دیکھا تھا۔</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
