--- a/stories/ur/0066_نوزیل-اور-تین-بال_slides.html
+++ b/stories/ur/0066_نوزیل-اور-تین-بال_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/02.jpg" /></p>
-<p>ایک طویل عرصے سے، لکڑی جمع کرنے کے لئے تین لڑکیوں باہر گئے.</p>
+<p>ایک طویل عرصے سے، لکڑی جمع کرنے کے لئے تین لڑکیوں باہر گئے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/03.jpg" /></p>
-<p>یہ ایک گرم دن تھا لہذا وہ دریا پر تیرے پاس نیچے آ گئے. انہوں نے کھیلنا اور تقسیم کیا اور پانی میں سواری.</p>
+<p>یہ ایک گرم دن تھا لہذا وہ دریا پر تیرے پاس نیچے آ گئے۔ انہوں نے کھیلنا اور تقسیم کیا اور پانی میں سواری۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/04.jpg" /></p>
-<p>اچانک، وہ احساس ہوا کہ دیر ہو چکی تھی. انہوں نے گاؤں میں جلدی جلدی.</p>
+<p>اچانک، وہ احساس ہوا کہ دیر ہو چکی تھی۔ انہوں نے گاؤں میں جلدی جلدی۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/05.jpg" /></p>
-<p>جب وہ تقریبا گھر میں تھے، نوزیل نے اپنا ہاتھ اپنی گردن پر ڈال دیا. اس نے اپنا ہار بھول گیا تھا! &quot;میرے ساتھ واپس آو!&quot; اس نے اپنے دوستوں سے درخواست کی. لیکن اس کے دوست نے کہا کہ بہت دیر ہو چکی ہے.</p>
+<p>جب وہ تقریبا گھر میں تھے، نوزیل نے اپنا ہاتھ اپنی گردن پر ڈال دیا۔ اس نے اپنا ہار بھول گیا تھا! &quot;میرے ساتھ واپس آو!&quot; اس نے اپنے دوستوں سے درخواست کی۔ لیکن اس کے دوست نے کہا کہ بہت دیر ہو چکی ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/06.jpg" /></p>
-<p>تو نوزیلے اکیلے دریا پر چلا گیا. اس نے اپنا ہار پایا اور گھر جلدی. لیکن وہ اندھیرے میں کھو گیا.</p>
+<p>تو نوزیلے اکیلے دریا پر چلا گیا۔ اس نے اپنا ہار پایا اور گھر جلدی۔ لیکن وہ اندھیرے میں کھو گیا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/07.jpg" /></p>
-<p>فاصلے پر اس نے ہلکا پھلکا سے آکر دیکھا. اس نے اپنی طرف جلدی اور دروازے پر دستخط کیا.</p>
+<p>فاصلے پر اس نے ہلکا پھلکا سے آکر دیکھا۔ اس نے اپنی طرف جلدی اور دروازے پر دستخط کیا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/08.jpg" /></p>
-<p>اس کی حیرت میں، ایک کتے نے دروازہ کھولا اور کہا، &quot;آپ کیا چاہتے ہیں؟&quot; نیوزیبل نے کہا، &quot;میں کھو گیا ہوں اور مجھے سونے کی جگہ کی ضرورت ہے.&quot; &quot;اندر آو، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا. تو نوزیلل اندر چلا گیا.</p>
+<p>اس کی حیرت میں، ایک کتے نے دروازہ کھولا اور کہا، &quot;آپ کیا چاہتے ہیں؟&quot; نیوزیبل نے کہا، &quot;میں کھو گیا ہوں اور مجھے سونے کی جگہ کی ضرورت ہے۔&quot; &quot;اندر آو، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا۔ تو نوزیلل اندر چلا گیا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/09.jpg" /></p>
-<p>پھر کتا نے کہا، &quot;میرے لئے کک!&quot; انہوں نے جواب دیا کہ &quot;لیکن میں نے پہلے ہی کسی کتے کے لئے پکایا نہیں ہے.&quot; &quot;کک، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا. تو نوزیل نے کتے کے لئے کچھ کھانا پکایا.</p>
+<p>پھر کتا نے کہا، &quot;میرے لئے کک!&quot; انہوں نے جواب دیا کہ &quot;لیکن میں نے پہلے ہی کسی کتے کے لئے پکایا نہیں ہے۔&quot; &quot;کک، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا۔ تو نوزیل نے کتے کے لئے کچھ کھانا پکایا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/10.jpg" /></p>
-<p>پھر کتا نے کہا، &quot;میرے لئے بستر بنائیں!&quot; نوزیل نے جواب دیا، &quot;میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے.&quot; &quot;بستر بنائیں، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا. تو نوزیل نے بستر بنایا.</p>
+<p>پھر کتا نے کہا، &quot;میرے لئے بستر بنائیں!&quot; نوزیل نے جواب دیا، &quot;میں نے کبھی کتے کے لئے بستر نہیں بنایا ہے۔&quot; &quot;بستر بنائیں، یا میں تمہیں کاٹ دونگا!&quot; کتا نے کہا۔ تو نوزیل نے بستر بنایا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/11.jpg" /></p>
-<p>ہر دن اسے کتے کے لئے کھانا پکانا اور دھوپ کرنا پڑا تھا. پھر ایک دن کتا نے کہا، &quot;نزیلبل، آج مجھے کچھ دوستوں کا دورہ کرنا ہوگا، گھر چھڑانا، کھانا پکانا اور میری واپس آنے سے پہلے میری چیزیں دھو.&quot;</p>
+<p>ہر دن اسے کتے کے لئے کھانا پکانا اور دھوپ کرنا پڑا تھا۔ پھر ایک دن کتا نے کہا، &quot;نزیلبل، آج مجھے کچھ دوستوں کا دورہ کرنا ہوگا، گھر چھڑانا، کھانا پکانا اور میری واپس آنے سے پہلے میری چیزیں دھو۔&quot;</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/12.jpg" /></p>
-<p>جیسے ہی کتا چلا گیا، نوزیل نے اس کے سر سے تین بال لے لیا. اس نے ایک بال بستر کے نیچے، ایک دروازے کے پیچھے اور ایک کررا میں رکھا. پھر وہ گھر کے طور پر جلدی کے طور پر وہ کر سکتے تھے بھاگ گیا.</p>
+<p>جیسے ہی کتا چلا گیا، نوزیل نے اس کے سر سے تین بال لے لیا۔ اس نے ایک بال بستر کے نیچے، ایک دروازے کے پیچھے اور ایک کررا میں رکھا۔ پھر وہ گھر کے طور پر جلدی کے طور پر وہ کر سکتے تھے بھاگ گیا۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/13.jpg" /></p>
-<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا. &quot;نوزیل، آپ کہاں ہیں؟&quot; انہوں نے زور دیا. پہلے بال نے کہا &quot;میں یہاں ہوں، بستر کے نیچے.&quot; دوسرے بال نے کہا &quot;میں یہاں، دروازے کے پیچھے ہوں&quot;. تیسرے بال نے کہا &quot;میں یہاں، کررا میں ہوں&quot;.</p>
+<p>جب کتا واپس آ گیا تو اس نے نزیلبل کو دیکھا۔ &quot;نوزیل، آپ کہاں ہیں؟&quot; انہوں نے زور دیا۔ پہلے بال نے کہا &quot;میں یہاں ہوں، بستر کے نیچے۔&quot; دوسرے بال نے کہا &quot;میں یہاں، دروازے کے پیچھے ہوں&quot;۔ تیسرے بال نے کہا &quot;میں یہاں، کررا میں ہوں&quot;۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0066/14.jpg" /></p>
-<p>پھر کتا جانتا تھا کہ نوزیل نے انہیں دھوکہ دیا تھا. لہذا وہ بھاگ گیا اور گاؤں کے راستے میں بھاگ گیا. لیکن نوزیل کے بھائی بڑے لچک کے ساتھ وہاں انتظار کر رہے تھے. کتے کو بدل دیا اور بھاگ گیا اور کبھی نہیں دیکھا تھا.</p>
+<p>پھر کتا جانتا تھا کہ نوزیل نے انہیں دھوکہ دیا تھا۔ لہذا وہ بھاگ گیا اور گاؤں کے راستے میں بھاگ گیا۔ لیکن نوزیل کے بھائی بڑے لچک کے ساتھ وہاں انتظار کر رہے تھے۔ کتے کو بدل دیا اور بھاگ گیا اور کبھی نہیں دیکھا تھا۔</p>
 <center>
 <strong>13</strong>
 </center>
