--- a/stories/ur/0072_ہنیگوڈڈ-کا-بدلہ_slides.html
+++ b/stories/ur/0072_ہنیگوڈڈ-کا-بدلہ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/02.jpg" /></p>
-<p>یہ نئٹی، ہنی گائیڈ اور گنگائل نامی ایک لالچی آدمی کی کہانی ہے. ایک دن جب گنگائل شکار سے باہر نکلے تو انہوں نے نئٹی کے فون کو سنا. گنگائل کا منہ شہد کی سوچ پر پانی شروع ہوا. انہوں نے احتیاط سے سنا اور سن لیا، جب تک کہ اس نے اس کے سر سے اوپر شاخوں میں پرندوں کو دیکھا. &quot;چٹک-چٹک-چٹک،&quot; چھوٹا سا پرندوں نے چھایا، جیسا کہ وہ اگلے درخت پر آگیا اور اگلے ہی. &quot;چپٹ، چٹک، چٹک،&quot; انہوں نے کہا کہ، وقت گزارنے سے روکنے کے لئے اس بات کو یقینی بنانا کہ گنگیل کے بعد.</p>
+<p>یہ نئٹی، ہنی گائیڈ اور گنگائل نامی ایک لالچی آدمی کی کہانی ہے۔ ایک دن جب گنگائل شکار سے باہر نکلے تو انہوں نے نئٹی کے فون کو سنا۔ گنگائل کا منہ شہد کی سوچ پر پانی شروع ہوا۔ انہوں نے احتیاط سے سنا اور سن لیا، جب تک کہ اس نے اس کے سر سے اوپر شاخوں میں پرندوں کو دیکھا۔ &quot;چٹک-چٹک-چٹک،&quot; چھوٹا سا پرندوں نے چھایا، جیسا کہ وہ اگلے درخت پر آگیا اور اگلے ہی۔ &quot;چپٹ، چٹک، چٹک،&quot; انہوں نے کہا کہ، وقت گزارنے سے روکنے کے لئے اس بات کو یقینی بنانا کہ گنگیل کے بعد۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/03.jpg" /></p>
-<p>نصف گھنٹہ کے بعد، وہ ایک بڑی جنگلی انجیر کا درخت پہنچا. نئٹی نے شاخوں کے درمیان پاگل کے بارے میں ہٹا دیا. اس کے بعد اس نے ایک شاخ پر آباد کیا اور اس کے سر کو گنگائل میں قابو پانے کے طور پر کہا کہ &quot;یہاں یہ ہے، اب آؤ! کیا آپ کو اتنی دیر تک لے جا رہا ہے؟&quot; گنگائل درخت کے نیچے سے کسی بھی مکھیوں کو دیکھ نہیں سکا، لیکن انہوں نے نئٹی پر اعتماد کیا.</p>
+<p>نصف گھنٹہ کے بعد، وہ ایک بڑی جنگلی انجیر کا درخت پہنچا۔ نئٹی نے شاخوں کے درمیان پاگل کے بارے میں ہٹا دیا۔ اس کے بعد اس نے ایک شاخ پر آباد کیا اور اس کے سر کو گنگائل میں قابو پانے کے طور پر کہا کہ &quot;یہاں یہ ہے، اب آؤ! کیا آپ کو اتنی دیر تک لے جا رہا ہے؟&quot; گنگائل درخت کے نیچے سے کسی بھی مکھیوں کو دیکھ نہیں سکا، لیکن انہوں نے نئٹی پر اعتماد کیا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/04.jpg" /></p>
-<p>لہذا گنگیل نے اپنے شکار کے نیچے درخت کے نیچے ڈال دیا، کچھ خشک مٹیوں کو جمع کیا اور ایک چھوٹی آگ آگئی. جب آگ اچھی طرح سے جل رہا تھا تو اس نے ایک طویل خشک چھڑی کو آگ کے دل میں ڈال دیا. اس لکڑی کو خاص طور پر جانا جاتا تھا جب اسے جلا دیا گیا تھا. اس نے اپنے دانتوں میں تمباکو نوشی کی چھڑی کے ٹھنڈا اختتام پر چڑھنے لگے.</p>
+<p>لہذا گنگیل نے اپنے شکار کے نیچے درخت کے نیچے ڈال دیا، کچھ خشک مٹیوں کو جمع کیا اور ایک چھوٹی آگ آگئی۔ جب آگ اچھی طرح سے جل رہا تھا تو اس نے ایک طویل خشک چھڑی کو آگ کے دل میں ڈال دیا۔ اس لکڑی کو خاص طور پر جانا جاتا تھا جب اسے جلا دیا گیا تھا۔ اس نے اپنے دانتوں میں تمباکو نوشی کی چھڑی کے ٹھنڈا اختتام پر چڑھنے لگے۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/05.jpg" /></p>
-<p>لد ہی وہ مصروف شہد کی مکھیوں کے بلند آوازوں کو سن سکتا تھا. وہ درخت ٹرنک میں کھوکھلی سے باہر اور ان کے چھت سے باہر آ رہے تھے. جب گائائل نے چھت پر پہنچ کر اس نے چھڑی کے تمباکو نوشی کے خاتمے کو کھوکھلی میں دھکا دیا. مکھیوں، ناراض اور مطلب جلدی آتی ہے. وہ اڑ گئے کیونکہ اس نے دھواں پسند نہیں کیا تھا لیکن اس سے قبل کہ انہوں نے گنگیل کو بعض دردناک چیزیں دی تھیں!</p>
+<p>لد ہی وہ مصروف شہد کی مکھیوں کے بلند آوازوں کو سن سکتا تھا۔ وہ درخت ٹرنک میں کھوکھلی سے باہر اور ان کے چھت سے باہر آ رہے تھے۔ جب گائائل نے چھت پر پہنچ کر اس نے چھڑی کے تمباکو نوشی کے خاتمے کو کھوکھلی میں دھکا دیا۔ مکھیوں، ناراض اور مطلب جلدی آتی ہے۔ وہ اڑ گئے کیونکہ اس نے دھواں پسند نہیں کیا تھا لیکن اس سے قبل کہ انہوں نے گنگیل کو بعض دردناک چیزیں دی تھیں!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/06.jpg" /></p>
-<p>جب مکھیوں سے باہر نکل آئے، گنگیل نے اپنے ہاتھوں کو گھوںسلا میں دھکیل دیا. اس نے بھاری کنگھی کے ہاتھوں سے نکال لیا، امیر شہد کے ساتھ ٹپکا اور چربی سے بھرا ہوا، سفید گبوں. انہوں نے اس کے کندھے کو احتیاط سے رکھ دیا جسے وہ اپنے کندھے پر پہنچا، اور درخت پر چڑھنا شروع کر دیا.</p>
+<p>جب مکھیوں سے باہر نکل آئے، گنگیل نے اپنے ہاتھوں کو گھوںسلا میں دھکیل دیا۔ اس نے بھاری کنگھی کے ہاتھوں سے نکال لیا، امیر شہد کے ساتھ ٹپکا اور چربی سے بھرا ہوا، سفید گبوں۔ انہوں نے اس کے کندھے کو احتیاط سے رکھ دیا جسے وہ اپنے کندھے پر پہنچا، اور درخت پر چڑھنا شروع کر دیا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/07.jpg" /></p>
-<p>نئٹی خوشی سے سب کچھ دیکھا ہے کہ گنگائل کر رہا تھا. وہ اس کا انتظار کر رہا تھا کہ شہد کی ایک چربی ٹکڑے کو چھوڑنے کے لۓ شین گائیڈ میں آپ کی پیشکش کی گئی. نئٹی نے شاخ سے شاخ سے قریب، زمین کے قریب اور قریب. آخر میں گنگیل درخت کے نچلے حصے میں پہنچ گیا. نئٹی نے لڑکے کے قریب ایک چٹان پر باندھا اور ان کے انعام کا انتظار کیا.</p>
+<p>نئٹی خوشی سے سب کچھ دیکھا ہے کہ گنگائل کر رہا تھا۔ وہ اس کا انتظار کر رہا تھا کہ شہد کی ایک چربی ٹکڑے کو چھوڑنے کے لۓ شین گائیڈ میں آپ کی پیشکش کی گئی۔ نئٹی نے شاخ سے شاخ سے قریب، زمین کے قریب اور قریب۔ آخر میں گنگیل درخت کے نچلے حصے میں پہنچ گیا۔ نئٹی نے لڑکے کے قریب ایک چٹان پر باندھا اور ان کے انعام کا انتظار کیا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/08.jpg" /></p>
-<p>لیکن، گینائل نے آگ نکال دیا، اس کے سپیئر اٹھایا اور گھر چلنے شروع کر دیا، پرندوں کو نظر انداز کر دیا. نئٹی نے بدقسمتی سے کہا، &quot;VIC torr! VIC torrr!&quot; گنگیل روک دیا، چھوٹا سا پرندوں پر کھڑا ہوا اور زور سے چوری. &quot;تم کچھ شہد چاہتے ہو، کیا آپ میرے دوست ہیں؟ لیکن میں نے سب کام کیا، اور تمام ڈھیر مل گئے. میں آپ کے ساتھ اس خوبصورت شہد کو کیوں شریک کروں؟&quot; پھر وہ چلے گئے. نئٹی غصہ تھا! اس کا علاج کرنے کا کوئی طریقہ نہیں تھا! لیکن وہ اس کا بدلہ لے گا.</p>
+<p>لیکن، گینائل نے آگ نکال دیا، اس کے سپیئر اٹھایا اور گھر چلنے شروع کر دیا، پرندوں کو نظر انداز کر دیا۔ نئٹی نے بدقسمتی سے کہا، &quot;VIC torr! VIC torrr!&quot; گنگیل روک دیا، چھوٹا سا پرندوں پر کھڑا ہوا اور زور سے چوری۔ &quot;تم کچھ شہد چاہتے ہو، کیا آپ میرے دوست ہیں؟ لیکن میں نے سب کام کیا، اور تمام ڈھیر مل گئے۔ میں آپ کے ساتھ اس خوبصورت شہد کو کیوں شریک کروں؟&quot; پھر وہ چلے گئے۔ نئٹی غصہ تھا! اس کا علاج کرنے کا کوئی طریقہ نہیں تھا! لیکن وہ اس کا بدلہ لے گا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
-<p>ایک دن کئی ہفتوں کے بعد گنگیل نے دوبارہ ندی کی شہادت سنی. انہوں نے مزیدار شہد کو یاد کیا، اور ایک بار پھر پرندوں کی پیروی کی. جنگل کے کنارے کے ساتھ گنگائل کی قیادت کے بعد، نئٹی نے ایک چھتری کی چھت میں آرام سے روکا. &quot;آہ،&quot; گینائل نے سوچا. &quot;چھت میں اس درخت میں ہونا ضروری ہے.&quot; اس نے فوری طور پر اپنی چھوٹی آگ بنا دی اور اس کے دانتوں میں تمباکو نوشی شاخ چڑھنے لگے. نئٹی بیٹھا اور دیکھا.</p>
+<p>ایک دن کئی ہفتوں کے بعد گنگیل نے دوبارہ ندی کی شہادت سنی۔ انہوں نے مزیدار شہد کو یاد کیا، اور ایک بار پھر پرندوں کی پیروی کی۔ جنگل کے کنارے کے ساتھ گنگائل کی قیادت کے بعد، نئٹی نے ایک چھتری کی چھت میں آرام سے روکا۔ &quot;آہ،&quot; گینائل نے سوچا۔ &quot;چھت میں اس درخت میں ہونا ضروری ہے۔&quot; اس نے فوری طور پر اپنی چھوٹی آگ بنا دی اور اس کے دانتوں میں تمباکو نوشی شاخ چڑھنے لگے۔ نئٹی بیٹھا اور دیکھا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/10.jpg" /></p>
-<p>گنگیل پر چڑھ گیا، سوچ رہا تھا کہ اس نے ہمیشہ معمولی بوجھ کیوں نہیں سنا. &quot;شاید چھت درخت میں گہری ہے،&quot; انہوں نے خود کو سوچا. اس نے خود کو ایک دوسری شاخ کھینچ دی. لیکن چھت کی بجائے، وہ ایک چیتے کے چہرے میں گھوم رہا تھا! چیف جسٹس نے اپنی نیند میں بہت ناراض تھا تاکہ اتنی بے حد مشکل ہو. اس نے اپنی آنکھوں کو تنگ کر دیا، اس کے منہ کو بہت بڑے اور بہت تیز دانتوں کو ظاہر کرنے کے لئے کھول دیا.</p>
+<p>گنگیل پر چڑھ گیا، سوچ رہا تھا کہ اس نے ہمیشہ معمولی بوجھ کیوں نہیں سنا۔ &quot;شاید چھت درخت میں گہری ہے،&quot; انہوں نے خود کو سوچا۔ اس نے خود کو ایک دوسری شاخ کھینچ دی۔ لیکن چھت کی بجائے، وہ ایک چیتے کے چہرے میں گھوم رہا تھا! چیف جسٹس نے اپنی نیند میں بہت ناراض تھا تاکہ اتنی بے حد مشکل ہو۔ اس نے اپنی آنکھوں کو تنگ کر دیا، اس کے منہ کو بہت بڑے اور بہت تیز دانتوں کو ظاہر کرنے کے لئے کھول دیا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/11.jpg" /></p>
-<p>اس سے پہلے کہ چیتے گینائل میں ایک سوپ لگے ہو، اس نے درخت پھیلایا. اس کی جلدی میں انہوں نے ایک شاخ کھو دیا، اور زمین پر ایک بھاری انگوٹھی کے ساتھ زمین پر ان کی ٹخن گھومنے. انہوں نے جتنا جلدی بند کر دیا تھا. خوش قسمتی سے ان کے لئے، چیتے بھی اس کا پیچھا کرنے کے لئے بہت نیند تھی. نئٹی، ہنی گائیڈ، ان کا انتقام تھا. اور گنگائل اس کے سبق سیکھا.</p>
+<p>اس سے پہلے کہ چیتے گینائل میں ایک سوپ لگے ہو، اس نے درخت پھیلایا۔ اس کی جلدی میں انہوں نے ایک شاخ کھو دیا، اور زمین پر ایک بھاری انگوٹھی کے ساتھ زمین پر ان کی ٹخن گھومنے۔ انہوں نے جتنا جلدی بند کر دیا تھا۔ خوش قسمتی سے ان کے لئے، چیتے بھی اس کا پیچھا کرنے کے لئے بہت نیند تھی۔ نئٹی، ہنی گائیڈ، ان کا انتقام تھا۔ اور گنگائل اس کے سبق سیکھا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/12.jpg" /></p>
-<p>اور اسی طرح، جب گنگائل بچوں کو نئٹی کی کہانی سنتی ہے تو وہ تھوڑی پرندوں کا احترام کرتے ہیں. جب بھی وہ شہد کھاتے ہیں، تو وہ اس بات کا یقین کرتے ہیں کہ ہنی گائیڈ کے کنارے کا سب سے بڑا حصہ چھوڑ دیں!</p>
+<p>اور اسی طرح، جب گنگائل بچوں کو نئٹی کی کہانی سنتی ہے تو وہ تھوڑی پرندوں کا احترام کرتے ہیں۔ جب بھی وہ شہد کھاتے ہیں، تو وہ اس بات کا یقین کرتے ہیں کہ ہنی گائیڈ کے کنارے کا سب سے بڑا حصہ چھوڑ دیں!</p>
 <center>
 <strong>11</strong>
 </center>
