--- a/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے.html
+++ b/stories/ur/0087_مجھے-پڑھنا-اچھا-لگتا-ہے.html
@@ -49,56 +49,56 @@ Letta Machoga<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/02.jpg" /></p>
 
-<p>مجھے پڑھنا اچھا لگتا ہے.</p>
+<p>مجھے پڑھنا اچھا لگتا ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/03.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں.</p>
+<p>میں کون پڑھ سکتا ہوں؟</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/04.jpg" /></p>
 
-<p>میری بہن سو رہی ہے.</p>
+<p>میری بہن سو رہی ہے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/05.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں.</p>
+<p>میں کس کو پڑھ کے سنا سکتا ہوں؟</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/06.jpg" /></p>
 
-<p>میری والدہ اور نانی مصروف ہیں.</p>
+<p>میری والدہ اور نانی مصروف ہیں۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/07.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں.</p>
+<p>میں کس کو پڑھ کے سنا سکتا ہوں؟</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/08.jpg" /></p>
 
-<p>میرے والد اور دادا مصروف ہیں.</p>
+<p>میرے والد اور دادا مصروف ہیں۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0087/09.jpg" /></p>
 
-<p>میں کون پڑھ سکتا ہوں میں خود کو پڑھ سکتا ہوں!</p>
+<p>میں کس کو پڑھ کے سنا سکتا ہوں؟ میں خود کو پڑھ کےسنا سکتا ہوں!</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
