--- a/stories/ur/0095_زاما-عظیم-ہے_slides.html
+++ b/stories/ur/0095_زاما-عظیم-ہے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
-<p>میرا چھوٹا بھائی بہت دیر ہو گیا ہے. میں جلدی جا رہا ہوں، کیونکہ میں بہت اچھا ہوں!</p>
+<p>میرا چھوٹا بھائی بہت دیر ہو گیا ہے۔ میں جلدی جا رہا ہوں، کیونکہ میں بہت اچھا ہوں!</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
-<p>میں وہی ہوں جو سورج میں دیتا ہے.</p>
+<p>میں وہی ہوں جو سورج میں دیتا ہے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
-<p>ما کہتے ہیں &quot;تم میری صبح ستارے ہو.&quot;</p>
+<p>ما کہتے ہیں &quot;تم میری صبح ستارے ہو۔&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
-<p>میں خود کو دھو سکتا ہوں، مجھے کوئی مدد نہیں ہے.</p>
+<p>میں خود کو دھو سکتا ہوں، مجھے کوئی مدد نہیں ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
-<p>میں سرد پانی اور نیلے رنگ کی بدبودار صابن سے نمٹنے کر سکتا ہوں.</p>
+<p>میں سرد پانی اور نیلے رنگ کی بدبودار صابن سے نمٹنے کر سکتا ہوں۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
-<p>ما یاد دلاتا ہے، &quot;دانتوں کو مت بھولنا.&quot; میں جواب دیتا ہوں، &quot;کبھی نہیں، مجھے نہیں!&quot;</p>
+<p>ما یاد دلاتا ہے، &quot;دانتوں کو مت بھولنا۔&quot; میں جواب دیتا ہوں، &quot;کبھی نہیں، مجھے نہیں!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
-<p>دھونے کے بعد، میں دادا اور چاچی سے سلام کرتا ہوں، اور انہیں اچھا دن کی خواہش ہے.</p>
+<p>دھونے کے بعد، میں دادا اور چاچی سے سلام کرتا ہوں، اور انہیں اچھا دن کی خواہش ہے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
-<p>پھر میں نے خود کو کپڑے پہنچایا، &quot;میں ابھی بڑا ہوں،&quot; میں کہتا ہوں.</p>
+<p>پھر میں نے خود کو کپڑے پہنچایا، &quot;میں ابھی بڑا ہوں،&quot; میں کہتا ہوں۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
-<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں.</p>
+<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
-<p>اور مجھے یقین ہے کہ تھوڑا بھائی تمام اسکول کی خبریں جانتا ہے.</p>
+<p>اور مجھے یقین ہے کہ تھوڑا بھائی تمام اسکول کی خبریں جانتا ہے۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
-<p>کلاس میں میں ہر طرح سے پوری طرح کرتا ہوں.</p>
+<p>کلاس میں میں ہر طرح سے پوری طرح کرتا ہوں۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
-<p>میں ہر روز یہ سب اچھی چیزیں کرتا ہوں. لیکن جو چیز مجھے پسند ہے وہ کھیلنے اور کھیلنے کے لئے ہے!</p>
+<p>میں ہر روز یہ سب اچھی چیزیں کرتا ہوں۔ لیکن جو چیز مجھے پسند ہے وہ کھیلنے اور کھیلنے کے لئے ہے!</p>
 <center>
 <strong>12</strong>
 </center>
