--- a/stories/ur/0110_ایک-ٹنی-بیج-وانگاری-ماتھتی-کی-کہانی_slides.html
+++ b/stories/ur/0110_ایک-ٹنی-بیج-وانگاری-ماتھتی-کی-کہانی_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/02.jpg" /></p>
-<p>مشرق افریقہ میں ماؤنٹین کینیا کے ساحل پر ایک گاؤں میں، چھوٹی سی لڑکی نے اپنی ماں کے ساتھ کھیتوں میں کام کیا. اس کا نام وانگاری تھا.</p>
+<p>مشرق افریقہ میں ماؤنٹین کینیا کے ساحل پر ایک گاؤں میں، چھوٹی سی لڑکی نے اپنی ماں کے ساتھ کھیتوں میں کام کیا۔ اس کا نام وانگاری تھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/03.jpg" /></p>
-<p>وانگاری سے باہر محبت کرتا تھا. اس کے خاندان کے کھانے کے باغ میں اس نے مچھر سے مٹی کو توڑا. اس نے چھوٹے بیجوں کو گرم زمین میں دباؤ دیا.</p>
+<p>وانگاری سے باہر محبت کرتا تھا۔ اس کے خاندان کے کھانے کے باغ میں اس نے مچھر سے مٹی کو توڑا۔ اس نے چھوٹے بیجوں کو گرم زمین میں دباؤ دیا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/04.jpg" /></p>
-<p>دن کا اس کا پسندیدہ وقت غروب آفتاب کے بعد تھا. جب یہ پودوں کو دیکھنے کے لئے بہت ناراض ہو گیا، وانگاری جانتا تھا کہ گھر جانے کا وقت تھا. وہ کھیتوں کے ذریعے تنگ راستے پر چلیں گے، وہ چلتے ہی ندیوں کو پار کر دیتے ہیں.</p>
+<p>دن کا اس کا پسندیدہ وقت غروب آفتاب کے بعد تھا۔ جب یہ پودوں کو دیکھنے کے لئے بہت ناراض ہو گیا، وانگاری جانتا تھا کہ گھر جانے کا وقت تھا۔ وہ کھیتوں کے ذریعے تنگ راستے پر چلیں گے، وہ چلتے ہی ندیوں کو پار کر دیتے ہیں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/05.jpg" /></p>
-<p>وانگاری ایک ہوشیار بچہ تھا اور اسکول جانے کا انتظار نہیں کر سکا. لیکن اس کی والدہ اور والد صاحب اسے گھر میں رہنے اور ان کی مدد کرنا چاہتا تھا. جب وہ سات سال کی عمر تھی، اس کے بڑے بھائی نے اپنے والدین کو اسکول جانے جانے کی دعوت دی.</p>
+<p>وانگاری ایک ہوشیار بچہ تھا اور اسکول جانے کا انتظار نہیں کر سکا۔ لیکن اس کی والدہ اور والد صاحب اسے گھر میں رہنے اور ان کی مدد کرنا چاہتا تھا۔ جب وہ سات سال کی عمر تھی، اس کے بڑے بھائی نے اپنے والدین کو اسکول جانے جانے کی دعوت دی۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/06.jpg" /></p>
-<p>وہ سیکھنے کے لئے پسند آیا! وانگاری نے ہر کتاب کے ساتھ پڑھا اور اس سے زیادہ سیکھا. اس نے اسکول میں بہت اچھی طرح سے کیا تھا کہ انہیں ریاستہائے متحدہ امریکہ میں پڑھنے کے لئے مدعو کیا گیا تھا. وانگاری حوصلہ افزائی کی تھی! وہ دنیا کے بارے میں مزید جاننا چاہتا تھا.</p>
+<p>وہ سیکھنے کے لئے پسند آیا! وانگاری نے ہر کتاب کے ساتھ پڑھا اور اس سے زیادہ سیکھا۔ اس نے اسکول میں بہت اچھی طرح سے کیا تھا کہ انہیں ریاستہائے متحدہ امریکہ میں پڑھنے کے لئے مدعو کیا گیا تھا۔ وانگاری حوصلہ افزائی کی تھی! وہ دنیا کے بارے میں مزید جاننا چاہتا تھا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/07.jpg" /></p>
-<p>امریکی یونیورسٹی وانگاری میں بہت سے نئی چیزیں سیکھی تھیں. اس نے پودوں کا مطالعہ کیا اور وہ کس طرح بڑھتے ہیں. اور اس نے اسے یاد کیا کہ وہ کس طرح بڑھتی ہوئی: خوبصورت کینیا جنگلوں میں درختوں کی سایہ میں اپنے بھائیوں کے ساتھ کھیل کھیل رہا ہے.</p>
+<p>امریکی یونیورسٹی وانگاری میں بہت سے نئی چیزیں سیکھی تھیں۔ اس نے پودوں کا مطالعہ کیا اور وہ کس طرح بڑھتے ہیں۔ اور اس نے اسے یاد کیا کہ وہ کس طرح بڑھتی ہوئی: خوبصورت کینیا جنگلوں میں درختوں کی سایہ میں اپنے بھائیوں کے ساتھ کھیل کھیل رہا ہے۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/08.jpg" /></p>
-<p>اس نے مزید سیکھا، اس نے مزید کہا کہ وہ کینیا کے لوگوں سے محبت کرتا تھا. وہ چاہتا تھا کہ وہ خوش اور آزاد ہو. اس نے مزید سیکھا، اس نے مزید افریقی گھر کو یاد کیا.</p>
+<p>اس نے مزید سیکھا، اس نے مزید کہا کہ وہ کینیا کے لوگوں سے محبت کرتا تھا۔ وہ چاہتا تھا کہ وہ خوش اور آزاد ہو۔ اس نے مزید سیکھا، اس نے مزید افریقی گھر کو یاد کیا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/09.jpg" /></p>
-<p>جب اس نے اپنی تعلیم مکمل کرلی تو وہ کینیا واپس آئے. لیکن اس کا ملک بدل گیا. زمین میں بھاری فارم بڑھ کر. خواتین کو کھانا پکانے کے لئے کوئی لکڑی نہیں تھی. لوگ غریب تھے اور بچے بھوکے تھے.</p>
+<p>جب اس نے اپنی تعلیم مکمل کرلی تو وہ کینیا واپس آئے۔ لیکن اس کا ملک بدل گیا۔ زمین میں بھاری فارم بڑھ کر۔ خواتین کو کھانا پکانے کے لئے کوئی لکڑی نہیں تھی۔ لوگ غریب تھے اور بچے بھوکے تھے۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/10.jpg" /></p>
-<p>وانگاری کو کیا معلوم تھا. اس نے خواتین کو اس طرح سکھایا کہ کس طرح درختوں سے درختوں کو پودے لگے خواتین نے درختوں کو فروخت کیا اور اپنے خاندانوں کو دیکھنے کے لئے پیسہ استعمال کیا. خواتین بہت خوش تھے. وانگاری نے انہیں طاقتور اور مضبوط محسوس کرنے میں مدد ملی تھی.</p>
+<p>وانگاری کو کیا معلوم تھا۔ اس نے خواتین کو اس طرح سکھایا کہ کس طرح درختوں سے درختوں کو پودے لگے خواتین نے درختوں کو فروخت کیا اور اپنے خاندانوں کو دیکھنے کے لئے پیسہ استعمال کیا۔ خواتین بہت خوش تھے۔ وانگاری نے انہیں طاقتور اور مضبوط محسوس کرنے میں مدد ملی تھی۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/11.jpg" /></p>
-<p>وقت گزارنے کے بعد، نئے درخت جنگل میں اضافہ ہوا، اور دریاؤں نے پھر سے بہاؤ شروع کردی. افریقہ بھر میں وانگاری کا پیغام پھیل گیا. آج، وگاریاری کے بیجوں سے لاکھوں درخت بڑھ چکے ہیں.</p>
+<p>وقت گزارنے کے بعد، نئے درخت جنگل میں اضافہ ہوا، اور دریاؤں نے پھر سے بہاؤ شروع کردی۔ افریقہ بھر میں وانگاری کا پیغام پھیل گیا۔ آج، وگاریاری کے بیجوں سے لاکھوں درخت بڑھ چکے ہیں۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/12.jpg" /></p>
-<p>وانگاری نے محنت کی تھی. دنیا بھر میں لوگوں نے نوٹس لیا اور اسے ایک مشہور انعام دیا. اسے نوبل امن انعام کہا جاتا ہے، اور وہ اسے حاصل کرنے کے لئے ہمیشہ افریقی عورت تھی.</p>
+<p>وانگاری نے محنت کی تھی۔ دنیا بھر میں لوگوں نے نوٹس لیا اور اسے ایک مشہور انعام دیا۔ اسے نوبل امن انعام کہا جاتا ہے، اور وہ اسے حاصل کرنے کے لئے ہمیشہ افریقی عورت تھی۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0110/13.jpg" /></p>
-<p>2011 ء میں وانگاری کی وفات ہوئی، لیکن ہم ہر ایک وقت سوچتے ہیں جب ہم خوبصورت درخت دیکھتے ہیں.</p>
+<p>2011 ء میں وانگاری کی وفات ہوئی، لیکن ہم ہر ایک وقت سوچتے ہیں جب ہم خوبصورت درخت دیکھتے ہیں۔</p>
 <center>
 <strong>12</strong>
 </center>
