--- a/stories/ur/0129_سست-بھائی.html
+++ b/stories/ur/0129_سست-بھائی.html
@@ -49,51 +49,51 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
 
-<p>میں جاگتا اور آگ بنا دیتا ہوں.</p>
+<p>میں جاگتا اور آگ بنا دیتا ہوں۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
 
-<p>میں کچھ پانی ابلتا ہوں.</p>
+<p>میں کچھ پانی ابلتا ہوں۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
 
-<p>میں آگ کی لکڑی کاٹتا ہوں.</p>
+<p>میں آگ کی لکڑی کاٹتا ہوں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
 
-<p>میں برتن ہلاتا ہوں.</p>
+<p>میں برتن ہلاتا ہوں۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
 
-<p>میں فرش جھاڑو.</p>
+<p>میں فرش جھاڑو۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
 
-<p>میں برتن دھوتا ہوں.</p>
+<p>میں برتن دھوتا ہوں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
 
-<p>میں بہت مشکل کام کیوں کروں …</p>
+<p>میں بہت مشکل کام کیوں کروں ۔۔۔</p>
 
-<p>… جب میرا بھائی کھیلنا مصروف ہے؟</p>
+<p>۔۔۔ جب میرا بھائی کھیلنا مصروف ہے؟</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
