--- a/stories/ur/0129_سست-بھائی_slides.html
+++ b/stories/ur/0129_سست-بھائی_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/02.jpg" /></p>
-<p>میں جاگتا اور آگ بنا دیتا ہوں.</p>
+<p>میں جاگتا اور آگ بنا دیتا ہوں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/03.jpg" /></p>
-<p>میں کچھ پانی ابلتا ہوں.</p>
+<p>میں کچھ پانی ابلتا ہوں۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/04.jpg" /></p>
-<p>میں آگ کی لکڑی کاٹتا ہوں.</p>
+<p>میں آگ کی لکڑی کاٹتا ہوں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/05.jpg" /></p>
-<p>میں برتن ہلاتا ہوں.</p>
+<p>میں برتن ہلاتا ہوں۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/06.jpg" /></p>
-<p>میں فرش جھاڑو.</p>
+<p>میں فرش جھاڑو۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/07.jpg" /></p>
-<p>میں برتن دھوتا ہوں.</p>
+<p>میں برتن دھوتا ہوں۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,8 +151,8 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0129/08.jpg" /></p>
-<p>میں بہت مشکل کام کیوں کروں ...</p>
-<p>... جب میرا بھائی کھیلنا مصروف ہے؟</p>
+<p>میں بہت مشکل کام کیوں کروں ۔۔۔</p>
+<p>۔۔۔ جب میرا بھائی کھیلنا مصروف ہے؟</p>
 <center>
 <strong>7</strong>
 </center>
