--- a/stories/ur/0156_بھوک-مگرمچرچھ_slides.html
+++ b/stories/ur/0156_بھوک-مگرمچرچھ_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
-<p>ایک بار بہت بھوک مگرمچرچھ تھا.</p>
+<p>ایک بار بہت بھوک مگرمچرچھ تھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
-<p>انہوں نے آہستہ آہستہ اور خاموشی کے کھانے کی تلاش کی. اور پھر...</p>
+<p>انہوں نے آہستہ آہستہ اور خاموشی کے کھانے کی تلاش کی۔ اور پھر۔۔۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
-<p>اس کے بعد وہ اب بھوک نہیں ہے، اور وہ خوش ہے.</p>
+<p>اس کے بعد وہ اب بھوک نہیں ہے، اور وہ خوش ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
-<p>جب تک وہ بھوک لگی ہو.</p>
+<p>جب تک وہ بھوک لگی ہو۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <h2 id="بھوک-مگرمچرچھ-1">بھوک مگرمچرچھ</h2>
-<strong>Text:</strong> Christian G.<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
+<strong>Text:</strong> Christian G۔<br> <strong>Illustrations:</strong> Wiehan de Jager<br> <strong>Translation:</strong> Samrina Sana<br> <strong>Language:</strong> Urdu<br>
 <p>
 This story is brought to you by the <a href='https://global-asp.github.io/'>Global African Storybook Project</a>, an effort to translate the stories of the <a href='http://africanstorybook.org/'>African Storybook Project</a> into all the languages of the world.
 <p>
