--- a/stories/ur/0158_ہن-اور-ایگل_slides.html
+++ b/stories/ur/0158_ہن-اور-ایگل_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/02.jpg" /></p>
-<p>ایک بار ایک بار، ہینن اور ایگل دوست تھے. وہ تمام دوسرے پرندوں کے ساتھ امن میں رہتے تھے. ان میں سے کوئی بھی پرواز نہیں کر سکتا.</p>
+<p>ایک بار ایک بار، ہینن اور ایگل دوست تھے۔ وہ تمام دوسرے پرندوں کے ساتھ امن میں رہتے تھے۔ ان میں سے کوئی بھی پرواز نہیں کر سکتا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/03.jpg" /></p>
-<p>ایک دن، زمین میں غریب تھا. ایگل کھانے کی تلاش کے لئے بہت دور چلنا پڑا تھا. وہ بہت تھکے ہوئے تھے. ایگل نے کہا &quot;سفر کرنے کا ایک آسان طریقہ ہونا ضروری ہے!&quot;</p>
+<p>ایک دن، زمین میں غریب تھا۔ ایگل کھانے کی تلاش کے لئے بہت دور چلنا پڑا تھا۔ وہ بہت تھکے ہوئے تھے۔ ایگل نے کہا &quot;سفر کرنے کا ایک آسان طریقہ ہونا ضروری ہے!&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/04.jpg" /></p>
-<p>ایک اچھی رات کی نیند کے بعد، ہین ایک شاندار خیال تھا. اس نے اپنے تمام پرندوں کے دوستوں کے گرنے والے پنکھوں کو جمع کرنا شروع کیا. انہوں نے کہا کہ &quot;ہم ان کے اپنے پنکھوں کے اوپر ایک ساتھ ملیں.&quot; &quot;شاید اس سے سفر کرنا آسان ہوجائے گا.&quot;</p>
+<p>ایک اچھی رات کی نیند کے بعد، ہین ایک شاندار خیال تھا۔ اس نے اپنے تمام پرندوں کے دوستوں کے گرنے والے پنکھوں کو جمع کرنا شروع کیا۔ انہوں نے کہا کہ &quot;ہم ان کے اپنے پنکھوں کے اوپر ایک ساتھ ملیں۔&quot; &quot;شاید اس سے سفر کرنا آسان ہوجائے گا۔&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/05.jpg" /></p>
-<p>ایگل ایک سوئی کے ساتھ گاؤں میں صرف ایک ہی تھا، لہذا وہ سب سے پہلے سلائی کرنے لگے. اس نے خود کو ایک خوبصورت پنکھ بنائے اور ہینوں سے اوپر اڑ گئے. ہن نے سوئی قرضے لے لیا لیکن وہ جلد ہی سلائی سے تھکا ہوا تھا. اس نے انجکشن کو الماری پر چھوڑ دیا اور اپنے بچوں کے لئے کھانا تیار کرنے کے لئے باورچی خانے میں چلا گیا.</p>
+<p>ایگل ایک سوئی کے ساتھ گاؤں میں صرف ایک ہی تھا، لہذا وہ سب سے پہلے سلائی کرنے لگے۔ اس نے خود کو ایک خوبصورت پنکھ بنائے اور ہینوں سے اوپر اڑ گئے۔ ہن نے سوئی قرضے لے لیا لیکن وہ جلد ہی سلائی سے تھکا ہوا تھا۔ اس نے انجکشن کو الماری پر چھوڑ دیا اور اپنے بچوں کے لئے کھانا تیار کرنے کے لئے باورچی خانے میں چلا گیا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/06.jpg" /></p>
-<p>لیکن دوسری پرندوں نے ایگل پرواز سے دیکھا تھا. انہوں نے ہین سے پوچھا کہ انہیں خود کے لئے پنکھ بنانے کی ضرورت ہے. جلد ہی آسمان پر تمام پرندوں کو پرواز کر رہے تھے.</p>
+<p>لیکن دوسری پرندوں نے ایگل پرواز سے دیکھا تھا۔ انہوں نے ہین سے پوچھا کہ انہیں خود کے لئے پنکھ بنانے کی ضرورت ہے۔ جلد ہی آسمان پر تمام پرندوں کو پرواز کر رہے تھے۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/07.jpg" /></p>
-<p>جب آخری پرندوں نے قرضے کی سوئی کی سوئی واپس لی، تو ہین وہاں نہیں تھا. لہذا اس کے بچے نے انجکشن لی اور اس کے ساتھ کھیلنا شروع کر دیا. جب وہ کھیل سے تھکے ہوئے تھے تو انہوں نے ریت میں انجکشن چھوڑ دی.</p>
+<p>جب آخری پرندوں نے قرضے کی سوئی کی سوئی واپس لی، تو ہین وہاں نہیں تھا۔ لہذا اس کے بچے نے انجکشن لی اور اس کے ساتھ کھیلنا شروع کر دیا۔ جب وہ کھیل سے تھکے ہوئے تھے تو انہوں نے ریت میں انجکشن چھوڑ دی۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/08.jpg" /></p>
-<p>اس دوپہر کے بعد، ایگل واپس آیا. اس نے انجکشن سے پوچھا کہ کچھ پنکھوں کو اس کے سفر پر کھڑا کیا گیا تھا. جناب نے الماری کو دیکھا. اس نے باورچی خانے میں دیکھا. اس نے یارڈ میں دیکھا. لیکن انجکشن کہیں نہیں مل سکا.</p>
+<p>اس دوپہر کے بعد، ایگل واپس آیا۔ اس نے انجکشن سے پوچھا کہ کچھ پنکھوں کو اس کے سفر پر کھڑا کیا گیا تھا۔ جناب نے الماری کو دیکھا۔ اس نے باورچی خانے میں دیکھا۔ اس نے یارڈ میں دیکھا۔ لیکن انجکشن کہیں نہیں مل سکا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/09.jpg" /></p>
-<p>&quot;صرف ایک دن مجھے دو،&quot; ہن ایگل سے درخواست کی. &quot;پھر آپ اپنی ونگ کو ٹھیک کر سکتے ہیں اور پھر کھانے کے لئے پرواز کر سکتے ہیں.&quot; ​​&quot;ایک دن ایک دن&quot; ایگل نے کہا. &quot;اگر آپ انجکشن کو تلاش نہیں کرسکتے ہیں، تو آپ کو مجھے اپنی لڑکیوں کو ادائیگی کے طور پر دینا ہوگا.&quot;</p>
+<p>&quot;صرف ایک دن مجھے دو،&quot; ہن ایگل سے درخواست کی۔ &quot;پھر آپ اپنی ونگ کو ٹھیک کر سکتے ہیں اور پھر کھانے کے لئے پرواز کر سکتے ہیں۔&quot; ​​&quot;ایک دن ایک دن&quot; ایگل نے کہا۔ &quot;اگر آپ انجکشن کو تلاش نہیں کرسکتے ہیں، تو آپ کو مجھے اپنی لڑکیوں کو ادائیگی کے طور پر دینا ہوگا۔&quot;</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/10.jpg" /></p>
-<p>جب اگلے دن ایگل آیا تو اس نے ہین کو ریت میں کھینچ کر دیکھا، لیکن کوئی سوئی نہیں. لہذا ایگل بہت تیزی سے اتر گیا اور ایک لڑکیوں کو پکڑا. اس نے اسے دور کیا. ہمیشہ کے بعد، جب بھی ایگل ظاہر ہوتا ہے، وہ انجکشن کے لئے ریت میں گھوڑوں کو چھٹکارا دیتا ہے.</p>
+<p>جب اگلے دن ایگل آیا تو اس نے ہین کو ریت میں کھینچ کر دیکھا، لیکن کوئی سوئی نہیں۔ لہذا ایگل بہت تیزی سے اتر گیا اور ایک لڑکیوں کو پکڑا۔ اس نے اسے دور کیا۔ ہمیشہ کے بعد، جب بھی ایگل ظاہر ہوتا ہے، وہ انجکشن کے لئے ریت میں گھوڑوں کو چھٹکارا دیتا ہے۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0158/11.jpg" /></p>
-<p>جیسا کہ ایگل کی ونگ کی سائے زمین پر گر جاتا ہے، ہن اپنی لڑکیوں کو خبردار کرتا ہے. &quot;ننگے اور خشک زمین سے باہر نکلیں.&quot; اور وہ جواب دیتے ہیں: &quot;ہم بیوقوف نہیں ہیں. ہم چلیں گے.&quot;</p>
+<p>جیسا کہ ایگل کی ونگ کی سائے زمین پر گر جاتا ہے، ہن اپنی لڑکیوں کو خبردار کرتا ہے۔ &quot;ننگے اور خشک زمین سے باہر نکلیں۔&quot; اور وہ جواب دیتے ہیں: &quot;ہم بیوقوف نہیں ہیں۔ ہم چلیں گے۔&quot;</p>
 <center>
 <strong>10</strong>
 </center>
