--- a/stories/ur/0201_گدی-بیٹا_slides.html
+++ b/stories/ur/0201_گدی-بیٹا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
-<p>یہ ایک چھوٹی سی لڑکی تھی جس نے پہلے فاصلے پر پراسرار شکل دیکھا.</p>
+<p>یہ ایک چھوٹی سی لڑکی تھی جس نے پہلے فاصلے پر پراسرار شکل دیکھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
-<p>جیسا کہ شکل قریب کی گئی، اس نے دیکھا کہ یہ ایک حاملہ خاتون تھی.</p>
+<p>جیسا کہ شکل قریب کی گئی، اس نے دیکھا کہ یہ ایک حاملہ خاتون تھی۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
-<p>شرم لیکن بہادر، چھوٹی سی لڑکی نے عورت کو قریب پہنچایا. چھوٹی لڑکی کے لوگوں نے فیصلہ کیا کہ &quot;ہمیں اس کے ساتھ رکھنا چاہیے&quot;. &quot;ہم اسے اور اسکے بچے کو محفوظ رکھیں گے.&quot;</p>
+<p>شرم لیکن بہادر، چھوٹی سی لڑکی نے عورت کو قریب پہنچایا۔ چھوٹی لڑکی کے لوگوں نے فیصلہ کیا کہ &quot;ہمیں اس کے ساتھ رکھنا چاہیے&quot;۔ &quot;ہم اسے اور اسکے بچے کو محفوظ رکھیں گے۔&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
-<p>بچہ جلد ہی اپنے راستے پر تھا. &quot;پش!&quot; &quot;کمبل لے!&quot; &quot;پانی!&quot; &quot;Puuuussssshhh !!!&quot;</p>
+<p>بچہ جلد ہی اپنے راستے پر تھا۔ &quot;پش!&quot; &quot;کمبل لے!&quot; &quot;پانی!&quot; &quot;Puuuussssshhh !!!&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
-<p>لیکن جب انہوں نے بچے کو دیکھا تو سب کو جھٹکا لگایا. &quot;گدھے ؟!&quot;</p>
+<p>لیکن جب انہوں نے بچے کو دیکھا تو سب کو جھٹکا لگایا۔ &quot;گدھے ؟!&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
-<p>سب لوگ بحث کرنے لگے. کچھ نے کہا، &quot;ہم نے کہا کہ ہم ماں اور بچہ کو محفوظ رکھیں گے، اور جو کچھ ہم کریں گے وہ کریں گے&quot;. &quot;لیکن وہ ہمیں بدقسمتی لائیں گے&quot;.</p>
+<p>سب لوگ بحث کرنے لگے۔ کچھ نے کہا، &quot;ہم نے کہا کہ ہم ماں اور بچہ کو محفوظ رکھیں گے، اور جو کچھ ہم کریں گے وہ کریں گے&quot;۔ &quot;لیکن وہ ہمیں بدقسمتی لائیں گے&quot;۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
-<p>اور اسی طرح عورت خود کو اکیلے ہی ملتی تھی. اس نے اس عجیب بچے کے ساتھ کیا کرنا تھا. اس نے حیران کیا کہ خود سے کیا کرنا ہے.</p>
+<p>اور اسی طرح عورت خود کو اکیلے ہی ملتی تھی۔ اس نے اس عجیب بچے کے ساتھ کیا کرنا تھا۔ اس نے حیران کیا کہ خود سے کیا کرنا ہے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
-<p>لیکن آخر میں اسے قبول کرنا پڑا کہ وہ اس کا بچہ تھا اور وہ اپنی ماں تھی.</p>
+<p>لیکن آخر میں اسے قبول کرنا پڑا کہ وہ اس کا بچہ تھا اور وہ اپنی ماں تھی۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
-<p>اب، اگر بچہ اسی طرح رہتا ہے تو، چھوٹا سائز، سب کچھ مختلف ہوسکتا ہے. لیکن گدھے کا بچہ بڑا ہوا اور جب تک کہ اس کی ماں کی پیٹھ پر اس سے زیادہ فٹ نہیں ہوسکتا تھا. اور اس سے کوئی فرق نہیں کہ اس نے کتنے محنت کی، وہ انسان کی طرح سلوک نہیں کر سکے. اس کی ماں اکثر تھکے اور مایوس ہوگئے تھے. کبھی کبھی اس نے اسے جانوروں کے لئے کام کرنے کا کام کیا.</p>
+<p>اب، اگر بچہ اسی طرح رہتا ہے تو، چھوٹا سائز، سب کچھ مختلف ہوسکتا ہے۔ لیکن گدھے کا بچہ بڑا ہوا اور جب تک کہ اس کی ماں کی پیٹھ پر اس سے زیادہ فٹ نہیں ہوسکتا تھا۔ اور اس سے کوئی فرق نہیں کہ اس نے کتنے محنت کی، وہ انسان کی طرح سلوک نہیں کر سکے۔ اس کی ماں اکثر تھکے اور مایوس ہوگئے تھے۔ کبھی کبھی اس نے اسے جانوروں کے لئے کام کرنے کا کام کیا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
-<p>گدھے کے اندر کشیدگی اور غصہ وہ ایسا نہیں کر سکا اور وہ ایسا نہیں کرسکتا. وہ اس طرح نہیں ہوسکتا تھا اور وہ ایسا نہیں کرسکتا تھا. وہ بہت ناراض ہو گیا، ایک دن، اس نے اپنی ماں کو زمین پر قتل کیا.</p>
+<p>گدھے کے اندر کشیدگی اور غصہ وہ ایسا نہیں کر سکا اور وہ ایسا نہیں کرسکتا۔ وہ اس طرح نہیں ہوسکتا تھا اور وہ ایسا نہیں کرسکتا تھا۔ وہ بہت ناراض ہو گیا، ایک دن، اس نے اپنی ماں کو زمین پر قتل کیا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
-<p>گدھے شرم سے بھرا ہوا تھا. انہوں نے اس طرح سے دور اور تیزی سے دور چلنا شروع کر دیا.</p>
+<p>گدھے شرم سے بھرا ہوا تھا۔ انہوں نے اس طرح سے دور اور تیزی سے دور چلنا شروع کر دیا۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
-<p>جب تک وہ چل رہا تھا، اس رات رات تھی، اور گدھے کو کھو دیا. &quot;وہ ہار؟&quot; انہوں نے اندھیرے سے گزر لیا. &quot;ہیے ہاک&quot; وہ واحد تھا خود کو سخت گیند میں ڈال کر وہ گہری اور پریشان نیند میں گر گیا.</p>
+<p>جب تک وہ چل رہا تھا، اس رات رات تھی، اور گدھے کو کھو دیا۔ &quot;وہ ہار؟&quot; انہوں نے اندھیرے سے گزر لیا۔ &quot;ہیے ہاک&quot; وہ واحد تھا خود کو سخت گیند میں ڈال کر وہ گہری اور پریشان نیند میں گر گیا۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
-<p>گدھے نے ایک عجیب بوڑھا آدمی تلاش کرنے کے لئے اٹھایا جس پر اس نے گھوم لیا. اس نے بوڑھے آدمی کی آنکھوں کو دیکھا اور امید کی ایک چمک محسوس کرنے لگے.</p>
+<p>گدھے نے ایک عجیب بوڑھا آدمی تلاش کرنے کے لئے اٹھایا جس پر اس نے گھوم لیا۔ اس نے بوڑھے آدمی کی آنکھوں کو دیکھا اور امید کی ایک چمک محسوس کرنے لگے۔</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
-<p>گدھے پرانے آدمی کے ساتھ رہنا پڑا، جو اسے زندہ رہنے کے بہت سے مختلف طریقے سے سکھایا. گدھے نے سنا اور سیکھا، اور اس نے بوڑھے آدمی کیا. انہوں نے ایک دوسرے کی مدد کی، اور انہوں نے ایک ساتھ چچا.</p>
+<p>گدھے پرانے آدمی کے ساتھ رہنا پڑا، جو اسے زندہ رہنے کے بہت سے مختلف طریقے سے سکھایا۔ گدھے نے سنا اور سیکھا، اور اس نے بوڑھے آدمی کیا۔ انہوں نے ایک دوسرے کی مدد کی، اور انہوں نے ایک ساتھ چچا۔</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
-<p>ایک صبح، بوڑھا آدمی نے گدی سے پوچھا کہ اسے پہاڑ کی چوٹی میں لے جایا جائے.</p>
+<p>ایک صبح، بوڑھا آدمی نے گدی سے پوچھا کہ اسے پہاڑ کی چوٹی میں لے جایا جائے۔</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
-<p>بادلوں کے درمیان اونچی اونچائی میں سو گیا. گدھے نے خواب دیکھا کہ اس کی ماں بیمار تھی اور اس سے دعا کی. اور جب وہ اٹھ گیا ...</p>
+<p>بادلوں کے درمیان اونچی اونچائی میں سو گیا۔ گدھے نے خواب دیکھا کہ اس کی ماں بیمار تھی اور اس سے دعا کی۔ اور جب وہ اٹھ گیا ۔۔۔</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
-<p>... اس کے دوست، بوڑھے آدمی کے ساتھ بادلوں کو غائب کردیا گیا تھا.</p>
+<p>۔۔۔ اس کے دوست، بوڑھے آدمی کے ساتھ بادلوں کو غائب کردیا گیا تھا۔</p>
 <center>
 <strong>17</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
-<p>گدھے آخر میں کیا کرنا جانتا تھا.</p>
+<p>گدھے آخر میں کیا کرنا جانتا تھا۔</p>
 <center>
 <strong>18</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
-<p>گدھے نے اپنی ماں کو اکیلے کھڑے ہوئے اور اپنے کھوئے ہوئے بچے کو ماتم کر لیا. انہوں نے ایک لمبے عرصے سے ایک دوسرے سے خوفزدہ کیا. اور پھر ایک دوسرے کو بہت مشکل بنا دیا.</p>
+<p>گدھے نے اپنی ماں کو اکیلے کھڑے ہوئے اور اپنے کھوئے ہوئے بچے کو ماتم کر لیا۔ انہوں نے ایک لمبے عرصے سے ایک دوسرے سے خوفزدہ کیا۔ اور پھر ایک دوسرے کو بہت مشکل بنا دیا۔</p>
 <center>
 <strong>19</strong>
 </center>
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
-<p>گدی کے بچے اور اس کی والدہ ایک دوسرے کے ساتھ مل کر بڑے پیمانے پر رہتے ہیں. آہستہ آہستہ، ان کے آس پاس، دوسرے خاندانوں کو حل کرنے کے لئے شروع کر دیا ہے.</p>
+<p>گدی کے بچے اور اس کی والدہ ایک دوسرے کے ساتھ مل کر بڑے پیمانے پر رہتے ہیں۔ آہستہ آہستہ، ان کے آس پاس، دوسرے خاندانوں کو حل کرنے کے لئے شروع کر دیا ہے۔</p>
 <center>
 <strong>20</strong>
 </center>
