--- a/stories/ur/0210_ٹنگی-اور-گایوں.html
+++ b/stories/ur/0210_ٹنگی-اور-گایوں.html
@@ -49,77 +49,77 @@ Ingrid Schechter<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
 
-<p>ٹنگی اپنی دادی کے ساتھ رہتا تھا.</p>
+<p>ٹنگی اپنی دادی کے ساتھ رہتا تھا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
 
-<p>وہ گائے اس کے ساتھ دیکھتے تھے.</p>
+<p>وہ گائے اس کے ساتھ دیکھتے تھے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
 
-<p>ایک دن فوجی آئے.</p>
+<p>ایک دن فوجی آئے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
 
-<p>انہوں نے گایوں کو دور کر لیا.</p>
+<p>انہوں نے گایوں کو دور کر لیا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
 
-<p>ٹنگی اور اس کی دادی کو بھاگ گیا اور چھپایا.</p>
+<p>ٹنگی اور اس کی دادی کو بھاگ گیا اور چھپایا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/07.jpg" /></p>
 
-<p>انہوں نے جھاڑی میں رات تک چھپائی.</p>
+<p>انہوں نے جھاڑی میں رات تک چھپائی۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
 
-<p>پھر فوجی واپس آ گئے.</p>
+<p>پھر فوجی واپس آ گئے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
 
-<p>دادیوں کے نیچے دادی چھپایا دادی.</p>
+<p>دادیوں کے نیچے دادی چھپایا دادی۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
 
-<p>سپاہیوں میں سے ایک نے اس کے پاؤں کو اس پر دھیان دیا، لیکن اس نے خاموش رکھا.</p>
+<p>سپاہیوں میں سے ایک نے اس کے پاؤں کو اس پر دھیان دیا، لیکن اس نے خاموش رکھا۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
 
-<p>جب یہ محفوظ تھا تو، تنگی اور اس کی دادی کو باہر آیا.</p>
+<p>جب یہ محفوظ تھا تو، تنگی اور اس کی دادی کو باہر آیا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
 
-<p>انہوں نے بہت خاموشی سے گھر تعمیر کیا.</p>
+<p>انہوں نے بہت خاموشی سے گھر تعمیر کیا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
