--- a/stories/ur/0243_دادی-کے-ساتھ-چھٹی_slides.html
+++ b/stories/ur/0243_دادی-کے-ساتھ-چھٹی_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/02.jpg" /></p>
-<p>اوڈونگو اپیو شہر میں ان کے والد کے ساتھ رہتے تھے. انہوں نے تعطیلات کو آگے بڑھا دیا. نہ صرف اس وجہ سے کہ اسکول بند تھا، لیکن اس وجہ سے وہ اپنی دادی سے ملنے گئے تھے. وہ ایک بڑا جھیل کے قریب ایک ماہی گیری گاؤں میں رہتا تھا.</p>
+<p>اوڈونگو اپیو شہر میں ان کے والد کے ساتھ رہتے تھے۔ انہوں نے تعطیلات کو آگے بڑھا دیا۔ نہ صرف اس وجہ سے کہ اسکول بند تھا، لیکن اس وجہ سے وہ اپنی دادی سے ملنے گئے تھے۔ وہ ایک بڑا جھیل کے قریب ایک ماہی گیری گاؤں میں رہتا تھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/03.jpg" /></p>
-<p>اوڈونگو اور اپیو حوصلہ افزائی کی وجہ سے ان کی دادی دوبارہ دور کرنے کا وقت تھا. رات سے پہلے، انہوں نے اپنے بیگ بھری اور اپنے گاؤں میں طویل سفر کے لئے تیار ہو گئے. وہ پوری رات چھٹی کے بارے میں سوتے اور بات نہیں کر سکے.</p>
+<p>اوڈونگو اور اپیو حوصلہ افزائی کی وجہ سے ان کی دادی دوبارہ دور کرنے کا وقت تھا۔ رات سے پہلے، انہوں نے اپنے بیگ بھری اور اپنے گاؤں میں طویل سفر کے لئے تیار ہو گئے۔ وہ پوری رات چھٹی کے بارے میں سوتے اور بات نہیں کر سکے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/04.jpg" /></p>
-<p>اگلے صبح میں، وہ اپنے والد کی گاڑی میں گاؤں کے پاس گئے. انہوں نے ماضی کے پہاڑوں، جنگلی جانوروں اور چائے کے پودوں کو نکال دیا. انہوں نے گاڑیوں کو شمار کیا اور گانے گانا.</p>
+<p>اگلے صبح میں، وہ اپنے والد کی گاڑی میں گاؤں کے پاس گئے۔ انہوں نے ماضی کے پہاڑوں، جنگلی جانوروں اور چائے کے پودوں کو نکال دیا۔ انہوں نے گاڑیوں کو شمار کیا اور گانے گانا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/05.jpg" /></p>
-<p>تھوڑی دیر بعد، بچوں کو تھکا ہوا اور سو گیا.</p>
+<p>تھوڑی دیر بعد، بچوں کو تھکا ہوا اور سو گیا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/06.jpg" /></p>
-<p>باپ نے اوڈونگو اور اپیو اٹھایا کیونکہ وہ گاؤں میں پہنچ گئے. انہوں نے ان کی دادی ناری-کننیڈا پایا، ایک درخت کے نیچے چٹائی پر پائی. لو میں ناری-کننیڈا کا مطلب یہ ہے کہ &quot;کینیڈا کے لوگوں کی بیٹی&quot;. وہ ایک مضبوط اور خوبصورت عورت تھی.</p>
+<p>باپ نے اوڈونگو اور اپیو اٹھایا کیونکہ وہ گاؤں میں پہنچ گئے۔ انہوں نے ان کی دادی ناری-کننیڈا پایا، ایک درخت کے نیچے چٹائی پر پائی۔ لو میں ناری-کننیڈا کا مطلب یہ ہے کہ &quot;کینیڈا کے لوگوں کی بیٹی&quot;۔ وہ ایک مضبوط اور خوبصورت عورت تھی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/07.jpg" /></p>
-<p>ناری-کنانی نے انہیں گھر میں خیر مقدم کیا اور کمرے کے ارد گرد خوشی کے ساتھ گانا شروع کیا. اس کے دادا نگار اس شہر کو لے کر اس پیشکش کو دینے کے لئے حوصلہ افزائی کرتے تھے. اوڈونگو نے کہا &quot;سب سے پہلے میرا تحفہ کھولیں.&quot; &quot;نہیں، میرا تحفہ سب سے پہلے!&quot; اپیو نے کہا.</p>
+<p>ناری-کنانی نے انہیں گھر میں خیر مقدم کیا اور کمرے کے ارد گرد خوشی کے ساتھ گانا شروع کیا۔ اس کے دادا نگار اس شہر کو لے کر اس پیشکش کو دینے کے لئے حوصلہ افزائی کرتے تھے۔ اوڈونگو نے کہا &quot;سب سے پہلے میرا تحفہ کھولیں۔&quot; &quot;نہیں، میرا تحفہ سب سے پہلے!&quot; اپیو نے کہا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/08.jpg" /></p>
-<p>انہوں نے پیشکش کھولنے کے بعد، ناری -ننیڈا نے اپنے دادا کو روایتی انداز میں برکت دی.</p>
+<p>انہوں نے پیشکش کھولنے کے بعد، ناری -ننیڈا نے اپنے دادا کو روایتی انداز میں برکت دی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/09.jpg" /></p>
-<p>پھر اوڈونگو اور اپیو باہر چلا گیا. انہوں نے تیتلیوں اور پرندوں کا پیچھا کیا.</p>
+<p>پھر اوڈونگو اور اپیو باہر چلا گیا۔ انہوں نے تیتلیوں اور پرندوں کا پیچھا کیا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/10.jpg" /></p>
-<p>انہوں نے درخت چڑھ کر جھیل کے پانی میں پھینک دیا.</p>
+<p>انہوں نے درخت چڑھ کر جھیل کے پانی میں پھینک دیا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/11.jpg" /></p>
-<p>جب یہ اندھیرے میں تھا تو وہ رات کے کھانے کے لئے گھر واپس آئے. کھانے سے پہلے اس سے پہلے وہ سو رہے تھے!</p>
+<p>جب یہ اندھیرے میں تھا تو وہ رات کے کھانے کے لئے گھر واپس آئے۔ کھانے سے پہلے اس سے پہلے وہ سو رہے تھے!</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/12.jpg" /></p>
-<p>اگلے دن، بچوں کے والد نے شہر کو واپس جانے کے بعد انہیں ناری - کننیڈا سے چھوڑ دیا.</p>
+<p>اگلے دن، بچوں کے والد نے شہر کو واپس جانے کے بعد انہیں ناری - کننیڈا سے چھوڑ دیا۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/13.jpg" /></p>
-<p>اوڈونگو اور اپیو نے اپنی دادی کی مدد سے گھریلو کاموں کے ساتھ. انہوں نے پانی اور آگ کی لکڑی لائے. انہوں نے مرغوں سے انڈے کو جمع کیا اور باغ سے گرین اٹھایا.</p>
+<p>اوڈونگو اور اپیو نے اپنی دادی کی مدد سے گھریلو کاموں کے ساتھ۔ انہوں نے پانی اور آگ کی لکڑی لائے۔ انہوں نے مرغوں سے انڈے کو جمع کیا اور باغ سے گرین اٹھایا۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/14.jpg" /></p>
-<p>ناری - کنیڈا نے اپنے پوتے کو سٹو کے ساتھ کھانا کھانے کے لئے نرم ugali بنانے کے لئے سکھایا. اس نے ان کو ظاہر کیا تھا کہ ناریل چاول کو روسٹ مچھلی کے ساتھ کھانا کھلانا ہے.</p>
+<p>ناری - کنیڈا نے اپنے پوتے کو سٹو کے ساتھ کھانا کھانے کے لئے نرم ugali بنانے کے لئے سکھایا۔ اس نے ان کو ظاہر کیا تھا کہ ناریل چاول کو روسٹ مچھلی کے ساتھ کھانا کھلانا ہے۔</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/15.jpg" /></p>
-<p>یک صبح، اوڈونگو نے اپنی دادی کی گاہوں کو اناج لے لیا. وہ پڑوسی کے فارم پر بھاگ گئے. کسان اوڈگو کے ساتھ ناراض تھا. انہوں نے اپنے فصلوں کو کھانے کے لئے گایوں کو رکھنے کے لئے دھمکی دی. اس دن کے بعد، لڑکے نے اس بات کو یقینی بنایا کہ گایوں کو دوبارہ تکلیف نہیں ملی.</p>
+<p>یک صبح، اوڈونگو نے اپنی دادی کی گاہوں کو اناج لے لیا۔ وہ پڑوسی کے فارم پر بھاگ گئے۔ کسان اوڈگو کے ساتھ ناراض تھا۔ انہوں نے اپنے فصلوں کو کھانے کے لئے گایوں کو رکھنے کے لئے دھمکی دی۔ اس دن کے بعد، لڑکے نے اس بات کو یقینی بنایا کہ گایوں کو دوبارہ تکلیف نہیں ملی۔</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/16.jpg" /></p>
-<p>ایک اور دن، بچوں کو ناری-کننیڈا کے ساتھ بازار میں گیا. اس کے پاس سبزیوں، چینیوں اور صابن کی فروخت تھی. اپیو نے گاہکوں کو اشیاء کی قیمتوں کو بتانا پسند کیا. اوڈونگو وہ اشیاء پیک کریں گے جنہوں نے گاہکوں کو خریدا.</p>
+<p>ایک اور دن، بچوں کو ناری-کننیڈا کے ساتھ بازار میں گیا۔ اس کے پاس سبزیوں، چینیوں اور صابن کی فروخت تھی۔ اپیو نے گاہکوں کو اشیاء کی قیمتوں کو بتانا پسند کیا۔ اوڈونگو وہ اشیاء پیک کریں گے جنہوں نے گاہکوں کو خریدا۔</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/17.jpg" /></p>
-<p>دن کے اختتام پر انہوں نے چائے کے ساتھ چائے پیتے تھے. انہوں نے پیسہ کمانے کے لئے دادی کی مدد کی.</p>
+<p>دن کے اختتام پر انہوں نے چائے کے ساتھ چائے پیتے تھے۔ انہوں نے پیسہ کمانے کے لئے دادی کی مدد کی۔</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/18.jpg" /></p>
-<p>لیکن جلد ہی تعطیلات ختم ہوئیں اور بچوں کو شہر واپس جانا پڑا. ناری-کنانا نے اوڈونگو کو ٹوپی اور اپیو کو سویٹر کو دیا. اس نے اپنے سفر کے لئے کھانا تیار کیا.</p>
+<p>لیکن جلد ہی تعطیلات ختم ہوئیں اور بچوں کو شہر واپس جانا پڑا۔ ناری-کنانا نے اوڈونگو کو ٹوپی اور اپیو کو سویٹر کو دیا۔ اس نے اپنے سفر کے لئے کھانا تیار کیا۔</p>
 <center>
 <strong>17</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/19.jpg" /></p>
-<p>جب ان کے والد ان کے پاس پہنچے تو انہیں چھوڑنا نہیں تھا. بچوں نے ان کے ساتھ شہر جانے کے لئے ناری-کننیڈا سے دعا کی. اس نے مسکرایا اور کہا، &quot;میں شہر کے لئے بہت پرانی ہوں. میں آپ کا انتظار کروں گا کہ آپ دوبارہ اپنے گاؤں میں آؤں. &quot;</p>
+<p>جب ان کے والد ان کے پاس پہنچے تو انہیں چھوڑنا نہیں تھا۔ بچوں نے ان کے ساتھ شہر جانے کے لئے ناری-کننیڈا سے دعا کی۔ اس نے مسکرایا اور کہا، &quot;میں شہر کے لئے بہت پرانی ہوں۔ میں آپ کا انتظار کروں گا کہ آپ دوبارہ اپنے گاؤں میں آؤں۔ &quot;</p>
 <center>
 <strong>18</strong>
 </center>
@@ -259,7 +259,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/20.jpg" /></p>
-<p>اوڈونگو اور اپیو دونوں کو مضبوطی سے گلے لگایا اور الوداع کہا.</p>
+<p>اوڈونگو اور اپیو دونوں کو مضبوطی سے گلے لگایا اور الوداع کہا۔</p>
 <center>
 <strong>19</strong>
 </center>
@@ -268,7 +268,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0243/21.jpg" /></p>
-<p>جب اوڈونگو اور اپیو اسکول واپس چلا گیا تو انہوں نے اپنے دوستوں کو گاؤں میں زندگی کے بارے میں بتایا. کچھ بچوں نے محسوس کیا کہ شہر میں زندگی اچھی تھی. دوسروں نے محسوس کیا کہ گاؤں بہتر تھا. لیکن سب سے زیادہ، سب نے اتفاق کیا کہ اوڈگو اور اپیو ایک شاندار دادی تھی!</p>
+<p>جب اوڈونگو اور اپیو اسکول واپس چلا گیا تو انہوں نے اپنے دوستوں کو گاؤں میں زندگی کے بارے میں بتایا۔ کچھ بچوں نے محسوس کیا کہ شہر میں زندگی اچھی تھی۔ دوسروں نے محسوس کیا کہ گاؤں بہتر تھا۔ لیکن سب سے زیادہ، سب نے اتفاق کیا کہ اوڈگو اور اپیو ایک شاندار دادی تھی!</p>
 <center>
 <strong>20</strong>
 </center>
