--- a/stories/ur/0296_ٹام-کیلے-بیچنے-والا.html
+++ b/stories/ur/0296_ٹام-کیلے-بیچنے-والا.html
@@ -49,84 +49,84 @@ Humphreys Odunga<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
 
-<p>ٹام پکانا کیلے کی ایک ٹرے رکھتا ہے.</p>
+<p>ٹام پکانا کیلے کی ایک ٹرے رکھتا ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
 
-<p>ٹام مارکیٹ کیلے کو فروخت کرنے کے لئے جاتا ہے.</p>
+<p>ٹام مارکیٹ کیلے کو فروخت کرنے کے لئے جاتا ہے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
 
-<p>مارکیٹ میں لوگ پھل خرید رہے ہیں.</p>
+<p>مارکیٹ میں لوگ پھل خرید رہے ہیں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
 
-<p>لیکن کوئی بھی ٹام کے کیلے نہیں خرید رہا ہے. وہ خواتین سے پھل خریدنے کی ترجیح دیتے ہیں.</p>
+<p>لیکن کوئی بھی ٹام کے کیلے نہیں خرید رہا ہے۔ وہ خواتین سے پھل خریدنے کی ترجیح دیتے ہیں۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
 
-<p>لوگوں کا کہنا ہے کہ “ہماری کمیونٹی میں، خواتین صرف پھل فروخت کرتی ہیں.” “یہ کس طرح آدمی ہے؟” لوگ پوچھتے ہیں.</p>
+<p>لوگوں کا کہنا ہے کہ “ہماری کمیونٹی میں، خواتین صرف پھل فروخت کرتی ہیں۔” “یہ کس طرح آدمی ہے؟” لوگ پوچھتے ہیں۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
 
-<p>لیکن ٹام ترک نہیں کرتا. وہ کہتے ہیں، “میری کیلے خریدیں! میری میٹھی پکا کیلے خریدیں!”</p>
+<p>لیکن ٹام ترک نہیں کرتا۔ وہ کہتے ہیں، “میری کیلے خریدیں! میری میٹھی پکا کیلے خریدیں!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
 
-<p>ایک خاتون ٹرے سے کیلے کا ایک گروپ اٹھا لیتا ہے. وہ احتیاط سے کیلے کو دیکھتا ہے.</p>
+<p>ایک خاتون ٹرے سے کیلے کا ایک گروپ اٹھا لیتا ہے۔ وہ احتیاط سے کیلے کو دیکھتا ہے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
 
-<p>عورت کیلے خریدتی ہے.</p>
+<p>عورت کیلے خریدتی ہے۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
 
-<p>زیادہ لوگ اسٹال میں آتے ہیں. وہ ٹام کیلے خریدتے ہیں اور انہیں کھاتے ہیں.</p>
+<p>زیادہ لوگ اسٹال میں آتے ہیں۔ وہ ٹام کیلے خریدتے ہیں اور انہیں کھاتے ہیں۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
 
-<p>جلد ہی، ٹرے خالی ہے. ٹام اس رقم کا حساب کرتا ہے جسے وہ کمایا گیا تھا.</p>
+<p>جلد ہی، ٹرے خالی ہے۔ ٹام اس رقم کا حساب کرتا ہے جسے وہ کمایا گیا تھا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
 
-<p>پھر ٹام صابن، چینی، اور روٹی خریدتا ہے. وہ چیزیں اپنی ٹرے میں رکھتی ہیں.</p>
+<p>پھر ٹام صابن، چینی، اور روٹی خریدتا ہے۔ وہ چیزیں اپنی ٹرے میں رکھتی ہیں۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
 
-<p>ٹام اس کے سر پر ٹرے کو توازن دیتا ہے اور گھر جاتا ہے.</p>
+<p>ٹام اس کے سر پر ٹرے کو توازن دیتا ہے اور گھر جاتا ہے۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
