--- a/stories/ur/0315_ساکما-کا-گانا_slides.html
+++ b/stories/ur/0315_ساکما-کا-گانا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/02.jpg" /></p>
-<p>ساکما اپنے والدین اور ان کی چار سالہ بہن کے ساتھ رہتا تھا. وہ ایک امیر آدمی کی زمین پر رہتے تھے. درختوں کی قطار کے اختتام پر ان کی گھاس کی گندگی ہوئی تھی.</p>
+<p>ساکما اپنے والدین اور ان کی چار سالہ بہن کے ساتھ رہتا تھا۔ وہ ایک امیر آدمی کی زمین پر رہتے تھے۔ درختوں کی قطار کے اختتام پر ان کی گھاس کی گندگی ہوئی تھی۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/03.jpg" /></p>
-<p>جب ساکما تین سال کی عمر میں تھے تو وہ بیمار ہوگئے اور اپنی نظر کھو دی. ساکما ایک باصلاحیت لڑکے تھا.</p>
+<p>جب ساکما تین سال کی عمر میں تھے تو وہ بیمار ہوگئے اور اپنی نظر کھو دی۔ ساکما ایک باصلاحیت لڑکے تھا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/04.jpg" /></p>
-<p>ساکما نے بہت سی چیزیں کی ہیں جو دوسرے چھ سال کے بچے نے نہیں کیا. مثال کے طور پر، وہ گاؤں کے پرانے اراکین کے ساتھ بیٹھ کر اہم معاملات پر بات کر سکتا تھا.</p>
+<p>ساکما نے بہت سی چیزیں کی ہیں جو دوسرے چھ سال کے بچے نے نہیں کیا۔ مثال کے طور پر، وہ گاؤں کے پرانے اراکین کے ساتھ بیٹھ کر اہم معاملات پر بات کر سکتا تھا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/05.jpg" /></p>
-<p>ساکما کے والدین امیر آدمی کے گھر میں کام کرتے تھے. وہ صبح صبح صبح گھر چھوڑ کر شام کے آخر میں واپس آ گئے. ساکما اپنی چھوٹی بہن کے ساتھ چھوڑ دیا گیا تھا.</p>
+<p>ساکما کے والدین امیر آدمی کے گھر میں کام کرتے تھے۔ وہ صبح صبح صبح گھر چھوڑ کر شام کے آخر میں واپس آ گئے۔ ساکما اپنی چھوٹی بہن کے ساتھ چھوڑ دیا گیا تھا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/06.jpg" /></p>
-<p>ساکما گانے گانا چاہتا تھا. ایک دن اس کی ماں نے اس سے پوچھا، &quot;تم ساکما سے ان گانےوں کو کہاں سے سیکھتے ہو؟&quot;</p>
+<p>ساکما گانے گانا چاہتا تھا۔ ایک دن اس کی ماں نے اس سے پوچھا، &quot;تم ساکما سے ان گانےوں کو کہاں سے سیکھتے ہو؟&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/07.jpg" /></p>
-<p>ساکما نے جواب دیا، &quot;وہ ابھی آتے ہیں، ماں. میں نے انہیں اپنے سر میں سن لیا اور پھر میں گانا چاہتا ہوں.&quot;</p>
+<p>ساکما نے جواب دیا، &quot;وہ ابھی آتے ہیں، ماں۔ میں نے انہیں اپنے سر میں سن لیا اور پھر میں گانا چاہتا ہوں۔&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/08.jpg" /></p>
-<p>ساکما نے اپنی چھوٹی بہن کے لئے گانا پسند کیا، خاص طور پر، اگر وہ بھوکا محسوس کرتے ہیں. اس کی بہن ان کے پسندیدہ گانا گانا سنتے تھے. وہ آرام دہ اور پرسکون دھاگے پر بھروسہ کرے گی.</p>
+<p>ساکما نے اپنی چھوٹی بہن کے لئے گانا پسند کیا، خاص طور پر، اگر وہ بھوکا محسوس کرتے ہیں۔ اس کی بہن ان کے پسندیدہ گانا گانا سنتے تھے۔ وہ آرام دہ اور پرسکون دھاگے پر بھروسہ کرے گی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/09.jpg" /></p>
-<p>&quot;کیا آپ اس بار پھر گانا کر سکتے ہیں، ساکما،&quot; اس کی بہن نے اسے بھلا دیا تھا. ساکما کو دوبارہ اور اسے دوبارہ گانا ہوگا.</p>
+<p>&quot;کیا آپ اس بار پھر گانا کر سکتے ہیں، ساکما،&quot; اس کی بہن نے اسے بھلا دیا تھا۔ ساکما کو دوبارہ اور اسے دوبارہ گانا ہوگا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/10.jpg" /></p>
-<p>ایک شام جب ان کے والدین گھر واپس آئے تو وہ بہت خاموش تھے. ساکما جانتا تھا کہ کچھ غلط تھا.</p>
+<p>ایک شام جب ان کے والدین گھر واپس آئے تو وہ بہت خاموش تھے۔ ساکما جانتا تھا کہ کچھ غلط تھا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/11.jpg" /></p>
-<p>&quot;کیا غلط ہے، ماں، باپ؟&quot; ساکما نے پوچھا. ساکما نے سیکھا کہ امیر آدمی کا بیٹا غائب تھا. آدمی بہت اداس اور واحد تھا.</p>
+<p>&quot;کیا غلط ہے، ماں، باپ؟&quot; ساکما نے پوچھا۔ ساکما نے سیکھا کہ امیر آدمی کا بیٹا غائب تھا۔ آدمی بہت اداس اور واحد تھا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/12.jpg" /></p>
-<p>&quot;میں اس کے لئے گانا کر سکتا ہوں. ساکما نے اپنے والدین سے کہا کہ وہ دوبارہ خوش ہوں. لیکن اس کے والدین نے اسے مسترد کیا. &quot;وہ بہت امیر ہے. آپ صرف ایک اندھے لڑکے ہیں. کیا آپ کو لگتا ہے کہ آپ کا گانا اس کی مدد کرے گا؟&quot;</p>
+<p>&quot;میں اس کے لئے گانا کر سکتا ہوں۔ ساکما نے اپنے والدین سے کہا کہ وہ دوبارہ خوش ہوں۔ لیکن اس کے والدین نے اسے مسترد کیا۔ &quot;وہ بہت امیر ہے۔ آپ صرف ایک اندھے لڑکے ہیں۔ کیا آپ کو لگتا ہے کہ آپ کا گانا اس کی مدد کرے گا؟&quot;</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/13.jpg" /></p>
-<p>تاہم، ساکما نے ترک نہیں کیا. اس کی چھوٹی بہن نے اس کی مدد کی. انہوں نے کہا، &quot;ساکما کے گانے، نغمے مجھے بھوک لگی ہے جب میں بھوکا ہوں. وہ بھی امیر آدمی کو ضائع کرے گی.&quot;</p>
+<p>تاہم، ساکما نے ترک نہیں کیا۔ اس کی چھوٹی بہن نے اس کی مدد کی۔ انہوں نے کہا، &quot;ساکما کے گانے، نغمے مجھے بھوک لگی ہے جب میں بھوکا ہوں۔ وہ بھی امیر آدمی کو ضائع کرے گی۔&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/14.jpg" /></p>
-<p>مندرجہ ذیل دن، ساکما نے اپنی چھوٹی بہن سے اسے امیر آدمی کے گھر کی قیادت کی.</p>
+<p>مندرجہ ذیل دن، ساکما نے اپنی چھوٹی بہن سے اسے امیر آدمی کے گھر کی قیادت کی۔</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/15.jpg" /></p>
-<p>وہ ایک بڑی کھڑکی سے نیچے کھڑا ہوا اور اپنے پسندیدہ گانا گانا شروع کر دیا. آہستہ آہستہ، امیر آدمی کے سربراہ بڑے ونڈو کے ذریعے ظاہر کرنا شروع کر دیا.</p>
+<p>وہ ایک بڑی کھڑکی سے نیچے کھڑا ہوا اور اپنے پسندیدہ گانا گانا شروع کر دیا۔ آہستہ آہستہ، امیر آدمی کے سربراہ بڑے ونڈو کے ذریعے ظاہر کرنا شروع کر دیا۔</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/16.jpg" /></p>
-<p>کارکنوں نے جو کچھ کر رہے تھے اسے روک دیا. انہوں نے ساکما کا خوبصورت گانا سن لیا. لیکن ایک شخص نے کہا، &quot;مالک مالک کو قابو پانے میں کامیاب نہیں ہو سکا. کیا یہ اندھا لڑکا لگتا ہے کہ وہ اسے کنسول کرے گا؟&quot;</p>
+<p>کارکنوں نے جو کچھ کر رہے تھے اسے روک دیا۔ انہوں نے ساکما کا خوبصورت گانا سن لیا۔ لیکن ایک شخص نے کہا، &quot;مالک مالک کو قابو پانے میں کامیاب نہیں ہو سکا۔ کیا یہ اندھا لڑکا لگتا ہے کہ وہ اسے کنسول کرے گا؟&quot;</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/17.jpg" /></p>
-<p>ساکما نے اپنا گانا گانا شروع کر دیا اور چھوڑ دیا. لیکن امیر آدمی باہر چلا گیا اور کہا، &quot;براہ مہربانی دوبارہ گانا.&quot;</p>
+<p>ساکما نے اپنا گانا گانا شروع کر دیا اور چھوڑ دیا۔ لیکن امیر آدمی باہر چلا گیا اور کہا، &quot;براہ مہربانی دوبارہ گانا۔&quot;</p>
 <center>
 <strong>16</strong>
 </center>
@@ -241,7 +241,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/18.jpg" /></p>
-<p>اس لمحے میں، دو آدمی کسی بیچارے پر لے آئے تھے. انہیں پتہ چلا تھا کہ امیر آدمی کا بیٹا مارا گیا اور سڑک کے کنارے چھوڑ گیا.</p>
+<p>اس لمحے میں، دو آدمی کسی بیچارے پر لے آئے تھے۔ انہیں پتہ چلا تھا کہ امیر آدمی کا بیٹا مارا گیا اور سڑک کے کنارے چھوڑ گیا۔</p>
 <center>
 <strong>17</strong>
 </center>
@@ -250,7 +250,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0315/19.jpg" /></p>
-<p>امیر آدمی اپنے بیٹے کو دوبارہ دیکھنے کے لئے اتنا خوش تھا. انہوں نے اسے تسلیم کرنے کے لئے ساکما کو انعام دیا. اس نے اپنا بیٹا اور ساکما ہسپتال لے لیا لہذا ساکما اپنی نظر واپس لے سکتے تھے.</p>
+<p>امیر آدمی اپنے بیٹے کو دوبارہ دیکھنے کے لئے اتنا خوش تھا۔ انہوں نے اسے تسلیم کرنے کے لئے ساکما کو انعام دیا۔ اس نے اپنا بیٹا اور ساکما ہسپتال لے لیا لہذا ساکما اپنی نظر واپس لے سکتے تھے۔</p>
 <center>
 <strong>18</strong>
 </center>
