--- a/stories/ur/0324_جس-دن-میں-نے-شہر-کے-لئے-گھر-چھوڑ-دیا_slides.html
+++ b/stories/ur/0324_جس-دن-میں-نے-شہر-کے-لئے-گھر-چھوڑ-دیا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
-<p>میرے گاؤں میں چھوٹے بس سٹاپ لوگوں کے ساتھ مصروف تھے اور بسیں بسیں تھیں. زمین پر بھی زیادہ چیزیں لوڈ کرنے کے لئے تھے. ٹاؤن ان ناموں پر چل رہے تھے جہاں ان کی بسیں جا رہی تھیں.</p>
+<p>میرے گاؤں میں چھوٹے بس سٹاپ لوگوں کے ساتھ مصروف تھے اور بسیں بسیں تھیں۔ زمین پر بھی زیادہ چیزیں لوڈ کرنے کے لئے تھے۔ ٹاؤن ان ناموں پر چل رہے تھے جہاں ان کی بسیں جا رہی تھیں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
-<p>&quot;شہر! شہر! مغرب جا رہا ہے! &quot;میں نے ایک آواز پر زور دیا. یہ بس میں پکڑنے کی ضرورت تھی.</p>
+<p>&quot;شہر! شہر! مغرب جا رہا ہے! &quot;میں نے ایک آواز پر زور دیا۔ یہ بس میں پکڑنے کی ضرورت تھی۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
-<p>شہر بس تقریبا مکمل تھا، لیکن زیادہ تر لوگ ابھی بھی آگے بڑھ رہے تھے. کچھ نے اپنے سامان بس کے نیچے پیکا. دوسروں کے اندر اندر ریک پر ڈال دیا.</p>
+<p>شہر بس تقریبا مکمل تھا، لیکن زیادہ تر لوگ ابھی بھی آگے بڑھ رہے تھے۔ کچھ نے اپنے سامان بس کے نیچے پیکا۔ دوسروں کے اندر اندر ریک پر ڈال دیا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
-<p>نئے مسافروں نے اپنے ٹکٹوں کو دھوکہ دیا کیونکہ وہ بھیڑ بس میں بیٹھے کہیں کہیں. طویل عرصے تک نوجوان بچوں کے ساتھ خواتین نے انہیں آرام دہ بنا دیا.</p>
+<p>نئے مسافروں نے اپنے ٹکٹوں کو دھوکہ دیا کیونکہ وہ بھیڑ بس میں بیٹھے کہیں کہیں۔ طویل عرصے تک نوجوان بچوں کے ساتھ خواتین نے انہیں آرام دہ بنا دیا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
-<p>میں ایک ونڈو کے قریب میں نکالا. جو شخص مجھ کے ساتھ بیٹھی ہے وہ سبز پلاسٹک بیگ میں مضبوطی رکھتا ہے. انہوں نے پرانے سینڈل پہنے ہوئے، ایک کوٹ باہر پہنے ہوئے، اور اس نے غصہ دیکھا.</p>
+<p>میں ایک ونڈو کے قریب میں نکالا۔ جو شخص مجھ کے ساتھ بیٹھی ہے وہ سبز پلاسٹک بیگ میں مضبوطی رکھتا ہے۔ انہوں نے پرانے سینڈل پہنے ہوئے، ایک کوٹ باہر پہنے ہوئے، اور اس نے غصہ دیکھا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
-<p>میں نے بس سے باہر دیکھا اور احساس ہوا کہ میں اپنے گاؤں چھوڑ کر جا رہا ہوں، جس جگہ میں بڑا ہوا تھا. میں بڑا شہر جا رہا تھا.</p>
+<p>میں نے بس سے باہر دیکھا اور احساس ہوا کہ میں اپنے گاؤں چھوڑ کر جا رہا ہوں، جس جگہ میں بڑا ہوا تھا۔ میں بڑا شہر جا رہا تھا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
-<p>لوڈنگ مکمل ہوگئی اور تمام مسافروں کو بیٹھا گیا. ہاکرز نے ابھی تک اپنے سامان کو مسافروں کو فروخت کرنے کے لئے بس میں راستہ دھکا دیا. ہر ایک فروخت کے لئے دستیاب کیا ناموں کے نام پر چل رہا تھا. الفاظ نے مجھ سے مذاق لگایا.</p>
+<p>لوڈنگ مکمل ہوگئی اور تمام مسافروں کو بیٹھا گیا۔ ہاکرز نے ابھی تک اپنے سامان کو مسافروں کو فروخت کرنے کے لئے بس میں راستہ دھکا دیا۔ ہر ایک فروخت کے لئے دستیاب کیا ناموں کے نام پر چل رہا تھا۔ الفاظ نے مجھ سے مذاق لگایا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
-<p>چند مسافروں نے مشروبات پائی، دوسروں نے چھوٹے نمکین خریدا اور چکر کرنا شروع کردیا. جنہوں نے میرے جیسے کچھ پیسہ نہیں تھے، ابھی دیکھا تھا.</p>
+<p>چند مسافروں نے مشروبات پائی، دوسروں نے چھوٹے نمکین خریدا اور چکر کرنا شروع کردیا۔ جنہوں نے میرے جیسے کچھ پیسہ نہیں تھے، ابھی دیکھا تھا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
-<p>یہ سرگرمیاں بس کے ہڑتال کی طرف سے مداخلت کی گئی تھیں، یہ ایک نشانی ہے جو ہم چھوڑنے کے لئے تیار تھے. طوفان نے ہاکروں پر زور دیا کہ وہ باہر نکلیں.</p>
+<p>یہ سرگرمیاں بس کے ہڑتال کی طرف سے مداخلت کی گئی تھیں، یہ ایک نشانی ہے جو ہم چھوڑنے کے لئے تیار تھے۔ طوفان نے ہاکروں پر زور دیا کہ وہ باہر نکلیں۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
-<p>ہاکرز ایک دوسرے کو دھکیلنے کے لئے بس سے باہر نکلنے کا راستہ بناتے ہیں. بعض نے مسافروں کو واپس تبدیل کردیا. دوسروں نے مزید اشیاء فروخت کرنے کے آخری منٹ کی کوشش کی.</p>
+<p>ہاکرز ایک دوسرے کو دھکیلنے کے لئے بس سے باہر نکلنے کا راستہ بناتے ہیں۔ بعض نے مسافروں کو واپس تبدیل کردیا۔ دوسروں نے مزید اشیاء فروخت کرنے کے آخری منٹ کی کوشش کی۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
-<p>جیسے ہی بس بس سٹاپ چھوڑ دیا، میں نے ونڈو سے باہر نکالا. میں نے حیرت کیا کہ اگر میں دوبارہ اپنے گاؤں میں واپس آؤں گا.</p>
+<p>جیسے ہی بس بس سٹاپ چھوڑ دیا، میں نے ونڈو سے باہر نکالا۔ میں نے حیرت کیا کہ اگر میں دوبارہ اپنے گاؤں میں واپس آؤں گا۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
-<p>سفر کے سفر کے دوران، بس کے اندر بہت گرم ہوا. میں نے اپنی آنکھوں کو نیند کی امید بند کر دی.</p>
+<p>سفر کے سفر کے دوران، بس کے اندر بہت گرم ہوا۔ میں نے اپنی آنکھوں کو نیند کی امید بند کر دی۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
-<p>لیکن میرا دماغ گھر واپس آگیا. کیا میری ماں محفوظ ہو گی کیا میرا خرگوش کسی بھی پیسہ وصول کرے گا؟ کیا میرا بھائی میرا درخت کے بیجوں کو پانی میں یاد رکھے گا؟</p>
+<p>لیکن میرا دماغ گھر واپس آگیا۔ کیا میری ماں محفوظ ہو گی کیا میرا خرگوش کسی بھی پیسہ وصول کرے گا؟ کیا میرا بھائی میرا درخت کے بیجوں کو پانی میں یاد رکھے گا؟</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
-<p>راستے میں، میں اس جگہ کا نام یاد کرتا ہوں جہاں میرے چاچا بڑے شہر میں رہتے تھے. جب میں سو گیا تو میں ابھی بھی اس سے گونگا رہا تھا.</p>
+<p>راستے میں، میں اس جگہ کا نام یاد کرتا ہوں جہاں میرے چاچا بڑے شہر میں رہتے تھے۔ جب میں سو گیا تو میں ابھی بھی اس سے گونگا رہا تھا۔</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
-<p>نو گھنٹوں کے بعد میں نے زور سے زور دیا کہ میں مسافروں کو اپنے گاؤں میں واپس جا ؤں. میں نے اپنا چھوٹا سا بیگ پکڑ لیا اور بس سے چھلانگ لگایا.</p>
+<p>نو گھنٹوں کے بعد میں نے زور سے زور دیا کہ میں مسافروں کو اپنے گاؤں میں واپس جا ؤں۔ میں نے اپنا چھوٹا سا بیگ پکڑ لیا اور بس سے چھلانگ لگایا۔</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
-<p>واپسی بس تیزی سے بھر رہا تھا. جلد ہی یہ مشرقی راستہ واپس کرے گا. میرے لئے سب سے اہم چیز، میرے چاچا کے گھر کی تلاش شروع کرنا تھا.</p>
+<p>واپسی بس تیزی سے بھر رہا تھا۔ جلد ہی یہ مشرقی راستہ واپس کرے گا۔ میرے لئے سب سے اہم چیز، میرے چاچا کے گھر کی تلاش شروع کرنا تھا۔</p>
 <center>
 <strong>16</strong>
 </center>
