--- a/stories/ur/0337_موم-کے-بچوں_slides.html
+++ b/stories/ur/0337_موم-کے-بچوں_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
-<p>ایک دفعہ ایک بار، ایک خوش خاندان ہے.</p>
+<p>ایک دفعہ ایک بار، ایک خوش خاندان ہے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
-<p>وہ ایک دوسرے کے ساتھ کبھی نہیں لڑا. انہوں نے گھروں اور کھیتوں میں اپنے والدین کی مدد کی.</p>
+<p>وہ ایک دوسرے کے ساتھ کبھی نہیں لڑا۔ انہوں نے گھروں اور کھیتوں میں اپنے والدین کی مدد کی۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
-<p>لیکن انہیں آگ کے قریب جانے کی اجازت نہیں تھی.</p>
+<p>لیکن انہیں آگ کے قریب جانے کی اجازت نہیں تھی۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
-<p>انہیں رات کے دوران ان کے تمام کام کرنا پڑا تھا. کیونکہ وہ موم سے بنا رہے تھے.</p>
+<p>انہیں رات کے دوران ان کے تمام کام کرنا پڑا تھا۔ کیونکہ وہ موم سے بنا رہے تھے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
-<p>لیکن ایک لڑکے نے سورج کی روشنی میں باہر جانے کی کوشش کی.</p>
+<p>لیکن ایک لڑکے نے سورج کی روشنی میں باہر جانے کی کوشش کی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
-<p>ایک دن طویل عرصے سے بہت مضبوط تھا. اس کے بھائی نے انہیں خبردار کیا ...</p>
+<p>ایک دن طویل عرصے سے بہت مضبوط تھا۔ اس کے بھائی نے انہیں خبردار کیا ۔۔۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
-<p>لیکن بہت دیر ہو چکی تھی! وہ گرم سورج میں پگھلا ہوا.</p>
+<p>لیکن بہت دیر ہو چکی تھی! وہ گرم سورج میں پگھلا ہوا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
-<p>موم بچوں کو ان کے بھائی پگھلنے کو دیکھنے کے لئے اتنا اداس تھا.</p>
+<p>موم بچوں کو ان کے بھائی پگھلنے کو دیکھنے کے لئے اتنا اداس تھا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
-<p>لیکن انہوں نے ایک منصوبہ بنایا. انہوں نے پگھل موم کی چربی کو ایک پرندوں میں تبدیل کیا.</p>
+<p>لیکن انہوں نے ایک منصوبہ بنایا۔ انہوں نے پگھل موم کی چربی کو ایک پرندوں میں تبدیل کیا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
-<p>انہوں نے اپنے برے بھائی کو ایک اعلی پہاڑ تک لے لیا.</p>
+<p>انہوں نے اپنے برے بھائی کو ایک اعلی پہاڑ تک لے لیا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
-<p>اور سورج گلاب کے طور پر، وہ صبح کی روشنی میں گانا گزر گیا.</p>
+<p>اور سورج گلاب کے طور پر، وہ صبح کی روشنی میں گانا گزر گیا۔</p>
 <center>
 <strong>11</strong>
 </center>
