--- a/stories/ur/0342_سزا.html
+++ b/stories/ur/0342_سزا.html
@@ -49,28 +49,28 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/02.jpg" /></p>
 
-<p>ایک دن، ماما نے بہت پھل لیا.</p>
+<p>ایک دن، ماما نے بہت پھل لیا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/03.jpg" /></p>
 
-<p>“ہم کب کچھ پھل سکتے ہیں؟” ہم نے پوچھا. ماما کا کہنا ہے کہ “آج ہم پھل کھائیں گے.”</p>
+<p>“ہم کب کچھ پھل سکتے ہیں؟” ہم نے پوچھا۔ ماما کا کہنا ہے کہ “آج ہم پھل کھائیں گے۔”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/04.jpg" /></p>
 
-<p>میرا بھائی رحیم لالچی ہے. وہ سب پھل چکھاتا ہے. وہ بہت کھاتا ہے.</p>
+<p>میرا بھائی رحیم لالچی ہے۔ وہ سب پھل چکھاتا ہے۔ وہ بہت کھاتا ہے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/05.jpg" /></p>
 
-<p>“رحیم نے کیا کیا دیکھو!” میرے چھوٹے بھائی کو. “رحیم شرارتی اور خود مختار ہے،” میں کہتا ہوں.</p>
+<p>“رحیم نے کیا کیا دیکھو!” میرے چھوٹے بھائی کو۔ “رحیم شرارتی اور خود مختار ہے،” میں کہتا ہوں۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
@@ -84,7 +84,7 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/07.jpg" /></p>
 
-<p>ہم رحیم سے ناراض ہیں. لیکن رحیم افسوس نہیں ہے.</p>
+<p>ہم رحیم سے ناراض ہیں۔ لیکن رحیم افسوس نہیں ہے۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
@@ -98,35 +98,35 @@ Adelheid Marie Bwire<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/09.jpg" /></p>
 
-<p>ماں نے خبردار کیا “رحیم، جلد ہی آپ کو معافی مانگیں گے.”</p>
+<p>ماں نے خبردار کیا “رحیم، جلد ہی آپ کو معافی مانگیں گے۔”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/10.jpg" /></p>
 
-<p>رحیم بیمار محسوس کرنے لگتے ہیں.</p>
+<p>رحیم بیمار محسوس کرنے لگتے ہیں۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/11.jpg" /></p>
 
-<p>رحیم کا کہنا ہے کہ “میرا پیٹ بہت گستاخ ہے.”</p>
+<p>رحیم کا کہنا ہے کہ “میرا پیٹ بہت گستاخ ہے۔”</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/12.jpg" /></p>
 
-<p>ماں جانتا تھا کہ یہ ہوگا. پھل رحیم کو سزا دے رہا ہے!</p>
+<p>ماں جانتا تھا کہ یہ ہوگا۔ پھل رحیم کو سزا دے رہا ہے!</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0342/13.jpg" /></p>
 
-<p>بعد میں، رحیم ہمیں افسوس ہے. “میں کبھی کبھی لالچی نہیں کروں گا،” انہوں نے وعدہ کیا. اور ہم سب اس پر یقین رکھتے ہیں.</p>
+<p>بعد میں، رحیم ہمیں افسوس ہے۔ “میں کبھی کبھی لالچی نہیں کروں گا،” انہوں نے وعدہ کیا۔ اور ہم سب اس پر یقین رکھتے ہیں۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
