--- a/stories/es/0027_la-decisión.html
+++ b/stories/es/0027_la-decisión.html
@@ -154,7 +154,7 @@ Ursula Nafula<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p>Todos juntos gritamos a una voz, “Nosotros debemos cambiar nuestras vidas.” Y desde ese día, todos trabajábamos juntos para solucionar nuestros problemas.</p>
+<p>Todos juntos gritamos a una voz, “Nosotros debemos cambiar nuestras vidas.” Y desde ese día, todos trabajamos juntos para solucionar nuestros problemas.</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
