--- a/stories/es/0027_la-decisión_slides.html
+++ b/stories/es/0027_la-decisión_slides.html
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
-<p>Todos juntos gritamos a una voz, &quot;Nosotros debemos cambiar nuestras vidas.&quot; Y desde ese día, todos trabajábamos juntos para solucionar nuestros problemas.</p>
+<p>Todos juntos gritamos a una voz, &quot;Nosotros debemos cambiar nuestras vidas.&quot; Y desde ese día, todos trabajamos juntos para solucionar nuestros problemas.</p>
 <center>
 <strong>16</strong>
 </center>
