--- a/stories/es/0072_la-venganza-del-pájaro-miel.html
+++ b/stories/es/0072_la-venganza-del-pájaro-miel.html
@@ -98,7 +98,7 @@ Zulu folktale<br>Español</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0072/09.jpg" /></p>
 
-<p>Un día, después de varias semanas, Gingile escuchó el canto de Ngede nuevamente. Él recordó lo deliciosa que era esa miel y con entusiasmo siguió el canto del Pájaro Miel. Después de un largo viaje por el borde del bosque, Ngede se detuvo a descansar en un espino de parasol. “Ah,” pensó Gingile. “el panal de abejas debe estar en este árbol.” Entonces, rápidamente hizo su fogata y comenzó a trepar el árbol con la rama quemada entre sus dientes. Ngede se sentó y miró todo atentamente.</p>
+<p>Un día, después de varias semanas, Gingile escuchó el canto de Ngede nuevamente. Él recordó lo deliciosa que era esa miel y con entusiasmo siguió el canto del Pájaro Miel. Después de un largo viaje por el borde del bosque, Ngede se detuvo a descansar bajo una acacia de copa plana. “Ah,” pensó Gingile. “el panal de abejas debe estar en este árbol.” Entonces, rápidamente hizo su fogata y comenzó a trepar el árbol con la rama quemada entre sus dientes. Ngede se sentó y miró todo atentamente.</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
