--- a/stories/tr/0271_i̇ki.html
+++ b/stories/tr/0271_i̇ki.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>دو</title>
+    <title>İki</title>
     <meta charset="UTF-8">
     <style type="text/css">
       body {
@@ -43,13 +43,13 @@
   <body>
 <div class='cover'><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/01.jpg" />
 
-<h1 id="section">دو</h1>
+<h1 id="ki">İki</h1>
 
-Carole Bloch<br>اردو</div><div class="pagebreak">
+Carole Bloch<br>Türkçe</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
 
-<p>دو چھوٹے ہاتھ پکڑنے کے لئے۔</p>
+<p>Tutmak için iki küçük el.</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
@@ -61,7 +61,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
 
-<p>لات مارنادو پاؤں۔</p>
+<p>Vurmak için iki küçük ayak.</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
@@ -73,7 +73,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
 
-<p>دیکھنے کے لئے دو چھوٹی آنکھیں۔</p>
+<p>Görmek için iki küçük göz.</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
@@ -85,7 +85,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
 
-<p>سننے کے لئے دو چھوٹے کان۔</p>
+<p>Duymak için iki küçük kulak.</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
@@ -97,7 +97,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
 
-<p>دو بازو کو گلے لگانا۔</p>
+<p>ve SARILMAK için iki sevgi dolu kol!</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
@@ -107,7 +107,7 @@ Carole Bloch<br>اردو</div><div class="pagebreak">
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Carole Bloch<br /><strong>Illustrations:</strong> Richard MacIntosh<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Carole Bloch<br /><strong>Illustrations:</strong> Richard MacIntosh<br /><strong>Translation:</strong> Nahide Büşra Ertekin<br /><strong>Language:</strong> Turkish</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/two">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
