--- a/stories/ur/0001_ایک-بہت-قد-آدمی_slides.html
+++ b/stories/ur/0001_ایک-بہت-قد-آدمی_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/02.jpg" /></p>
-<p>اس کی کشتی بہت مختصر تھی.</p>
+<p>اس کی کشتی بہت مختصر تھی۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/03.jpg" /></p>
-<p>اس کا دروازہ بہت کم تھا.</p>
+<p>اس کا دروازہ بہت کم تھا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/04.jpg" /></p>
-<p>اس کا بستر بہت مختصر تھا.</p>
+<p>اس کا بستر بہت مختصر تھا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/05.jpg" /></p>
-<p>اس کی سائیکل بہت مختصر تھی.</p>
+<p>اس کی سائیکل بہت مختصر تھی۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/06.jpg" /></p>
-<p>یہ آدمی بہت لمبا تھا.</p>
+<p>یہ آدمی بہت لمبا تھا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/07.jpg" /></p>
-<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا.</p>
+<p>اس نے ایک طویل عرصہ سے ہینڈل بنا دیا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/08.jpg" /></p>
-<p>اس نے بہت اعلی دروازے بنا دیا.</p>
+<p>اس نے بہت اعلی دروازے بنا دیا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/09.jpg" /></p>
-<p>اس نے بہت طویل بستر بنایا.</p>
+<p>اس نے بہت طویل بستر بنایا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/10.jpg" /></p>
-<p>اس نے ایک بہت زیادہ سائیکل خریدا.</p>
+<p>اس نے ایک بہت زیادہ سائیکل خریدا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/11.jpg" /></p>
-<p>وہ ایک بہت اعلی کرسی پر بیٹھا تھا. انہوں نے ایک بہت لمبے کانٹا کے ساتھ کھایا.</p>
+<p>وہ ایک بہت اعلی کرسی پر بیٹھا تھا۔ انہوں نے ایک بہت لمبے کانٹا کے ساتھ کھایا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0001/12.jpg" /></p>
-<p>وہ اپنے گھر چھوڑ کر ایک بڑے جنگل میں رہتا تھا. وہ کئی سال تک رہتا تھا.</p>
+<p>وہ اپنے گھر چھوڑ کر ایک بڑے جنگل میں رہتا تھا۔ وہ کئی سال تک رہتا تھا۔</p>
 <center>
 <strong>11</strong>
 </center>
