--- a/stories/ur/0002_جانوروں-کو-دیکھو_slides.html
+++ b/stories/ur/0002_جانوروں-کو-دیکھو_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/02.jpg" /></p>
-<p>جانوروں کو دیکھو.</p>
+<p>جانوروں کو دیکھو۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/03.jpg" /></p>
-<p>گائے کا کہنا ہے کہ، &quot;مو.&quot;</p>
+<p>گائے کا کہنا ہے کہ، &quot;مو۔&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/04.jpg" /></p>
-<p>بکری کا کہنا ہے کہ &quot;مہ، مہ.&quot;</p>
+<p>بکری کا کہنا ہے کہ &quot;مہ، مہ۔&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/05.jpg" /></p>
-<p>گھوڑے کا کہنا ہے کہ، &quot;قریب.&quot;</p>
+<p>گھوڑے کا کہنا ہے کہ، &quot;قریب۔&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/06.jpg" /></p>
-<p>سور کہتے ہیں، &quot;گریج&quot;.</p>
+<p>سور کہتے ہیں، &quot;گریج&quot;۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/07.jpg" /></p>
-<p>چکن کا کہنا ہے کہ &quot;کلک.&quot;</p>
+<p>چکن کا کہنا ہے کہ &quot;کلک۔&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0002/08.jpg" /></p>
-<p>کتے کا کہنا ہے کہ &quot;Woof.&quot;</p>
+<p>کتے کا کہنا ہے کہ &quot;Woof۔&quot;</p>
 <center>
 <strong>7</strong>
 </center>
