--- a/stories/ur/0003_اسکول-کے-کپڑے.html
+++ b/stories/ur/0003_اسکول-کے-کپڑے.html
@@ -49,56 +49,56 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/02.jpg" /></p>
 
-<p>یہ لباس طویل ہے.</p>
+<p>یہ لباس طویل ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/03.jpg" /></p>
 
-<p>یہ جرسی بڑی ہے.</p>
+<p>یہ جرسی بڑی ہے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/04.jpg" /></p>
 
-<p>یہ بیگ بڑی ہے.</p>
+<p>یہ بیگ بڑی ہے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/05.jpg" /></p>
 
-<p>یہ بیلٹ ہے …</p>
+<p>یہ بیلٹ ہے ۔۔۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/06.jpg" /></p>
 
-<p>یہ ٹوپی چھوٹا ہے.</p>
+<p>یہ ٹوپی چھوٹا ہے۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/07.jpg" /></p>
 
-<p>جرابیں مختصر ہیں.</p>
+<p>جرابیں مختصر ہیں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/08.jpg" /></p>
 
-<p>لیکن یہ جوتے نئے ہیں.</p>
+<p>لیکن یہ جوتے نئے ہیں۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0003/09.jpg" /></p>
 
-<p>… وہ ٹھیک ہیں.</p>
+<p>۔۔۔ وہ ٹھیک ہیں۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
