--- a/stories/ur/0004_بکری،-کتے-اور-گائے.html
+++ b/stories/ur/0004_بکری،-کتے-اور-گائے.html
@@ -49,56 +49,56 @@ Fabian Wakholi<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
 
-<p>بکری، کتا اور گائے عظیم دوست تھے. ایک دن وہ ٹیکسی میں سفر پر گئے تھے.</p>
+<p>بکری، کتا اور گائے عظیم دوست تھے۔ ایک دن وہ ٹیکسی میں سفر پر گئے تھے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
 
-<p>جب وہ اپنے سفر کے خاتمے تک پہنچ گئے تو ڈرائیور نے ان سے پوچھا تھا کہ ان کی کرایہ ادا کرنا ہے. گائے نے اس کا کرایہ ادا کیا.</p>
+<p>جب وہ اپنے سفر کے خاتمے تک پہنچ گئے تو ڈرائیور نے ان سے پوچھا تھا کہ ان کی کرایہ ادا کرنا ہے۔ گائے نے اس کا کرایہ ادا کیا۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
 
-<p>کتا تھوڑا سا اضافی ادا کیا، کیونکہ اس کے پاس صحیح پیسہ نہیں تھا.</p>
+<p>کتا تھوڑا سا اضافی ادا کیا، کیونکہ اس کے پاس صحیح پیسہ نہیں تھا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
 
-<p>گواہ کسی بھی چیز کے بغیر جب بھاگ بھاگ گیا تو ڈرائیور اپنی تبدیلی کو کتے دینا چاہتا تھا.</p>
+<p>گواہ کسی بھی چیز کے بغیر جب بھاگ بھاگ گیا تو ڈرائیور اپنی تبدیلی کو کتے دینا چاہتا تھا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
 
-<p>ڈرائیور بہت ناراض تھا. اس نے اپنی تبدیلی کو ڈاگ کے بغیر چھوڑ دیا.</p>
+<p>ڈرائیور بہت ناراض تھا۔ اس نے اپنی تبدیلی کو ڈاگ کے بغیر چھوڑ دیا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
 
-<p>لہذا، یہاں تک کہ آج بھی، کتے کے اندر اندر پھنسنے اور ڈرائیور کو تلاش کرنے کے لئے ایک گاڑی کی طرف چلتا ہے جو اسے اپنا تبدیل کر دیتا ہے.</p>
+<p>لہذا، یہاں تک کہ آج بھی، کتے کے اندر اندر پھنسنے اور ڈرائیور کو تلاش کرنے کے لئے ایک گاڑی کی طرف چلتا ہے جو اسے اپنا تبدیل کر دیتا ہے۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
 
-<p>بکری گاڑی کی آواز سے چلتا ہے. وہ ڈر رہے ہیں کہ وہ اس کا کرایہ ادا کرنے کے لئے گرفتار نہیں کیا جائے گا.</p>
+<p>بکری گاڑی کی آواز سے چلتا ہے۔ وہ ڈر رہے ہیں کہ وہ اس کا کرایہ ادا کرنے کے لئے گرفتار نہیں کیا جائے گا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
 
-<p>جب گاڑی آ رہا ہے اور گائے کو پریشان نہیں کیا جاتا ہے. گائے اس وقت سڑک کو پار کر لیتا ہے کیونکہ وہ جانتا ہے کہ اس نے اس کی کرایہ پوری کر دی.</p>
+<p>جب گاڑی آ رہا ہے اور گائے کو پریشان نہیں کیا جاتا ہے۔ گائے اس وقت سڑک کو پار کر لیتا ہے کیونکہ وہ جانتا ہے کہ اس نے اس کی کرایہ پوری کر دی۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
