--- a/stories/ur/0004_بکری،-کتے-اور-گائے_slides.html
+++ b/stories/ur/0004_بکری،-کتے-اور-گائے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/02.jpg" /></p>
-<p>بکری، کتا اور گائے عظیم دوست تھے. ایک دن وہ ٹیکسی میں سفر پر گئے تھے.</p>
+<p>بکری، کتا اور گائے عظیم دوست تھے۔ ایک دن وہ ٹیکسی میں سفر پر گئے تھے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/03.jpg" /></p>
-<p>جب وہ اپنے سفر کے خاتمے تک پہنچ گئے تو ڈرائیور نے ان سے پوچھا تھا کہ ان کی کرایہ ادا کرنا ہے. گائے نے اس کا کرایہ ادا کیا.</p>
+<p>جب وہ اپنے سفر کے خاتمے تک پہنچ گئے تو ڈرائیور نے ان سے پوچھا تھا کہ ان کی کرایہ ادا کرنا ہے۔ گائے نے اس کا کرایہ ادا کیا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/04.jpg" /></p>
-<p>کتا تھوڑا سا اضافی ادا کیا، کیونکہ اس کے پاس صحیح پیسہ نہیں تھا.</p>
+<p>کتا تھوڑا سا اضافی ادا کیا، کیونکہ اس کے پاس صحیح پیسہ نہیں تھا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/05.jpg" /></p>
-<p>گواہ کسی بھی چیز کے بغیر جب بھاگ بھاگ گیا تو ڈرائیور اپنی تبدیلی کو کتے دینا چاہتا تھا.</p>
+<p>گواہ کسی بھی چیز کے بغیر جب بھاگ بھاگ گیا تو ڈرائیور اپنی تبدیلی کو کتے دینا چاہتا تھا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/06.jpg" /></p>
-<p>ڈرائیور بہت ناراض تھا. اس نے اپنی تبدیلی کو ڈاگ کے بغیر چھوڑ دیا.</p>
+<p>ڈرائیور بہت ناراض تھا۔ اس نے اپنی تبدیلی کو ڈاگ کے بغیر چھوڑ دیا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/07.jpg" /></p>
-<p>لہذا، یہاں تک کہ آج بھی، کتے کے اندر اندر پھنسنے اور ڈرائیور کو تلاش کرنے کے لئے ایک گاڑی کی طرف چلتا ہے جو اسے اپنا تبدیل کر دیتا ہے.</p>
+<p>لہذا، یہاں تک کہ آج بھی، کتے کے اندر اندر پھنسنے اور ڈرائیور کو تلاش کرنے کے لئے ایک گاڑی کی طرف چلتا ہے جو اسے اپنا تبدیل کر دیتا ہے۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/08.jpg" /></p>
-<p>بکری گاڑی کی آواز سے چلتا ہے. وہ ڈر رہے ہیں کہ وہ اس کا کرایہ ادا کرنے کے لئے گرفتار نہیں کیا جائے گا.</p>
+<p>بکری گاڑی کی آواز سے چلتا ہے۔ وہ ڈر رہے ہیں کہ وہ اس کا کرایہ ادا کرنے کے لئے گرفتار نہیں کیا جائے گا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0004/09.jpg" /></p>
-<p>جب گاڑی آ رہا ہے اور گائے کو پریشان نہیں کیا جاتا ہے. گائے اس وقت سڑک کو پار کر لیتا ہے کیونکہ وہ جانتا ہے کہ اس نے اس کی کرایہ پوری کر دی.</p>
+<p>جب گاڑی آ رہا ہے اور گائے کو پریشان نہیں کیا جاتا ہے۔ گائے اس وقت سڑک کو پار کر لیتا ہے کیونکہ وہ جانتا ہے کہ اس نے اس کی کرایہ پوری کر دی۔</p>
 <center>
 <strong>8</strong>
 </center>
