--- a/stories/ur/0006_انسیسی-اور-حکمت_slides.html
+++ b/stories/ur/0006_انسیسی-اور-حکمت_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/02.jpg" /></p>
-<p>طویل عرصے سے لوگ کچھ نہیں جانتے تھے. انہیں پتہ نہیں تھا کہ کس طرح فصلوں کو پودے لگانے کے لئے، یا کس طرح کپڑے بنانا، یا لوہے کا اوزار کیسے بنانا ہے. آسمان میں خدا نیکی کو دنیا کی تمام حکمت تھی. اس نے اسے مٹی کے برتن میں محفوظ رکھا.</p>
+<p>طویل عرصے سے لوگ کچھ نہیں جانتے تھے۔ انہیں پتہ نہیں تھا کہ کس طرح فصلوں کو پودے لگانے کے لئے، یا کس طرح کپڑے بنانا، یا لوہے کا اوزار کیسے بنانا ہے۔ آسمان میں خدا نیکی کو دنیا کی تمام حکمت تھی۔ اس نے اسے مٹی کے برتن میں محفوظ رکھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/03.jpg" /></p>
-<p>ایک دن، نیکی کا فیصلہ کیا ہے کہ وہ دانتوں کو دانتوں کو انانسی میں دے گا. ہر بار آنسی نے مٹی کے برتن میں دیکھا، اس نے کچھ نیا سیکھا. یہ بہت دلچسپ تھا!</p>
+<p>ایک دن، نیکی کا فیصلہ کیا ہے کہ وہ دانتوں کو دانتوں کو انانسی میں دے گا۔ ہر بار آنسی نے مٹی کے برتن میں دیکھا، اس نے کچھ نیا سیکھا۔ یہ بہت دلچسپ تھا!</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/04.jpg" /></p>
-<p>لالچی انسیسی نے سوچا، &quot;میں لمبے درخت کے سب سے بڑے حصے میں برتن محفوظ رکھوں گا. اس کے بعد میں یہ سب خود کو حاصل کر سکتا ہوں! &quot;اس نے ایک طویل دھاگہ اٹھایا، اس نے مٹی کے برتن کو گھیر لیا، اور اس کے پیٹ میں بندھے ہوئے. اس نے درخت پر چڑھنے لگے. لیکن یہ درخت پر چڑھنا مشکل تھا جب ہر بار گھٹنوں میں گھٹنوں کے ساتھ برتن کھا رہا تھا.</p>
+<p>لالچی انسیسی نے سوچا، &quot;میں لمبے درخت کے سب سے بڑے حصے میں برتن محفوظ رکھوں گا۔ اس کے بعد میں یہ سب خود کو حاصل کر سکتا ہوں! &quot;اس نے ایک طویل دھاگہ اٹھایا، اس نے مٹی کے برتن کو گھیر لیا، اور اس کے پیٹ میں بندھے ہوئے۔ اس نے درخت پر چڑھنے لگے۔ لیکن یہ درخت پر چڑھنا مشکل تھا جب ہر بار گھٹنوں میں گھٹنوں کے ساتھ برتن کھا رہا تھا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/05.jpg" /></p>
-<p>ہر وقت انسیسی کا بیٹا درخت دیکھ کر نیچے کھڑا تھا. انہوں نے کہا، &quot;کیا آپ اس کے بجائے اس کے بجائے برتن بند کر کے چڑھنے کے لئے آسان نہیں ہو گا؟&quot; انسسی نے اپنی مٹھائی سے مٹی مٹی برتن کو باندھنے کی کوشش کی، اور یہ واقعی بہت آسان تھا.</p>
+<p>ہر وقت انسیسی کا بیٹا درخت دیکھ کر نیچے کھڑا تھا۔ انہوں نے کہا، &quot;کیا آپ اس کے بجائے اس کے بجائے برتن بند کر کے چڑھنے کے لئے آسان نہیں ہو گا؟&quot; انسسی نے اپنی مٹھائی سے مٹی مٹی برتن کو باندھنے کی کوشش کی، اور یہ واقعی بہت آسان تھا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/06.jpg" /></p>
-<p>اس وقت وہ درخت کے سب سے اوپر پہنچ گیا. لیکن پھر انہوں نے روکا اور سوچ لیا، &quot;مجھے سب حکمت کے ساتھ ہونا چاہئے، اور میرا بیٹا میرے مقابلے میں چال چلنے والا تھا!&quot; انانسسی اس بارے میں بہت ناراض تھی کہ اس نے مٹی کو برتن سے باہر نکال دیا.</p>
+<p>اس وقت وہ درخت کے سب سے اوپر پہنچ گیا۔ لیکن پھر انہوں نے روکا اور سوچ لیا، &quot;مجھے سب حکمت کے ساتھ ہونا چاہئے، اور میرا بیٹا میرے مقابلے میں چال چلنے والا تھا!&quot; انانسسی اس بارے میں بہت ناراض تھی کہ اس نے مٹی کو برتن سے باہر نکال دیا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0006/07.jpg" /></p>
-<p>یہ زمین پر ٹکڑے ٹکڑے ٹکڑے کر دیا. حکمت ہر کسی کے لئے آزاد تھا. اور یہ کس طرح لوگوں نے فارم سیکھا، کپڑا بنانا، لوہے کے اوزار بنانے اور دیگر تمام چیزیں جو لوگ جانتے ہیں کہ کس طرح کرنا.</p>
+<p>یہ زمین پر ٹکڑے ٹکڑے ٹکڑے کر دیا۔ حکمت ہر کسی کے لئے آزاد تھا۔ اور یہ کس طرح لوگوں نے فارم سیکھا، کپڑا بنانا، لوہے کے اوزار بنانے اور دیگر تمام چیزیں جو لوگ جانتے ہیں کہ کس طرح کرنا۔</p>
 <center>
 <strong>6</strong>
 </center>
