--- a/stories/ur/0008_تم-کیا-کر-رہے-ہو.html
+++ b/stories/ur/0008_تم-کیا-کر-رہے-ہو.html
@@ -49,49 +49,49 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
 
-<p>میں گانا رہا ہوں.</p>
+<p>میں گانا رہا ہوں۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
 
-<p>وہ لہر رہی ہے.</p>
+<p>وہ لہر رہی ہے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
 
-<p>میں چپک رہا ہوں.</p>
+<p>میں چپک رہا ہوں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
 
-<p>وہ ھیںچ رہی ہے.</p>
+<p>وہ ھیںچ رہی ہے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
 
-<p>وہ بلا رہا ہے.</p>
+<p>وہ بلا رہا ہے۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
 
-<p>میں جواب دے رہا ہوں.</p>
+<p>میں جواب دے رہا ہوں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
 
-<p>وہ سن رہا ہے.</p>
+<p>وہ سن رہا ہے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
