--- a/stories/ur/0008_تم-کیا-کر-رہے-ہو_slides.html
+++ b/stories/ur/0008_تم-کیا-کر-رہے-ہو_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/02.jpg" /></p>
-<p>میں گانا رہا ہوں.</p>
+<p>میں گانا رہا ہوں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/03.jpg" /></p>
-<p>وہ لہر رہی ہے.</p>
+<p>وہ لہر رہی ہے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/04.jpg" /></p>
-<p>میں چپک رہا ہوں.</p>
+<p>میں چپک رہا ہوں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/05.jpg" /></p>
-<p>وہ ھیںچ رہی ہے.</p>
+<p>وہ ھیںچ رہی ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/06.jpg" /></p>
-<p>وہ بلا رہا ہے.</p>
+<p>وہ بلا رہا ہے۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/07.jpg" /></p>
-<p>میں جواب دے رہا ہوں.</p>
+<p>میں جواب دے رہا ہوں۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0008/08.jpg" /></p>
-<p>وہ سن رہا ہے.</p>
+<p>وہ سن رہا ہے۔</p>
 <center>
 <strong>7</strong>
 </center>
