--- a/stories/ur/0027_فیصلہ.html
+++ b/stories/ur/0027_فیصلہ.html
@@ -49,112 +49,112 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/02.jpg" /></p>
 
-<p>میرا گاؤں بہت سے مسائل تھا. ہم نے ایک نل سے پانی نکالنے کے لئے ایک لمبی لائن بنائی.</p>
+<p>میرا گاؤں بہت سے مسائل تھا۔ ہم نے ایک نل سے پانی نکالنے کے لئے ایک لمبی لائن بنائی۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/03.jpg" /></p>
 
-<p>ہم نے دوسروں کی طرف سے عطیہ کھانے کی انتظار کی.</p>
+<p>ہم نے دوسروں کی طرف سے عطیہ کھانے کی انتظار کی۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/04.jpg" /></p>
 
-<p>چوروں کی وجہ سے ہم نے اپنے گھروں کو بند کر دیا.</p>
+<p>چوروں کی وجہ سے ہم نے اپنے گھروں کو بند کر دیا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/05.jpg" /></p>
 
-<p>بہت سے بچے اسکول سے گزر گئے ہیں.</p>
+<p>بہت سے بچے اسکول سے گزر گئے ہیں۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/06.jpg" /></p>
 
-<p>نوجوان لڑکیوں نے دیگر گاؤں میں نوکرانی کے طور پر کام کیا.</p>
+<p>نوجوان لڑکیوں نے دیگر گاؤں میں نوکرانی کے طور پر کام کیا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/07.jpg" /></p>
 
-<p>نوجوان لڑکوں نے گاؤں کے ارد گرد گھوم لیا جبکہ دوسروں نے لوگوں کے کھیتوں پر کام کیا.</p>
+<p>نوجوان لڑکوں نے گاؤں کے ارد گرد گھوم لیا جبکہ دوسروں نے لوگوں کے کھیتوں پر کام کیا۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/08.jpg" /></p>
 
-<p>جب ہوا دھماکے ہوئے تو، فضلہ کاغذ درخت اور باڑ پر لٹکا.</p>
+<p>جب ہوا دھماکے ہوئے تو، فضلہ کاغذ درخت اور باڑ پر لٹکا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/09.jpg" /></p>
 
-<p>لوگوں کو ٹوٹے ہوئے گلاس سے کاٹ دیا گیا تھا جو بے غریب طور پر پھینک دیا گیا تھا.</p>
+<p>لوگوں کو ٹوٹے ہوئے گلاس سے کاٹ دیا گیا تھا جو بے غریب طور پر پھینک دیا گیا تھا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/10.jpg" /></p>
 
-<p>پھر ایک دن، خشک خشک اور ہمارے کنٹینر خالی تھے.</p>
+<p>پھر ایک دن، خشک خشک اور ہمارے کنٹینر خالی تھے۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/11.jpg" /></p>
 
-<p>میرے باپ نے گھر سے گھر جانے کے لئے گھر سے گاؤں کے اجلاس میں شرکت کرنے سے کہا.</p>
+<p>میرے باپ نے گھر سے گھر جانے کے لئے گھر سے گاؤں کے اجلاس میں شرکت کرنے سے کہا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/12.jpg" /></p>
 
-<p>لوگ بڑے درخت کے نیچے جمع ہوئے اور سنتے تھے.</p>
+<p>لوگ بڑے درخت کے نیچے جمع ہوئے اور سنتے تھے۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/13.jpg" /></p>
 
-<p>میرے والد کھڑا ہوگئے اور کہا، “ہمیں اپنی مشکلات کو حل کرنے کے لئے مل کر کام کرنے کی ضرورت ہے.”</p>
+<p>میرے والد کھڑا ہوگئے اور کہا، “ہمیں اپنی مشکلات کو حل کرنے کے لئے مل کر کام کرنے کی ضرورت ہے۔”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/14.jpg" /></p>
 
-<p>ایک درخت ٹنکر پر بیٹھ کر آٹھ سالہ جوڈو نے کہا، “میں صفائی کے ساتھ مدد کر سکتا ہوں.”</p>
+<p>ایک درخت ٹنکر پر بیٹھ کر آٹھ سالہ جوڈو نے کہا، “میں صفائی کے ساتھ مدد کر سکتا ہوں۔”</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/15.jpg" /></p>
 
-<p>ایک عورت نے کہا، “خواتین کھانے میں اضافہ کرنے میں شمولیت اختیار کرسکتے ہیں.”</p>
+<p>ایک عورت نے کہا، “خواتین کھانے میں اضافہ کرنے میں شمولیت اختیار کرسکتے ہیں۔”</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/16.jpg" /></p>
 
-<p>ایک اور آدمی کھڑا ہوا اور کہا، “مرد ٹھیک ہو جاتے ہیں.”</p>
+<p>ایک اور آدمی کھڑا ہوا اور کہا، “مرد ٹھیک ہو جاتے ہیں۔”</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0027/17.jpg" /></p>
 
-<p>ہم سب نے ایک آواز سے زور دیا، “ہمیں اپنی زندگی کو تبدیل کرنا ضروری ہے.” اس دن سے ہم نے اپنی مسائل کو حل کرنے کے ساتھ مل کر کام کیا.</p>
+<p>ہم سب نے ایک آواز سے زور دیا، “ہمیں اپنی زندگی کو تبدیل کرنا ضروری ہے۔” اس دن سے ہم نے اپنی مسائل کو حل کرنے کے ساتھ مل کر کام کیا۔</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
