--- a/stories/ur/0030_احساسات.html
+++ b/stories/ur/0030_احساسات.html
@@ -49,35 +49,35 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/02.jpg" /></p>
 
-<p>میرا دل بہت سی چیزیں محسوس کرتی ہے.</p>
+<p>میرا دل بہت سی چیزیں محسوس کرتا ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/03.jpg" /></p>
 
-<p>جب میری نانی شام میں کہانیوں کو بتاتی ہے تو مجھے خوشی محسوس ہوتی ہے.</p>
+<p>جب میری نانی شام میں کہانیوں کو بتاتی ہے تو مجھے خوشی محسوس ہوتی ہے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/04.jpg" /></p>
 
-<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو مجھے خاموش محسوس ہوتا ہے.</p>
+<p>جب میں اپنے دوست کے ساتھ کھیلتا ہوں تو مجھے بیوقوفی محسوس ہوتی ہے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/05.jpg" /></p>
 
-<p>مجھے برا لگتا ہے جب میرے والد کا کہنا ہے کہ اس کی رقم نہیں ہے.</p>
+<p>مجھے برا لگتا ہے جب میرے والد کہتے ھیں ہے کہ ان کے پاس رقم نہیں ہے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0030/06.jpg" /></p>
 
-<p>جب میری ماں نے مجھے گلے لگایا تو میں پیار کرتا ہوں.</p>
+<p>جب میری ماں نے مجھے گلے لگاتی ہے تو مجھے لگتا ہے کہ کوئ مجھ سے پیار کرتا ہوں۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
