--- a/stories/ur/0052_سمب-گیورائر_slides.html
+++ b/stories/ur/0052_سمب-گیورائر_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/02.jpg" /></p>
-<p>جب سمب گیورائر کی ماں مر گئی تو وہ بہت اداس تھے. سمبیگائر کے والد نے اپنی بیٹی کی دیکھ بھال کرنے کے لئے اپنی پوری کوشش کی. آہستہ آہستہ، انہوں نے سمب گیورائر کی ماں کے بغیر، دوبارہ خوش محسوس کرنے کے لئے سیکھا. ہر روز انہوں نے بیٹھ کر دن کے بارے میں بات کی. ہر شام انہوں نے ایک ساتھ رات کا کھانا بنایا. انہوں نے برتن دھوئے کے بعد، سمب گیورائر کے والد نے اسے گھر کے کام کے ساتھ مدد کی.</p>
+<p>جب سمب گیورائر کی ماں مر گئی تو وہ بہت اداس تھے۔ سمبیگائر کے والد نے اپنی بیٹی کی دیکھ بھال کرنے کے لئے اپنی پوری کوشش کی۔ آہستہ آہستہ، انہوں نے سمب گیورائر کی ماں کے بغیر، دوبارہ خوش محسوس کرنے کے لئے سیکھا۔ ہر روز انہوں نے بیٹھ کر دن کے بارے میں بات کی۔ ہر شام انہوں نے ایک ساتھ رات کا کھانا بنایا۔ انہوں نے برتن دھوئے کے بعد، سمب گیورائر کے والد نے اسے گھر کے کام کے ساتھ مدد کی۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/03.jpg" /></p>
-<p>ایک دن، سمبیگائر کے والد معمول کے بعد بعد میں گھر آ گئے. &quot;آپ میرے بچے کہاں ہیں؟&quot; انہوں نے کہا. سمبیگائر اپنے باپ کے پاس گیا. اس نے ابھی تک روک دیا جب وہ نے دیکھا کہ وہ عورت کا ہاتھ رکھتی تھی. &quot;میں آپ کو کسی خاص، میرے بچے سے ملنا چاہتا ہوں، یہ انیتا ہے،&quot; انہوں نے مسکرا کر کہا.</p>
+<p>ایک دن، سمبیگائر کے والد معمول کے بعد بعد میں گھر آ گئے۔ &quot;آپ میرے بچے کہاں ہیں؟&quot; انہوں نے کہا۔ سمبیگائر اپنے باپ کے پاس گیا۔ اس نے ابھی تک روک دیا جب وہ نے دیکھا کہ وہ عورت کا ہاتھ رکھتی تھی۔ &quot;میں آپ کو کسی خاص، میرے بچے سے ملنا چاہتا ہوں، یہ انیتا ہے،&quot; انہوں نے مسکرا کر کہا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/04.jpg" /></p>
-<p>انیتا نے کہا &quot;ہیلو سمبیگائر، آپ کے والد نے مجھے آپ کے بارے میں بہت کچھ بتایا&quot;. لیکن اس نے لڑکی کا ہاتھ مسکرایا یا نہیں لیا. سمبیگائر کے والد خوش اور حوصلہ افزائی کرتے تھے. انہوں نے ان تینوں کے بارے میں بات کی کہ وہ ایک دوسرے کے ساتھ رہتے ہیں، اور ان کی زندگی کتنی اچھی ہوگی. انہوں نے کہا، &quot;میرا بچہ، مجھے امید ہے کہ آپ انیتا آپ کی ماں کو قبول کریں گے.&quot;</p>
+<p>انیتا نے کہا &quot;ہیلو سمبیگائر، آپ کے والد نے مجھے آپ کے بارے میں بہت کچھ بتایا&quot;۔ لیکن اس نے لڑکی کا ہاتھ مسکرایا یا نہیں لیا۔ سمبیگائر کے والد خوش اور حوصلہ افزائی کرتے تھے۔ انہوں نے ان تینوں کے بارے میں بات کی کہ وہ ایک دوسرے کے ساتھ رہتے ہیں، اور ان کی زندگی کتنی اچھی ہوگی۔ انہوں نے کہا، &quot;میرا بچہ، مجھے امید ہے کہ آپ انیتا آپ کی ماں کو قبول کریں گے۔&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/05.jpg" /></p>
-<p>سمبیگائر کی زندگی بدل گئی. وہ اب اپنے والد کے ساتھ صبح کے وقت بیٹھنے کا وقت نہیں رکھتے تھے. انیتا نے اس کے بہت سے گھریلو کاموں کو دے دیا ہے کہ وہ اس کے اسکول کے کام کو شام کے اندر کام کرنے کے لۓ بہت تھکا ہوا تھا. وہ رات کے کھانے کے بعد براہ راست بستر پر گئے. اس کی صرف آرام دہ اور پرسکون رنگا رنگ کمبل تھی اس کی ماں نے اسے دی. سمب گیورائر کے والد نے محسوس نہیں کیا کہ اس کی بیٹی ناخوش تھی.</p>
+<p>سمبیگائر کی زندگی بدل گئی۔ وہ اب اپنے والد کے ساتھ صبح کے وقت بیٹھنے کا وقت نہیں رکھتے تھے۔ انیتا نے اس کے بہت سے گھریلو کاموں کو دے دیا ہے کہ وہ اس کے اسکول کے کام کو شام کے اندر کام کرنے کے لۓ بہت تھکا ہوا تھا۔ وہ رات کے کھانے کے بعد براہ راست بستر پر گئے۔ اس کی صرف آرام دہ اور پرسکون رنگا رنگ کمبل تھی اس کی ماں نے اسے دی۔ سمب گیورائر کے والد نے محسوس نہیں کیا کہ اس کی بیٹی ناخوش تھی۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/06.jpg" /></p>
-<p>چند ماہ کے بعد، سمبیگائر کے والد نے ان سے کہا کہ وہ تھوڑی دیر تک گھر سے دور رہیں گے. انہوں نے کہا کہ &quot;مجھے اپنے کام کا سفر کرنا ہے.&quot; &quot;لیکن میں جانتا ہوں کہ آپ ایک دوسرے کی دیکھ بھال کریں گے.&quot; سمبیگائر کا چہرہ گر گیا، لیکن اس کے والد نے اطلاع نہیں دی. انیتا نے کچھ بھی نہیں کہا. وہ یا تو خوش نہیں تھی.</p>
+<p>چند ماہ کے بعد، سمبیگائر کے والد نے ان سے کہا کہ وہ تھوڑی دیر تک گھر سے دور رہیں گے۔ انہوں نے کہا کہ &quot;مجھے اپنے کام کا سفر کرنا ہے۔&quot; &quot;لیکن میں جانتا ہوں کہ آپ ایک دوسرے کی دیکھ بھال کریں گے۔&quot; سمبیگائر کا چہرہ گر گیا، لیکن اس کے والد نے اطلاع نہیں دی۔ انیتا نے کچھ بھی نہیں کہا۔ وہ یا تو خوش نہیں تھی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/07.jpg" /></p>
-<p>سیمبیگائر کے لئے چیزیں خراب ہوگئیں. اگر اس نے اپنے کاموں کو ختم نہیں کیا، یا اس نے شکایت کی، انیتا نے اسے مارا. اور رات کے کھانے میں، عورت نے سب سے زیادہ کھانا کھایا، سیمبگائر چھوڑ کر صرف چند سکریپوں کے ساتھ. ہر رات سمبیگویر نے اپنی ماں کی کمبل کو ہینڈل کرنے کے لئے خود کو سوچا.</p>
+<p>سیمبیگائر کے لئے چیزیں خراب ہوگئیں۔ اگر اس نے اپنے کاموں کو ختم نہیں کیا، یا اس نے شکایت کی، انیتا نے اسے مارا۔ اور رات کے کھانے میں، عورت نے سب سے زیادہ کھانا کھایا، سیمبگائر چھوڑ کر صرف چند سکریپوں کے ساتھ۔ ہر رات سمبیگویر نے اپنی ماں کی کمبل کو ہینڈل کرنے کے لئے خود کو سوچا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/08.jpg" /></p>
-<p>ایک صبح، سمب گیویر دیر سے بستر سے نکل رہا تھا. &quot;آپ سست لڑکی!&quot; انیتا نے کہا. اس نے بستر سے باہر سیمبیگائر باہر نکالا. قیمتی کمبل کیل میں پکڑا اور دو میں پھنس گیا.</p>
+<p>ایک صبح، سمب گیویر دیر سے بستر سے نکل رہا تھا۔ &quot;آپ سست لڑکی!&quot; انیتا نے کہا۔ اس نے بستر سے باہر سیمبیگائر باہر نکالا۔ قیمتی کمبل کیل میں پکڑا اور دو میں پھنس گیا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/09.jpg" /></p>
-<p>سیمبیگائر بہت پریشان تھا. اس نے گھر سے بھاگنے کا فیصلہ کیا. اس نے اپنی ماں کے کمبل کے ٹکڑوں کو لے لیا، کچھ کھانا پکڑا اور گھر چھوڑ دیا. اس نے سڑک کے پیچھے اس کے والد کو لے لیا.</p>
+<p>سیمبیگائر بہت پریشان تھا۔ اس نے گھر سے بھاگنے کا فیصلہ کیا۔ اس نے اپنی ماں کے کمبل کے ٹکڑوں کو لے لیا، کچھ کھانا پکڑا اور گھر چھوڑ دیا۔ اس نے سڑک کے پیچھے اس کے والد کو لے لیا۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/10.jpg" /></p>
-<p>جب شام آ گیا تو، وہ ایک ندی کے قریب لمبے درخت پر چڑھ کر شاخوں میں خود کے بستر بنا کر. جیسا کہ وہ سو گیا تھا، وہ گانا: &quot;ماما، ماما، ماما، آپ نے مجھے چھوڑ دیا. تم نے مجھے چھوڑ دیا اور واپس کبھی نہیں آیا. والد مجھ سے محبت نہیں کرتا. ماں، آپ کب واپس آ رہے ہو؟ آپ نے مجھے چھوڑ دیا.&quot;</p>
+<p>جب شام آ گیا تو، وہ ایک ندی کے قریب لمبے درخت پر چڑھ کر شاخوں میں خود کے بستر بنا کر۔ جیسا کہ وہ سو گیا تھا، وہ گانا: &quot;ماما، ماما، ماما، آپ نے مجھے چھوڑ دیا۔ تم نے مجھے چھوڑ دیا اور واپس کبھی نہیں آیا۔ والد مجھ سے محبت نہیں کرتا۔ ماں، آپ کب واپس آ رہے ہو؟ آپ نے مجھے چھوڑ دیا۔&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/11.jpg" /></p>
-<p>اگلے صبح، سمب گیویر نے گانا دوبارہ گانا شروع کر دیا. جب خواتین نے اپنے لباس کو ندی میں دھونے کے لئے آتے ہیں، تو وہ غمگین گانا لمبے درخت سے آ رہے تھے. انہوں نے سوچا کہ یہ صرف پتیوں کی پتیوں کو پھیر دیتا ہے، اور ان کے کام کے ساتھ ہوتا ہے. لیکن خواتین میں سے ایک نے گانا کو بہت احتیاط سے سن لیا.</p>
+<p>اگلے صبح، سمب گیویر نے گانا دوبارہ گانا شروع کر دیا۔ جب خواتین نے اپنے لباس کو ندی میں دھونے کے لئے آتے ہیں، تو وہ غمگین گانا لمبے درخت سے آ رہے تھے۔ انہوں نے سوچا کہ یہ صرف پتیوں کی پتیوں کو پھیر دیتا ہے، اور ان کے کام کے ساتھ ہوتا ہے۔ لیکن خواتین میں سے ایک نے گانا کو بہت احتیاط سے سن لیا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/12.jpg" /></p>
-<p>اس عورت نے درخت میں دیکھا. جب اس نے لڑکی اور رنگا رنگ کمبل کے ٹکڑوں کو دیکھا، وہ پکارا، &quot;میرے بھائی کے بچے!&quot; سمب گیویر نے. &quot;دوسری خواتین نے درخت سے چڑھ کر سمبیگائیر کو دھونے اور مدد کی. اس کی چاچی نے چھوٹی لڑکی کو گلے لگایا اور اسے آرام کرنے کی کوشش کی.</p>
+<p>اس عورت نے درخت میں دیکھا۔ جب اس نے لڑکی اور رنگا رنگ کمبل کے ٹکڑوں کو دیکھا، وہ پکارا، &quot;میرے بھائی کے بچے!&quot; سمب گیویر نے۔ &quot;دوسری خواتین نے درخت سے چڑھ کر سمبیگائیر کو دھونے اور مدد کی۔ اس کی چاچی نے چھوٹی لڑکی کو گلے لگایا اور اسے آرام کرنے کی کوشش کی۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/13.jpg" /></p>
-<p>سمبیگائر کی چاچی نے بچے کو اپنا گھر لے لیا. اس نے سیمبیگائر کو گرمی کا کھانا دیا، اور اس کی ماں کی کمبل کے ساتھ بستر میں اسے ٹکرا دیا. اس رات، سمبیگویر نے رویا جیسے وہ سو گیا تھا. لیکن وہ راحت کے آنسو تھے. وہ جانتی تھی کہ اس کی چاچی اس کی دیکھ بھال کرے گی.</p>
+<p>سمبیگائر کی چاچی نے بچے کو اپنا گھر لے لیا۔ اس نے سیمبیگائر کو گرمی کا کھانا دیا، اور اس کی ماں کی کمبل کے ساتھ بستر میں اسے ٹکرا دیا۔ اس رات، سمبیگویر نے رویا جیسے وہ سو گیا تھا۔ لیکن وہ راحت کے آنسو تھے۔ وہ جانتی تھی کہ اس کی چاچی اس کی دیکھ بھال کرے گی۔</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/14.jpg" /></p>
-<p>جب سمبیگائیر کے والد گھر واپس آ گئے تو اس نے اپنا خالی خالی جگہ ملا. &quot;کیا ہوا، انیتا؟&quot; اس نے بھاری دل سے پوچھا. عورت نے وضاحت کی کہ سمبیگائیر بھاگ گیا ہے. انہوں نے کہا کہ &quot;میں چاہتا ہوں کہ وہ مجھ پر احترام کرے.&quot; &quot;لیکن شاید میں بہت سخت تھا.&quot; سمبیگائر کے باپ نے گھر چھوڑ دیا اور ندی کی سمت میں چلا گیا. انہوں نے اپنی بہن کے گاؤں کو جاری رکھنے کے لئے جاری رکھنا چاہا کہ اس نے سیمبیگائر دیکھا ہو.</p>
+<p>جب سمبیگائیر کے والد گھر واپس آ گئے تو اس نے اپنا خالی خالی جگہ ملا۔ &quot;کیا ہوا، انیتا؟&quot; اس نے بھاری دل سے پوچھا۔ عورت نے وضاحت کی کہ سمبیگائیر بھاگ گیا ہے۔ انہوں نے کہا کہ &quot;میں چاہتا ہوں کہ وہ مجھ پر احترام کرے۔&quot; &quot;لیکن شاید میں بہت سخت تھا۔&quot; سمبیگائر کے باپ نے گھر چھوڑ دیا اور ندی کی سمت میں چلا گیا۔ انہوں نے اپنی بہن کے گاؤں کو جاری رکھنے کے لئے جاری رکھنا چاہا کہ اس نے سیمبیگائر دیکھا ہو۔</p>
 <center>
 <strong>13</strong>
 </center>
@@ -214,7 +214,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/15.jpg" /></p>
-<p>جب اس نے اپنے والد کو دور سے دیکھا تو سمب گیویر اپنے کزن کے ساتھ کھیل رہا تھا. وہ خوفزدہ تھا کہ وہ ناراض ہوسکتا ہے، لہذا وہ گھر کے اندر چھپے جانے کے لئے بھاگ گیا. لیکن اس کے والد اس کے پاس گیا اور کہا، &quot;سمبیگائر، آپ نے خود کو ایک بہترین ماں پایا ہے. جو آپ سے پیار کرتا ہے اور آپ کو سمجھتا ہے. مجھے تم پر فخر ہے اور میں تم سے پیار کرتا ہوں. &quot;انہوں نے اس بات سے اتفاق کیا کہ جب تک وہ چاہتا تھا، سمب گیویر اپنی چاچی سے رہیں گے.</p>
+<p>جب اس نے اپنے والد کو دور سے دیکھا تو سمب گیویر اپنے کزن کے ساتھ کھیل رہا تھا۔ وہ خوفزدہ تھا کہ وہ ناراض ہوسکتا ہے، لہذا وہ گھر کے اندر چھپے جانے کے لئے بھاگ گیا۔ لیکن اس کے والد اس کے پاس گیا اور کہا، &quot;سمبیگائر، آپ نے خود کو ایک بہترین ماں پایا ہے۔ جو آپ سے پیار کرتا ہے اور آپ کو سمجھتا ہے۔ مجھے تم پر فخر ہے اور میں تم سے پیار کرتا ہوں۔ &quot;انہوں نے اس بات سے اتفاق کیا کہ جب تک وہ چاہتا تھا، سمب گیویر اپنی چاچی سے رہیں گے۔</p>
 <center>
 <strong>14</strong>
 </center>
@@ -223,7 +223,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/16.jpg" /></p>
-<p>اس کے والد نے ہر روز اس کا دورہ کیا. بالآخر وہ انیتا کے ساتھ آئے. وہ سمبیگائر کے ہاتھ سے نکل گئے. انہوں نے روانہ کیا، &quot;مجھے بہت افسوس ہے، میں غلط تھا.&quot; &quot;کیا آپ مجھے دوبارہ کوشش کریں گے؟&quot; سمبیگویر نے اپنے والد اور ان کے پریشان کن چہرے کو دیکھا. پھر اس نے آہستہ آہستہ آگے بڑھا اور انیتا کے آس پاس اپنے ہاتھوں کو ڈال دیا.</p>
+<p>اس کے والد نے ہر روز اس کا دورہ کیا۔ بالآخر وہ انیتا کے ساتھ آئے۔ وہ سمبیگائر کے ہاتھ سے نکل گئے۔ انہوں نے روانہ کیا، &quot;مجھے بہت افسوس ہے، میں غلط تھا۔&quot; &quot;کیا آپ مجھے دوبارہ کوشش کریں گے؟&quot; سمبیگویر نے اپنے والد اور ان کے پریشان کن چہرے کو دیکھا۔ پھر اس نے آہستہ آہستہ آگے بڑھا اور انیتا کے آس پاس اپنے ہاتھوں کو ڈال دیا۔</p>
 <center>
 <strong>15</strong>
 </center>
@@ -232,7 +232,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0052/17.jpg" /></p>
-<p>اگلے ہفتے انیتا سمب گیویر نے ان کے کزن اور چاچی کے ساتھ کھانا کھانے کے لئے مدعو کیا. کیا دعوت ہے انیتا نے سمب گیورائر کے پسندیدہ کھانے کی اشیاء تیار کی، اور ہر ایک کھایا جب تک وہ مکمل نہ ہو. پھر بچوں نے ادا کیا جبکہ بالغوں نے بات کی. سمبیگائر نے خوش اور بہادر محسوس کیا. اس نے جلد ہی فیصلہ کیا، جلد ہی، وہ اپنے باپ اور اس کے سوتیلی ماں کے ساتھ رہنے کے لئے گھر واپس آ جائیں گے.</p>
+<p>اگلے ہفتے انیتا سمب گیویر نے ان کے کزن اور چاچی کے ساتھ کھانا کھانے کے لئے مدعو کیا۔ کیا دعوت ہے انیتا نے سمب گیورائر کے پسندیدہ کھانے کی اشیاء تیار کی، اور ہر ایک کھایا جب تک وہ مکمل نہ ہو۔ پھر بچوں نے ادا کیا جبکہ بالغوں نے بات کی۔ سمبیگائر نے خوش اور بہادر محسوس کیا۔ اس نے جلد ہی فیصلہ کیا، جلد ہی، وہ اپنے باپ اور اس کے سوتیلی ماں کے ساتھ رہنے کے لئے گھر واپس آ جائیں گے۔</p>
 <center>
 <strong>16</strong>
 </center>
