--- a/stories/ur/0067_کھانا-پکانے.html
+++ b/stories/ur/0067_کھانا-پکانے.html
@@ -49,56 +49,56 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
 
-<p>میں آلو چھیلتا ہوں.</p>
+<p>میں آلو چھیلتا ہوں۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
 
-<p>میں ایک گوبھی کاٹتا ہوں.</p>
+<p>میں ایک گوبھی کاٹتا ہوں۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
 
-<p>میں گاجروں کو پیار کرتا ہوں.</p>
+<p>میں گاجروں کو پیار کرتا ہوں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
 
-<p>میں پھلیاں دھونا.</p>
+<p>میں پھلیاں دھونا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
 
-<p>مکھن گری دار میوے کاٹ.</p>
+<p>مکھن گری دار میوے کاٹ۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
 
-<p>میں پالش کاٹتا ہوں.</p>
+<p>میں پالش کاٹتا ہوں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
 
-<p>میری ماں پیاز چپس کرتی ہے.</p>
+<p>میری ماں پیاز چپس کرتی ہے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
 
-<p>پیاز جب مجھے کٹائے جاتے ہیں تو مجھے روتے ہیں.</p>
+<p>پیاز جب مجھے کٹائے جاتے ہیں تو مجھے روتے ہیں۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
