--- a/stories/ur/0067_کھانا-پکانے_slides.html
+++ b/stories/ur/0067_کھانا-پکانے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/02.jpg" /></p>
-<p>میں آلو چھیلتا ہوں.</p>
+<p>میں آلو چھیلتا ہوں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/03.jpg" /></p>
-<p>میں ایک گوبھی کاٹتا ہوں.</p>
+<p>میں ایک گوبھی کاٹتا ہوں۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/04.jpg" /></p>
-<p>میں گاجروں کو پیار کرتا ہوں.</p>
+<p>میں گاجروں کو پیار کرتا ہوں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/05.jpg" /></p>
-<p>میں پھلیاں دھونا.</p>
+<p>میں پھلیاں دھونا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/06.jpg" /></p>
-<p>مکھن گری دار میوے کاٹ.</p>
+<p>مکھن گری دار میوے کاٹ۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/07.jpg" /></p>
-<p>میں پالش کاٹتا ہوں.</p>
+<p>میں پالش کاٹتا ہوں۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/08.jpg" /></p>
-<p>میری ماں پیاز چپس کرتی ہے.</p>
+<p>میری ماں پیاز چپس کرتی ہے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0067/09.jpg" /></p>
-<p>پیاز جب مجھے کٹائے جاتے ہیں تو مجھے روتے ہیں.</p>
+<p>پیاز جب مجھے کٹائے جاتے ہیں تو مجھے روتے ہیں۔</p>
 <center>
 <strong>8</strong>
 </center>
