--- a/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں.html
+++ b/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں.html
@@ -49,56 +49,56 @@ Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
 
-<p>یہ خلائی ہے. وہ سات سال کی عمر ہے. اس کا نام اس کی زبان کا مطلب ہے، “لبوبیو”.</p>
+<p>یہ خلائی ہے۔ وہ سات سال کی عمر ہے۔ اس کا نام اس کی زبان کا مطلب ہے، “لبوبیو”۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
 
-<p>خلائی اٹھتی ہے اور نارنج کے درخت سے بات کرتی ہے. “براہ کرم نارنج کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ نارنج دے.”</p>
+<p>خلائی اٹھتی ہے اور نارنج کے درخت سے بات کرتی ہے۔ “براہ کرم نارنج کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ نارنج دے۔”</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
 
-<p>خلائی اسکول چلتا ہے. جس طرح وہ گھاس سے بات کرتی ہے. “گھاس کریں، خوشبو بڑھو اور خشک نہ کرو.”</p>
+<p>خلائی اسکول چلتا ہے۔ جس طرح وہ گھاس سے بات کرتی ہے۔ “گھاس کریں، خوشبو بڑھو اور خشک نہ کرو۔”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
 
-<p>خلائی جنگلی پھولوں سے گزرتا ہے. “براہ کرم پھولیں، کھو رکھو تاکہ میں اپنے بالوں میں ڈال سکوں.”</p>
+<p>خلائی جنگلی پھولوں سے گزرتا ہے۔ “براہ کرم پھولیں، کھو رکھو تاکہ میں اپنے بالوں میں ڈال سکوں۔”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
 
-<p>اسکول میں خلائی نے درخت کے وسط میں درخت سے بات کی. “درخت برائے مہربانی، بڑے شاخیں ڈالیں تاکہ ہم آپ کی سایہ کے نیچے پڑھ سکیں.”</p>
+<p>اسکول میں خلائی نے درخت کے وسط میں درخت سے بات کی۔ “درخت برائے مہربانی، بڑے شاخیں ڈالیں تاکہ ہم آپ کی سایہ کے نیچے پڑھ سکیں۔”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
 
-<p>خلائی اپنے اسکول کے ارد گرد ہجوم سے بات کرتے ہیں. “براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو.”</p>
+<p>خلائی اپنے اسکول کے ارد گرد ہجوم سے بات کرتے ہیں۔ “براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
 
-<p>جب خلائی اسکول سے گھر واپس آتی ہے، تو وہ سنتری کا درخت دیکھتا ہے. خلیہ سے پوچھا “کیا آپ کے سنتوں کو پکا ہوا ہے؟”</p>
+<p>جب خلائی اسکول سے گھر واپس آتی ہے، تو وہ سنتری کا درخت دیکھتا ہے۔ خلیہ سے پوچھا “کیا آپ کے سنتوں کو پکا ہوا ہے؟”</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
 
-<p>خلیج اب بھی سبز ہیں”. خلائی کہتے ہیں، “میں آپ کو کل نارنج کا درخت ملوں گا.” “شاید آپ کے پاس میرے لئے پائپ نارنج پڑے گا!”</p>
+<p>خلیج اب بھی سبز ہیں”۔ خلائی کہتے ہیں، “میں آپ کو کل نارنج کا درخت ملوں گا۔” “شاید آپ کے پاس میرے لئے پائپ نارنج پڑے گا!”</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
