--- a/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں_slides.html
+++ b/stories/ur/0089_خلائی-پودوں-سے-بات-کرتے-ہیں_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/02.jpg" /></p>
-<p>یہ خلائی ہے. وہ سات سال کی عمر ہے. اس کا نام اس کی زبان کا مطلب ہے، &quot;لبوبیو&quot;.</p>
+<p>یہ خلائی ہے۔ وہ سات سال کی عمر ہے۔ اس کا نام اس کی زبان کا مطلب ہے، &quot;لبوبیو&quot;۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/03.jpg" /></p>
-<p>خلائی اٹھتی ہے اور نارنج کے درخت سے بات کرتی ہے. &quot;براہ کرم نارنج کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ نارنج دے.&quot;</p>
+<p>خلائی اٹھتی ہے اور نارنج کے درخت سے بات کرتی ہے۔ &quot;براہ کرم نارنج کے درخت، بڑے ہو جاؤ اور ہمیں بہت زیادہ نارنج دے۔&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/04.jpg" /></p>
-<p>خلائی اسکول چلتا ہے. جس طرح وہ گھاس سے بات کرتی ہے. &quot;گھاس کریں، خوشبو بڑھو اور خشک نہ کرو.&quot;</p>
+<p>خلائی اسکول چلتا ہے۔ جس طرح وہ گھاس سے بات کرتی ہے۔ &quot;گھاس کریں، خوشبو بڑھو اور خشک نہ کرو۔&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/05.jpg" /></p>
-<p>خلائی جنگلی پھولوں سے گزرتا ہے. &quot;براہ کرم پھولیں، کھو رکھو تاکہ میں اپنے بالوں میں ڈال سکوں.&quot;</p>
+<p>خلائی جنگلی پھولوں سے گزرتا ہے۔ &quot;براہ کرم پھولیں، کھو رکھو تاکہ میں اپنے بالوں میں ڈال سکوں۔&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/06.jpg" /></p>
-<p>اسکول میں خلائی نے درخت کے وسط میں درخت سے بات کی. &quot;درخت برائے مہربانی، بڑے شاخیں ڈالیں تاکہ ہم آپ کی سایہ کے نیچے پڑھ سکیں.&quot;</p>
+<p>اسکول میں خلائی نے درخت کے وسط میں درخت سے بات کی۔ &quot;درخت برائے مہربانی، بڑے شاخیں ڈالیں تاکہ ہم آپ کی سایہ کے نیچے پڑھ سکیں۔&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/07.jpg" /></p>
-<p>خلائی اپنے اسکول کے ارد گرد ہجوم سے بات کرتے ہیں. &quot;براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو.&quot;</p>
+<p>خلائی اپنے اسکول کے ارد گرد ہجوم سے بات کرتے ہیں۔ &quot;براہ کرم مضبوط ہو جاؤ اور خراب لوگوں کو آنے سے روک دو۔&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/08.jpg" /></p>
-<p>جب خلائی اسکول سے گھر واپس آتی ہے، تو وہ سنتری کا درخت دیکھتا ہے. خلیہ سے پوچھا &quot;کیا آپ کے سنتوں کو پکا ہوا ہے؟&quot;</p>
+<p>جب خلائی اسکول سے گھر واپس آتی ہے، تو وہ سنتری کا درخت دیکھتا ہے۔ خلیہ سے پوچھا &quot;کیا آپ کے سنتوں کو پکا ہوا ہے؟&quot;</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0089/09.jpg" /></p>
-<p>خلیج اب بھی سبز ہیں&quot;. خلائی کہتے ہیں، &quot;میں آپ کو کل نارنج کا درخت ملوں گا.&quot; &quot;شاید آپ کے پاس میرے لئے پائپ نارنج پڑے گا!&quot;</p>
+<p>خلیج اب بھی سبز ہیں&quot;۔ خلائی کہتے ہیں، &quot;میں آپ کو کل نارنج کا درخت ملوں گا۔&quot; &quot;شاید آپ کے پاس میرے لئے پائپ نارنج پڑے گا!&quot;</p>
 <center>
 <strong>8</strong>
 </center>
