--- a/stories/ur/0095_زاما-عظیم-ہے.html
+++ b/stories/ur/0095_زاما-عظیم-ہے.html
@@ -49,84 +49,84 @@ Michael Oguttu<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/02.jpg" /></p>
 
-<p>میرا چھوٹا بھائی بہت دیر ہو گیا ہے. میں جلدی جا رہا ہوں، کیونکہ میں بہت اچھا ہوں!</p>
+<p>میرا چھوٹا بھائی بہت دیر ہو گیا ہے۔ میں جلدی جا رہا ہوں، کیونکہ میں بہت اچھا ہوں!</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/03.jpg" /></p>
 
-<p>میں وہی ہوں جو سورج میں دیتا ہے.</p>
+<p>میں وہی ہوں جو سورج میں دیتا ہے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/04.jpg" /></p>
 
-<p>ما کہتے ہیں “تم میری صبح ستارے ہو.”</p>
+<p>ما کہتے ہیں “تم میری صبح ستارے ہو۔”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/05.jpg" /></p>
 
-<p>میں خود کو دھو سکتا ہوں، مجھے کوئی مدد نہیں ہے.</p>
+<p>میں خود کو دھو سکتا ہوں، مجھے کوئی مدد نہیں ہے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/06.jpg" /></p>
 
-<p>میں سرد پانی اور نیلے رنگ کی بدبودار صابن سے نمٹنے کر سکتا ہوں.</p>
+<p>میں سرد پانی اور نیلے رنگ کی بدبودار صابن سے نمٹنے کر سکتا ہوں۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/07.jpg" /></p>
 
-<p>ما یاد دلاتا ہے، “دانتوں کو مت بھولنا.” میں جواب دیتا ہوں، “کبھی نہیں، مجھے نہیں!”</p>
+<p>ما یاد دلاتا ہے، “دانتوں کو مت بھولنا۔” میں جواب دیتا ہوں، “کبھی نہیں، مجھے نہیں!”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/08.jpg" /></p>
 
-<p>دھونے کے بعد، میں دادا اور چاچی سے سلام کرتا ہوں، اور انہیں اچھا دن کی خواہش ہے.</p>
+<p>دھونے کے بعد، میں دادا اور چاچی سے سلام کرتا ہوں، اور انہیں اچھا دن کی خواہش ہے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/09.jpg" /></p>
 
-<p>پھر میں نے خود کو کپڑے پہنچایا، “میں ابھی بڑا ہوں،” میں کہتا ہوں.</p>
+<p>پھر میں نے خود کو کپڑے پہنچایا، “میں ابھی بڑا ہوں،” میں کہتا ہوں۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/10.jpg" /></p>
 
-<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں.</p>
+<p>میں اپنے بٹن بند کر سکتا ہوں اور اپنے جوتے بکسوا سکتا ہوں۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/11.jpg" /></p>
 
-<p>اور مجھے یقین ہے کہ تھوڑا بھائی تمام اسکول کی خبریں جانتا ہے.</p>
+<p>اور مجھے یقین ہے کہ تھوڑا بھائی تمام اسکول کی خبریں جانتا ہے۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/12.jpg" /></p>
 
-<p>کلاس میں میں ہر طرح سے پوری طرح کرتا ہوں.</p>
+<p>کلاس میں میں ہر طرح سے پوری طرح کرتا ہوں۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0095/13.jpg" /></p>
 
-<p>میں ہر روز یہ سب اچھی چیزیں کرتا ہوں. لیکن جو چیز مجھے پسند ہے وہ کھیلنے اور کھیلنے کے لئے ہے!</p>
+<p>میں ہر روز یہ سب اچھی چیزیں کرتا ہوں۔ لیکن جو چیز مجھے پسند ہے وہ کھیلنے اور کھیلنے کے لئے ہے!</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
