--- a/stories/ur/0111_کیوں-ہپپو-کوئی-بال-نہیں-ہے.html
+++ b/stories/ur/0111_کیوں-ہپپو-کوئی-بال-نہیں-ہے.html
@@ -49,56 +49,56 @@ Basilio Gimo, David Ker<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
 
-<p>ایک روز، خرگوش دریا کے کنارے سے چل رہا تھا.</p>
+<p>ایک روز، خرگوش دریا کے کنارے سے چل رہا تھا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
 
-<p>Hippo بھی وہاں تھا، ایک ٹول کے لئے جانے اور کچھ اچھی سبز گھاس کھانے.</p>
+<p>Hippo بھی وہاں تھا، ایک ٹول کے لئے جانے اور کچھ اچھی سبز گھاس کھانے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
 
-<p>Hippo نہیں دیکھا کہ خرگوش وہاں تھا اور اس نے اچانک خرگوش کے پاؤں پر قدم رکھا. خرگوش نے Hippo، “آپ Hippo میں چللا شروع کر دیا! کیا تم نہیں دیکھ سکتے ہو کہ آپ میرے پاؤں پر چل رہے ہو؟”</p>
+<p>Hippo نہیں دیکھا کہ خرگوش وہاں تھا اور اس نے اچانک خرگوش کے پاؤں پر قدم رکھا۔ خرگوش نے Hippo، “آپ Hippo میں چللا شروع کر دیا! کیا تم نہیں دیکھ سکتے ہو کہ آپ میرے پاؤں پر چل رہے ہو؟”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
 
-<p>ہپو نے خرگوش سے معذرت کی، “مجھے معافی ہے. میں نے تمہیں نہیں دیکھا. مجھے معاف کر دو!” لیکن خرگوش نہیں سنتے اور انہوں نے ہپو کے بارے میں بات کی، “تم نے اس مقصد پر کیا! کسی دن، آپ دیکھیں گے! آپ ادا کرنے جا رہے ہیں!”</p>
+<p>ہپو نے خرگوش سے معذرت کی، “مجھے معافی ہے۔ میں نے تمہیں نہیں دیکھا۔ مجھے معاف کر دو!” لیکن خرگوش نہیں سنتے اور انہوں نے ہپو کے بارے میں بات کی، “تم نے اس مقصد پر کیا! کسی دن، آپ دیکھیں گے! آپ ادا کرنے جا رہے ہیں!”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
 
-<p>خرگوش آگ تلاش کرنے کے لئے گئے اور کہا، “جاؤ، ہپو کو جلا دو جب وہ گھاس کھا کر پانی سے باہر نکل آئے. اس نے مجھ پر قدم رکھا.” آگ نے جواب دیا، “کوئی مسئلہ نہیں، خرگوش، میرے دوست. میں وہی کروں گا جو تم پوچھتے ہو.”</p>
+<p>خرگوش آگ تلاش کرنے کے لئے گئے اور کہا، “جاؤ، ہپو کو جلا دو جب وہ گھاس کھا کر پانی سے باہر نکل آئے۔ اس نے مجھ پر قدم رکھا۔” آگ نے جواب دیا، “کوئی مسئلہ نہیں، خرگوش، میرے دوست۔ میں وہی کروں گا جو تم پوچھتے ہو۔”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
 
-<p>بعد میں، ہپو دریا سے دور گھاس کھا رہا تھا جب “کون!” آگ میں آگ لگے. آگوں کو ہپو کے بال کو جلانے لگے.</p>
+<p>بعد میں، ہپو دریا سے دور گھاس کھا رہا تھا جب “کون!” آگ میں آگ لگے۔ آگوں کو ہپو کے بال کو جلانے لگے۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
 
-<p>ہپو نے پانی کے لئے رونے اور بھاگنے لگے. اس کے تمام بال آگ کی طرف سے جلا دیا گیا تھا. Hippo رو رہی تھی، “میرے بال آگ میں آگئے ہیں! میرے بال سب چلے جاتے ہیں! میرے خوبصورت بال!”</p>
+<p>ہپو نے پانی کے لئے رونے اور بھاگنے لگے۔ اس کے تمام بال آگ کی طرف سے جلا دیا گیا تھا۔ Hippo رو رہی تھی، “میرے بال آگ میں آگئے ہیں! میرے بال سب چلے جاتے ہیں! میرے خوبصورت بال!”</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
 
-<p>خرگوش خوش تھا کہ ہپو کے بالوں کو جلا دیا گیا تھا. اور اس دن، آگ کے خوف کے لئے، ہپو کبھی پانی سے دور نہیں جاتا.</p>
+<p>خرگوش خوش تھا کہ ہپو کے بالوں کو جلا دیا گیا تھا۔ اور اس دن، آگ کے خوف کے لئے، ہپو کبھی پانی سے دور نہیں جاتا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
