--- a/stories/ur/0111_کیوں-ہپپو-کوئی-بال-نہیں-ہے_slides.html
+++ b/stories/ur/0111_کیوں-ہپپو-کوئی-بال-نہیں-ہے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/02.jpg" /></p>
-<p>ایک روز، خرگوش دریا کے کنارے سے چل رہا تھا.</p>
+<p>ایک روز، خرگوش دریا کے کنارے سے چل رہا تھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/03.jpg" /></p>
-<p>Hippo بھی وہاں تھا، ایک ٹول کے لئے جانے اور کچھ اچھی سبز گھاس کھانے.</p>
+<p>Hippo بھی وہاں تھا، ایک ٹول کے لئے جانے اور کچھ اچھی سبز گھاس کھانے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/04.jpg" /></p>
-<p>Hippo نہیں دیکھا کہ خرگوش وہاں تھا اور اس نے اچانک خرگوش کے پاؤں پر قدم رکھا. خرگوش نے Hippo، &quot;آپ Hippo میں چللا شروع کر دیا! کیا تم نہیں دیکھ سکتے ہو کہ آپ میرے پاؤں پر چل رہے ہو؟&quot;</p>
+<p>Hippo نہیں دیکھا کہ خرگوش وہاں تھا اور اس نے اچانک خرگوش کے پاؤں پر قدم رکھا۔ خرگوش نے Hippo، &quot;آپ Hippo میں چللا شروع کر دیا! کیا تم نہیں دیکھ سکتے ہو کہ آپ میرے پاؤں پر چل رہے ہو؟&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/05.jpg" /></p>
-<p>ہپو نے خرگوش سے معذرت کی، &quot;مجھے معافی ہے. میں نے تمہیں نہیں دیکھا. مجھے معاف کر دو!&quot; لیکن خرگوش نہیں سنتے اور انہوں نے ہپو کے بارے میں بات کی، &quot;تم نے اس مقصد پر کیا! کسی دن، آپ دیکھیں گے! آپ ادا کرنے جا رہے ہیں!&quot;</p>
+<p>ہپو نے خرگوش سے معذرت کی، &quot;مجھے معافی ہے۔ میں نے تمہیں نہیں دیکھا۔ مجھے معاف کر دو!&quot; لیکن خرگوش نہیں سنتے اور انہوں نے ہپو کے بارے میں بات کی، &quot;تم نے اس مقصد پر کیا! کسی دن، آپ دیکھیں گے! آپ ادا کرنے جا رہے ہیں!&quot;</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/06.jpg" /></p>
-<p>خرگوش آگ تلاش کرنے کے لئے گئے اور کہا، &quot;جاؤ، ہپو کو جلا دو جب وہ گھاس کھا کر پانی سے باہر نکل آئے. اس نے مجھ پر قدم رکھا.&quot; آگ نے جواب دیا، &quot;کوئی مسئلہ نہیں، خرگوش، میرے دوست. میں وہی کروں گا جو تم پوچھتے ہو.&quot;</p>
+<p>خرگوش آگ تلاش کرنے کے لئے گئے اور کہا، &quot;جاؤ، ہپو کو جلا دو جب وہ گھاس کھا کر پانی سے باہر نکل آئے۔ اس نے مجھ پر قدم رکھا۔&quot; آگ نے جواب دیا، &quot;کوئی مسئلہ نہیں، خرگوش، میرے دوست۔ میں وہی کروں گا جو تم پوچھتے ہو۔&quot;</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/07.jpg" /></p>
-<p>بعد میں، ہپو دریا سے دور گھاس کھا رہا تھا جب &quot;کون!&quot; آگ میں آگ لگے. آگوں کو ہپو کے بال کو جلانے لگے.</p>
+<p>بعد میں، ہپو دریا سے دور گھاس کھا رہا تھا جب &quot;کون!&quot; آگ میں آگ لگے۔ آگوں کو ہپو کے بال کو جلانے لگے۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/08.jpg" /></p>
-<p>ہپو نے پانی کے لئے رونے اور بھاگنے لگے. اس کے تمام بال آگ کی طرف سے جلا دیا گیا تھا. Hippo رو رہی تھی، &quot;میرے بال آگ میں آگئے ہیں! میرے بال سب چلے جاتے ہیں! میرے خوبصورت بال!&quot;</p>
+<p>ہپو نے پانی کے لئے رونے اور بھاگنے لگے۔ اس کے تمام بال آگ کی طرف سے جلا دیا گیا تھا۔ Hippo رو رہی تھی، &quot;میرے بال آگ میں آگئے ہیں! میرے بال سب چلے جاتے ہیں! میرے خوبصورت بال!&quot;</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0111/09.jpg" /></p>
-<p>خرگوش خوش تھا کہ ہپو کے بالوں کو جلا دیا گیا تھا. اور اس دن، آگ کے خوف کے لئے، ہپو کبھی پانی سے دور نہیں جاتا.</p>
+<p>خرگوش خوش تھا کہ ہپو کے بالوں کو جلا دیا گیا تھا۔ اور اس دن، آگ کے خوف کے لئے، ہپو کبھی پانی سے دور نہیں جاتا۔</p>
 <center>
 <strong>8</strong>
 </center>
