--- a/stories/ur/0112_میرا-جسم.html
+++ b/stories/ur/0112_میرا-جسم.html
@@ -49,56 +49,56 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/02.jpg" /></p>
 
-<p>میں اس کے ساتھ چل سکتا ہوں.</p>
+<p>میں اس کے ساتھ چل سکتا ہوں۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/03.jpg" /></p>
 
-<p>میں اس کے ساتھ کود سکتا ہوں.</p>
+<p>میں اس کے ساتھ کود سکتا ہوں۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/04.jpg" /></p>
 
-<p>میں اس کے ساتھ رقص کرسکتا ہوں.</p>
+<p>میں اس کے ساتھ رقص کرسکتا ہوں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/05.jpg" /></p>
 
-<p>میں اس کے ساتھ تیر کر سکتا ہوں.</p>
+<p>میں اس کے ساتھ تیر کر سکتا ہوں۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/06.jpg" /></p>
 
-<p>میں اس کے ساتھ چھوڑ سکتا ہوں.</p>
+<p>میں اس کے ساتھ چھوڑ سکتا ہوں۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/07.jpg" /></p>
 
-<p>میں اس کے ساتھ لینا چاہتا ہوں.</p>
+<p>میں اس کے ساتھ لینا چاہتا ہوں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/08.jpg" /></p>
 
-<p>میں اس سے بچ سکتا ہوں.</p>
+<p>میں اس سے بچ سکتا ہوں۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0112/09.jpg" /></p>
 
-<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا.</p>
+<p>لیکن میں اس سے کبھی پرواز نہیں کر سکتا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
