--- a/stories/ur/0120_بال.html
+++ b/stories/ur/0120_بال.html
@@ -49,56 +49,56 @@ Clare Verbeek, Thembani Dladla, Zanele Buthelezi<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
 
-<p>Thuli مختصر بال ہے.</p>
+<p>Thuli مختصر بال ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/03.jpg" /></p>
 
-<p>انا لمبی بال ہے.</p>
+<p>انا لمبی بال ہے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/04.jpg" /></p>
 
-<p>کیتی سب سے طویل بال ہے.</p>
+<p>کیتی سب سے طویل بال ہے۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/05.jpg" /></p>
 
-<p>زاما نے اس کے بالوں کو پکارا ہے.</p>
+<p>زاما نے اس کے بالوں کو پکارا ہے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/06.jpg" /></p>
 
-<p>بابا نے داڑھی ہے.</p>
+<p>بابا نے داڑھی ہے۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
 
-<p>زینی نے اس کے بال کو اڑا دیا ہے.</p>
+<p>زینی نے اس کے بال کو اڑا دیا ہے۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/08.jpg" /></p>
 
-<p>تاؤ نے اپنے بالوں کو کاٹ دیا ہے.</p>
+<p>تاؤ نے اپنے بالوں کو کاٹ دیا ہے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
 
-<p>تھیم نے اپنے بالوں کو منایا ہے.</p>
+<p>تھیم نے اپنے بالوں کو منایا ہے۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
