--- a/stories/ur/0120_بال_slides.html
+++ b/stories/ur/0120_بال_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/02.jpg" /></p>
-<p>Thuli مختصر بال ہے.</p>
+<p>Thuli مختصر بال ہے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/03.jpg" /></p>
-<p>انا لمبی بال ہے.</p>
+<p>انا لمبی بال ہے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/04.jpg" /></p>
-<p>کیتی سب سے طویل بال ہے.</p>
+<p>کیتی سب سے طویل بال ہے۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/05.jpg" /></p>
-<p>زاما نے اس کے بالوں کو پکارا ہے.</p>
+<p>زاما نے اس کے بالوں کو پکارا ہے۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/06.jpg" /></p>
-<p>بابا نے داڑھی ہے.</p>
+<p>بابا نے داڑھی ہے۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/07.jpg" /></p>
-<p>زینی نے اس کے بال کو اڑا دیا ہے.</p>
+<p>زینی نے اس کے بال کو اڑا دیا ہے۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/08.jpg" /></p>
-<p>تاؤ نے اپنے بالوں کو کاٹ دیا ہے.</p>
+<p>تاؤ نے اپنے بالوں کو کاٹ دیا ہے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0120/09.jpg" /></p>
-<p>تھیم نے اپنے بالوں کو منایا ہے.</p>
+<p>تھیم نے اپنے بالوں کو منایا ہے۔</p>
 <center>
 <strong>8</strong>
 </center>
