--- a/stories/ur/0141_چکن-اور-ملپڑ.html
+++ b/stories/ur/0141_چکن-اور-ملپڑ.html
@@ -49,84 +49,84 @@ Winny Asara<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/02.jpg" /></p>
 
-<p>چکن اور ملپڈ دوست تھے. لیکن وہ ہمیشہ ایک دوسرے سے مقابلہ کرتے رہے تھے. ایک دن انہوں نے فٹ بال کھیلنے کا فیصلہ کیا تھا کہ یہ کون سا بہترین کھلاڑی تھا.</p>
+<p>چکن اور ملپڈ دوست تھے۔ لیکن وہ ہمیشہ ایک دوسرے سے مقابلہ کرتے رہے تھے۔ ایک دن انہوں نے فٹ بال کھیلنے کا فیصلہ کیا تھا کہ یہ کون سا بہترین کھلاڑی تھا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/03.jpg" /></p>
 
-<p>وہ فٹ بال کے میدان میں گئے اور ان کا کھیل شروع کر دیا. چکن تیزی سے تھا، لیکن ملپڈ تیزی سے تھا. چکن دور سے باہر چلے گئے، لیکن ملپڑ نے مزید مار ڈالا. چکن لالچ محسوس کرنے لگے.</p>
+<p>وہ فٹ بال کے میدان میں گئے اور ان کا کھیل شروع کر دیا۔ چکن تیزی سے تھا، لیکن ملپڈ تیزی سے تھا۔ چکن دور سے باہر چلے گئے، لیکن ملپڑ نے مزید مار ڈالا۔ چکن لالچ محسوس کرنے لگے۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/04.jpg" /></p>
 
-<p>انہوں نے جرمانہ گولی مارنے کا فیصلہ کیا. پہلا ملپڈ کا مقصد برقرار رکھنے والا تھا. چکن نے صرف ایک گول بنائے. پھر اس مقصد کا دفاع کرنے کے لئے چکن کی باری تھی.</p>
+<p>انہوں نے جرمانہ گولی مارنے کا فیصلہ کیا۔ پہلا ملپڈ کا مقصد برقرار رکھنے والا تھا۔ چکن نے صرف ایک گول بنائے۔ پھر اس مقصد کا دفاع کرنے کے لئے چکن کی باری تھی۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/05.jpg" /></p>
 
-<p>ملیپر نے گیند کو مار ڈالا اور رنز بنائے. ملیپڈ نے گیند کو ڈوبے اور رنز بنائے. ملپ نے گیند کی قیادت کی اور رنز بنائے. ملیپڈ نے پانچ گولز بنائے.</p>
+<p>ملیپر نے گیند کو مار ڈالا اور رنز بنائے۔ ملیپڈ نے گیند کو ڈوبے اور رنز بنائے۔ ملپ نے گیند کی قیادت کی اور رنز بنائے۔ ملیپڈ نے پانچ گولز بنائے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/06.jpg" /></p>
 
-<p>چکن غصے میں تھا کہ وہ کھو گیا. وہ بہت خراب ہارنے والا تھا. ملیپڈ نے ہنسنا شروع کر دیا کیونکہ ان کا دوست اس طرح کا خوفناک بنا رہا تھا.</p>
+<p>چکن غصے میں تھا کہ وہ کھو گیا۔ وہ بہت خراب ہارنے والا تھا۔ ملیپڈ نے ہنسنا شروع کر دیا کیونکہ ان کا دوست اس طرح کا خوفناک بنا رہا تھا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/07.jpg" /></p>
 
-<p>چکن بہت ناراض تھا کہ اس نے اپنی چوٹی کھلی تھی.</p>
+<p>چکن بہت ناراض تھا کہ اس نے اپنی چوٹی کھلی تھی۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/08.jpg" /></p>
 
-<p>جیسا کہ چکن گھر چل رہا تھا، اس نے ماں ملی پور سے ملاقات کی. ماں ملپ نے پوچھا، “کیا آپ نے میرے بچے کو دیکھا ہے؟” چکن نے کچھ بھی نہیں کہا. ماں ملیپر فکر مند تھی.</p>
+<p>جیسا کہ چکن گھر چل رہا تھا، اس نے ماں ملی پور سے ملاقات کی۔ ماں ملپ نے پوچھا، “کیا آپ نے میرے بچے کو دیکھا ہے؟” چکن نے کچھ بھی نہیں کہا۔ ماں ملیپر فکر مند تھی۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/09.jpg" /></p>
 
-<p>پھر ماں ملپل نے ایک چھوٹی آواز سنی. “میری ماں کی مدد کرو!” آواز پکارا. ماں ملپل نے ارد گرد دیکھا اور احتیاط سے سن کر. آواز چکن کے اندر سے آیا.</p>
+<p>پھر ماں ملپل نے ایک چھوٹی آواز سنی۔ “میری ماں کی مدد کرو!” آواز پکارا۔ ماں ملپل نے ارد گرد دیکھا اور احتیاط سے سن کر۔ آواز چکن کے اندر سے آیا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/10.jpg" /></p>
 
-<p>ماں ملپ نے آواز دی، “اپنے بچے کو اپنی خاص طاقت کا استعمال کریں!” ملپسیڈس بد بو اور ایک خوفناک ذائقہ بنا سکتے ہیں. چکن بیمار محسوس کرنے لگے.</p>
+<p>ماں ملپ نے آواز دی، “اپنے بچے کو اپنی خاص طاقت کا استعمال کریں!” ملپسیڈس بد بو اور ایک خوفناک ذائقہ بنا سکتے ہیں۔ چکن بیمار محسوس کرنے لگے۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/11.jpg" /></p>
 
-<p>چکن دفن پھر اس نے نگل لیا اور بولا. پھر اس نے چھپا لیا اور جوڑا. اور جوڑا. ملپڑی نفرت انگیز تھی!</p>
+<p>چکن دفن پھر اس نے نگل لیا اور بولا۔ پھر اس نے چھپا لیا اور جوڑا۔ اور جوڑا۔ ملپڑی نفرت انگیز تھی!</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/12.jpg" /></p>
 
-<p>چکن نے جب تک وہ اس کے پیٹ میں تھا ملپڑی سے باہر نکلنے کی بات نہیں کی. ماں ملپڑ اور اس کے بچے کو چھپا کرنے کے لئے ایک درخت کو پھینک دیا.</p>
+<p>چکن نے جب تک وہ اس کے پیٹ میں تھا ملپڑی سے باہر نکلنے کی بات نہیں کی۔ ماں ملپڑ اور اس کے بچے کو چھپا کرنے کے لئے ایک درخت کو پھینک دیا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0141/13.jpg" /></p>
 
-<p>اس وقت سے، مرغوں اور ملپسیوں کے دشمن تھے.</p>
+<p>اس وقت سے، مرغوں اور ملپسیوں کے دشمن تھے۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
