--- a/stories/ur/0156_بھوک-مگرمچرچھ.html
+++ b/stories/ur/0156_بھوک-مگرمچرچھ.html
@@ -45,18 +45,18 @@
 
 <h1 id="section">بھوک مگرمچرچھ</h1>
 
-Christian G.<br>اردو</div><div class="pagebreak">
+Christian G۔<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/02.jpg" /></p>
 
-<p>ایک بار بہت بھوک مگرمچرچھ تھا.</p>
+<p>ایک بار بہت بھوک مگرمچرچھ تھا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/03.jpg" /></p>
 
-<p>انہوں نے آہستہ آہستہ اور خاموشی کے کھانے کی تلاش کی. اور پھر…</p>
+<p>انہوں نے آہستہ آہستہ اور خاموشی کے کھانے کی تلاش کی۔ اور پھر۔۔۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
@@ -70,19 +70,19 @@ Christian G.<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/05.jpg" /></p>
 
-<p>اس کے بعد وہ اب بھوک نہیں ہے، اور وہ خوش ہے.</p>
+<p>اس کے بعد وہ اب بھوک نہیں ہے، اور وہ خوش ہے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0156/06.jpg" /></p>
 
-<p>جب تک وہ بھوک لگی ہو.</p>
+<p>جب تک وہ بھوک لگی ہو۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
-<p><strong>Text:</strong> Christian G.<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
+<p><strong>Text:</strong> Christian G۔<br /><strong>Illustrations:</strong> Wiehan de Jager<br /><strong>Translation:</strong> Samrina Sana<br /><strong>Language:</strong> Urdu</p>
 <p>This story is brought to you by the <a href="https://global-asp.github.io/">Global African Storybook Project</a>, an effort to translate the stories of the <a href="http://africanstorybook.org/">African Storybook Project</a> into all the languages of the world.<p>You can view the original story on the ASP website <a href="http://africanstorybook.org/stories/hungry-crocodile">here</a>
 <p><a href="https://global-asp.github.io"><img src="https://global-asp.github.io/logo.png" alt="Global ASP logo" border="0" /></a>
 </p></p></p>
