--- a/stories/ur/0201_گدی-بیٹا.html
+++ b/stories/ur/0201_گدی-بیٹا.html
@@ -49,140 +49,140 @@ Lindiwe Matshikiza<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/02.jpg" /></p>
 
-<p>یہ ایک چھوٹی سی لڑکی تھی جس نے پہلے فاصلے پر پراسرار شکل دیکھا.</p>
+<p>یہ ایک چھوٹی سی لڑکی تھی جس نے پہلے فاصلے پر پراسرار شکل دیکھا۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/03.jpg" /></p>
 
-<p>جیسا کہ شکل قریب کی گئی، اس نے دیکھا کہ یہ ایک حاملہ خاتون تھی.</p>
+<p>جیسا کہ شکل قریب کی گئی، اس نے دیکھا کہ یہ ایک حاملہ خاتون تھی۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/04.jpg" /></p>
 
-<p>شرم لیکن بہادر، چھوٹی سی لڑکی نے عورت کو قریب پہنچایا. چھوٹی لڑکی کے لوگوں نے فیصلہ کیا کہ “ہمیں اس کے ساتھ رکھنا چاہیے”. “ہم اسے اور اسکے بچے کو محفوظ رکھیں گے.”</p>
+<p>شرم لیکن بہادر، چھوٹی سی لڑکی نے عورت کو قریب پہنچایا۔ چھوٹی لڑکی کے لوگوں نے فیصلہ کیا کہ “ہمیں اس کے ساتھ رکھنا چاہیے”۔ “ہم اسے اور اسکے بچے کو محفوظ رکھیں گے۔”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/05.jpg" /></p>
 
-<p>بچہ جلد ہی اپنے راستے پر تھا. “پش!” “کمبل لے!” “پانی!” “Puuuussssshhh !!!”</p>
+<p>بچہ جلد ہی اپنے راستے پر تھا۔ “پش!” “کمبل لے!” “پانی!” “Puuuussssshhh !!!”</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/06.jpg" /></p>
 
-<p>لیکن جب انہوں نے بچے کو دیکھا تو سب کو جھٹکا لگایا. “گدھے ؟!”</p>
+<p>لیکن جب انہوں نے بچے کو دیکھا تو سب کو جھٹکا لگایا۔ “گدھے ؟!”</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/07.jpg" /></p>
 
-<p>سب لوگ بحث کرنے لگے. کچھ نے کہا، “ہم نے کہا کہ ہم ماں اور بچہ کو محفوظ رکھیں گے، اور جو کچھ ہم کریں گے وہ کریں گے”. “لیکن وہ ہمیں بدقسمتی لائیں گے”.</p>
+<p>سب لوگ بحث کرنے لگے۔ کچھ نے کہا، “ہم نے کہا کہ ہم ماں اور بچہ کو محفوظ رکھیں گے، اور جو کچھ ہم کریں گے وہ کریں گے”۔ “لیکن وہ ہمیں بدقسمتی لائیں گے”۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/08.jpg" /></p>
 
-<p>اور اسی طرح عورت خود کو اکیلے ہی ملتی تھی. اس نے اس عجیب بچے کے ساتھ کیا کرنا تھا. اس نے حیران کیا کہ خود سے کیا کرنا ہے.</p>
+<p>اور اسی طرح عورت خود کو اکیلے ہی ملتی تھی۔ اس نے اس عجیب بچے کے ساتھ کیا کرنا تھا۔ اس نے حیران کیا کہ خود سے کیا کرنا ہے۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/09.jpg" /></p>
 
-<p>لیکن آخر میں اسے قبول کرنا پڑا کہ وہ اس کا بچہ تھا اور وہ اپنی ماں تھی.</p>
+<p>لیکن آخر میں اسے قبول کرنا پڑا کہ وہ اس کا بچہ تھا اور وہ اپنی ماں تھی۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/10.jpg" /></p>
 
-<p>اب، اگر بچہ اسی طرح رہتا ہے تو، چھوٹا سائز، سب کچھ مختلف ہوسکتا ہے. لیکن گدھے کا بچہ بڑا ہوا اور جب تک کہ اس کی ماں کی پیٹھ پر اس سے زیادہ فٹ نہیں ہوسکتا تھا. اور اس سے کوئی فرق نہیں کہ اس نے کتنے محنت کی، وہ انسان کی طرح سلوک نہیں کر سکے. اس کی ماں اکثر تھکے اور مایوس ہوگئے تھے. کبھی کبھی اس نے اسے جانوروں کے لئے کام کرنے کا کام کیا.</p>
+<p>اب، اگر بچہ اسی طرح رہتا ہے تو، چھوٹا سائز، سب کچھ مختلف ہوسکتا ہے۔ لیکن گدھے کا بچہ بڑا ہوا اور جب تک کہ اس کی ماں کی پیٹھ پر اس سے زیادہ فٹ نہیں ہوسکتا تھا۔ اور اس سے کوئی فرق نہیں کہ اس نے کتنے محنت کی، وہ انسان کی طرح سلوک نہیں کر سکے۔ اس کی ماں اکثر تھکے اور مایوس ہوگئے تھے۔ کبھی کبھی اس نے اسے جانوروں کے لئے کام کرنے کا کام کیا۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/11.jpg" /></p>
 
-<p>گدھے کے اندر کشیدگی اور غصہ وہ ایسا نہیں کر سکا اور وہ ایسا نہیں کرسکتا. وہ اس طرح نہیں ہوسکتا تھا اور وہ ایسا نہیں کرسکتا تھا. وہ بہت ناراض ہو گیا، ایک دن، اس نے اپنی ماں کو زمین پر قتل کیا.</p>
+<p>گدھے کے اندر کشیدگی اور غصہ وہ ایسا نہیں کر سکا اور وہ ایسا نہیں کرسکتا۔ وہ اس طرح نہیں ہوسکتا تھا اور وہ ایسا نہیں کرسکتا تھا۔ وہ بہت ناراض ہو گیا، ایک دن، اس نے اپنی ماں کو زمین پر قتل کیا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/12.jpg" /></p>
 
-<p>گدھے شرم سے بھرا ہوا تھا. انہوں نے اس طرح سے دور اور تیزی سے دور چلنا شروع کر دیا.</p>
+<p>گدھے شرم سے بھرا ہوا تھا۔ انہوں نے اس طرح سے دور اور تیزی سے دور چلنا شروع کر دیا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/13.jpg" /></p>
 
-<p>جب تک وہ چل رہا تھا، اس رات رات تھی، اور گدھے کو کھو دیا. “وہ ہار؟” انہوں نے اندھیرے سے گزر لیا. “ہیے ہاک” وہ واحد تھا خود کو سخت گیند میں ڈال کر وہ گہری اور پریشان نیند میں گر گیا.</p>
+<p>جب تک وہ چل رہا تھا، اس رات رات تھی، اور گدھے کو کھو دیا۔ “وہ ہار؟” انہوں نے اندھیرے سے گزر لیا۔ “ہیے ہاک” وہ واحد تھا خود کو سخت گیند میں ڈال کر وہ گہری اور پریشان نیند میں گر گیا۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/14.jpg" /></p>
 
-<p>گدھے نے ایک عجیب بوڑھا آدمی تلاش کرنے کے لئے اٹھایا جس پر اس نے گھوم لیا. اس نے بوڑھے آدمی کی آنکھوں کو دیکھا اور امید کی ایک چمک محسوس کرنے لگے.</p>
+<p>گدھے نے ایک عجیب بوڑھا آدمی تلاش کرنے کے لئے اٹھایا جس پر اس نے گھوم لیا۔ اس نے بوڑھے آدمی کی آنکھوں کو دیکھا اور امید کی ایک چمک محسوس کرنے لگے۔</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/15.jpg" /></p>
 
-<p>گدھے پرانے آدمی کے ساتھ رہنا پڑا، جو اسے زندہ رہنے کے بہت سے مختلف طریقے سے سکھایا. گدھے نے سنا اور سیکھا، اور اس نے بوڑھے آدمی کیا. انہوں نے ایک دوسرے کی مدد کی، اور انہوں نے ایک ساتھ چچا.</p>
+<p>گدھے پرانے آدمی کے ساتھ رہنا پڑا، جو اسے زندہ رہنے کے بہت سے مختلف طریقے سے سکھایا۔ گدھے نے سنا اور سیکھا، اور اس نے بوڑھے آدمی کیا۔ انہوں نے ایک دوسرے کی مدد کی، اور انہوں نے ایک ساتھ چچا۔</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/16.jpg" /></p>
 
-<p>ایک صبح، بوڑھا آدمی نے گدی سے پوچھا کہ اسے پہاڑ کی چوٹی میں لے جایا جائے.</p>
+<p>ایک صبح، بوڑھا آدمی نے گدی سے پوچھا کہ اسے پہاڑ کی چوٹی میں لے جایا جائے۔</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/17.jpg" /></p>
 
-<p>بادلوں کے درمیان اونچی اونچائی میں سو گیا. گدھے نے خواب دیکھا کہ اس کی ماں بیمار تھی اور اس سے دعا کی. اور جب وہ اٹھ گیا …</p>
+<p>بادلوں کے درمیان اونچی اونچائی میں سو گیا۔ گدھے نے خواب دیکھا کہ اس کی ماں بیمار تھی اور اس سے دعا کی۔ اور جب وہ اٹھ گیا ۔۔۔</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/18.jpg" /></p>
 
-<p>… اس کے دوست، بوڑھے آدمی کے ساتھ بادلوں کو غائب کردیا گیا تھا.</p>
+<p>۔۔۔ اس کے دوست، بوڑھے آدمی کے ساتھ بادلوں کو غائب کردیا گیا تھا۔</p>
 
 <div class="pagenum">17</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/19.jpg" /></p>
 
-<p>گدھے آخر میں کیا کرنا جانتا تھا.</p>
+<p>گدھے آخر میں کیا کرنا جانتا تھا۔</p>
 
 <div class="pagenum">18</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/20.jpg" /></p>
 
-<p>گدھے نے اپنی ماں کو اکیلے کھڑے ہوئے اور اپنے کھوئے ہوئے بچے کو ماتم کر لیا. انہوں نے ایک لمبے عرصے سے ایک دوسرے سے خوفزدہ کیا. اور پھر ایک دوسرے کو بہت مشکل بنا دیا.</p>
+<p>گدھے نے اپنی ماں کو اکیلے کھڑے ہوئے اور اپنے کھوئے ہوئے بچے کو ماتم کر لیا۔ انہوں نے ایک لمبے عرصے سے ایک دوسرے سے خوفزدہ کیا۔ اور پھر ایک دوسرے کو بہت مشکل بنا دیا۔</p>
 
 <div class="pagenum">19</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0201/21.jpg" /></p>
 
-<p>گدی کے بچے اور اس کی والدہ ایک دوسرے کے ساتھ مل کر بڑے پیمانے پر رہتے ہیں. آہستہ آہستہ، ان کے آس پاس، دوسرے خاندانوں کو حل کرنے کے لئے شروع کر دیا ہے.</p>
+<p>گدی کے بچے اور اس کی والدہ ایک دوسرے کے ساتھ مل کر بڑے پیمانے پر رہتے ہیں۔ آہستہ آہستہ، ان کے آس پاس، دوسرے خاندانوں کو حل کرنے کے لئے شروع کر دیا ہے۔</p>
 
 <div class="pagenum">20</div>
 <p></div><div class="pagebreak"></p>
