--- a/stories/ur/0210_ٹنگی-اور-گایوں_slides.html
+++ b/stories/ur/0210_ٹنگی-اور-گایوں_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/02.jpg" /></p>
-<p>ٹنگی اپنی دادی کے ساتھ رہتا تھا.</p>
+<p>ٹنگی اپنی دادی کے ساتھ رہتا تھا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/03.jpg" /></p>
-<p>وہ گائے اس کے ساتھ دیکھتے تھے.</p>
+<p>وہ گائے اس کے ساتھ دیکھتے تھے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/04.jpg" /></p>
-<p>ایک دن فوجی آئے.</p>
+<p>ایک دن فوجی آئے۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/05.jpg" /></p>
-<p>انہوں نے گایوں کو دور کر لیا.</p>
+<p>انہوں نے گایوں کو دور کر لیا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/06.jpg" /></p>
-<p>ٹنگی اور اس کی دادی کو بھاگ گیا اور چھپایا.</p>
+<p>ٹنگی اور اس کی دادی کو بھاگ گیا اور چھپایا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/07.jpg" /></p>
-<p>انہوں نے جھاڑی میں رات تک چھپائی.</p>
+<p>انہوں نے جھاڑی میں رات تک چھپائی۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/08.jpg" /></p>
-<p>پھر فوجی واپس آ گئے.</p>
+<p>پھر فوجی واپس آ گئے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/09.jpg" /></p>
-<p>دادیوں کے نیچے دادی چھپایا دادی.</p>
+<p>دادیوں کے نیچے دادی چھپایا دادی۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/10.jpg" /></p>
-<p>سپاہیوں میں سے ایک نے اس کے پاؤں کو اس پر دھیان دیا، لیکن اس نے خاموش رکھا.</p>
+<p>سپاہیوں میں سے ایک نے اس کے پاؤں کو اس پر دھیان دیا، لیکن اس نے خاموش رکھا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/11.jpg" /></p>
-<p>جب یہ محفوظ تھا تو، تنگی اور اس کی دادی کو باہر آیا.</p>
+<p>جب یہ محفوظ تھا تو، تنگی اور اس کی دادی کو باہر آیا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0210/12.jpg" /></p>
-<p>انہوں نے بہت خاموشی سے گھر تعمیر کیا.</p>
+<p>انہوں نے بہت خاموشی سے گھر تعمیر کیا۔</p>
 <center>
 <strong>11</strong>
 </center>
