--- a/stories/ur/0234_اینڈیسوا-فٹ-بال-سٹار_slides.html
+++ b/stories/ur/0234_اینڈیسوا-فٹ-بال-سٹار_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/02.jpg" /></p>
-<p>اینڈیسوا نے دیکھا کہ لڑکوں فٹ بال کھیلتے ہیں. وہ چاہتا تھا کہ وہ ان میں شامل ہوسکیں. اس نے کوچ سے پوچھا کہ وہ ان کے ساتھ مشق کرسکتے ہیں.</p>
+<p>اینڈیسوا نے دیکھا کہ لڑکوں فٹ بال کھیلتے ہیں۔ وہ چاہتا تھا کہ وہ ان میں شامل ہوسکیں۔ اس نے کوچ سے پوچھا کہ وہ ان کے ساتھ مشق کرسکتے ہیں۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/03.jpg" /></p>
-<p>کوچ اس کے ہاتھوں کو اپنے ہونٹوں پر رکھتی ہیں. انہوں نے کہا کہ &quot;اس اسکول میں صرف لڑکوں کو فٹ بال کھیلنے کی اجازت ہے.&quot;</p>
+<p>کوچ اس کے ہاتھوں کو اپنے ہونٹوں پر رکھتی ہیں۔ انہوں نے کہا کہ &quot;اس اسکول میں صرف لڑکوں کو فٹ بال کھیلنے کی اجازت ہے۔&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/04.jpg" /></p>
-<p>لڑکوں نے اسے بتایا تھا کہ وہ نیٹ بال کھیلتے ہیں. انہوں نے کہا کہ نیٹ بالز لڑکیوں کے لئے ہے اور فٹ بال لڑکوں کے لئے ہے. اینڈیسوا پریشان تھا.</p>
+<p>لڑکوں نے اسے بتایا تھا کہ وہ نیٹ بال کھیلتے ہیں۔ انہوں نے کہا کہ نیٹ بالز لڑکیوں کے لئے ہے اور فٹ بال لڑکوں کے لئے ہے۔ اینڈیسوا پریشان تھا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/05.jpg" /></p>
-<p>اگلے دن، اسکول کا ایک بڑا فٹ بال میچ تھا. کوچ فکر مند تھا کیونکہ ان کا بہترین کھلاڑی بیمار تھا اور نہیں کھیل سکتا تھا.</p>
+<p>اگلے دن، اسکول کا ایک بڑا فٹ بال میچ تھا۔ کوچ فکر مند تھا کیونکہ ان کا بہترین کھلاڑی بیمار تھا اور نہیں کھیل سکتا تھا۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/06.jpg" /></p>
-<p>اینڈیسوا کو کوچ میں بھاگ گیا اور اس سے درخواست کی کہ وہ اسے کھیلنے کے لۓ. کوچ اس بات کا یقین نہیں تھا کہ کیا کرنا ہے. پھر اس نے فیصلہ کیا کہ اندیسا ٹیم میں شامل ہوسکتا ہے.</p>
+<p>اینڈیسوا کو کوچ میں بھاگ گیا اور اس سے درخواست کی کہ وہ اسے کھیلنے کے لۓ۔ کوچ اس بات کا یقین نہیں تھا کہ کیا کرنا ہے۔ پھر اس نے فیصلہ کیا کہ اندیسا ٹیم میں شامل ہوسکتا ہے۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/07.jpg" /></p>
-<p>کھیل سخت تھا. نصف وقت سے کسی نے کوئی گول نہیں بنایا تھا.</p>
+<p>کھیل سخت تھا۔ نصف وقت سے کسی نے کوئی گول نہیں بنایا تھا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/08.jpg" /></p>
-<p>میچ کے دوسرے نصف کے دوران، لڑکوں میں سے ایک نے اینڈیسوا کو گیند منظور کرلی. وہ مقصد کی پوزیشن کی طرف تیزی سے چلے گئے. اس نے گیند مشکل کو ہرا دیا اور ایک گول بنائے.</p>
+<p>میچ کے دوسرے نصف کے دوران، لڑکوں میں سے ایک نے اینڈیسوا کو گیند منظور کرلی۔ وہ مقصد کی پوزیشن کی طرف تیزی سے چلے گئے۔ اس نے گیند مشکل کو ہرا دیا اور ایک گول بنائے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0234/09.jpg" /></p>
-<p>بھیڑ خوشی کے ساتھ جنگلی گئی. اس دن سے، لڑکیوں کو بھی اسکول میں فٹ بال کھیلنے کی اجازت ملی تھی.</p>
+<p>بھیڑ خوشی کے ساتھ جنگلی گئی۔ اس دن سے، لڑکیوں کو بھی اسکول میں فٹ بال کھیلنے کی اجازت ملی تھی۔</p>
 <center>
 <strong>8</strong>
 </center>
