--- a/stories/ur/0271_دو_slides.html
+++ b/stories/ur/0271_دو_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/02.jpg" /></p>
-<p>دو چھوٹے ہاتھ پکڑنے کے لئے.</p>
+<p>دو چھوٹے ہاتھ پکڑنے کے لئے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -114,7 +114,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/04.jpg" /></p>
-<p>لات مارنادو پاؤں.</p>
+<p>لات مارنادو پاؤں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -131,7 +131,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/06.jpg" /></p>
-<p>دیکھنے کے لئے دو چھوٹی آنکھیں.</p>
+<p>دیکھنے کے لئے دو چھوٹی آنکھیں۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -148,7 +148,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/08.jpg" /></p>
-<p>سننے کے لئے دو چھوٹے کان.</p>
+<p>سننے کے لئے دو چھوٹے کان۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -165,7 +165,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0271/10.jpg" /></p>
-<p>دو بازو کو گلے لگانا.</p>
+<p>دو بازو کو گلے لگانا۔</p>
 <center>
 <strong>9</strong>
 </center>
