--- a/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا.html
+++ b/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا.html
@@ -49,91 +49,91 @@ Nina Orange<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
 
-<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، “ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو. وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں”.</p>
+<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، “ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو۔ وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں”۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
 
-<p>اپنے والدین کے راستے پر، ووسی نے دو لڑکوں سے پھل اٹھایا. ایک لڑکا نے انڈونی کو ووسی سے پکڑ لیا اور ایک درخت پر گولی مار دی. انڈے ٹوٹ گیا.</p>
+<p>اپنے والدین کے راستے پر، ووسی نے دو لڑکوں سے پھل اٹھایا۔ ایک لڑکا نے انڈونی کو ووسی سے پکڑ لیا اور ایک درخت پر گولی مار دی۔ انڈے ٹوٹ گیا۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
 
-<p>آپ نے کیا کیا ہے؟ “وہ انڈے ایک کیک کے لئے تھا. کیک میری بہن کی شادی کے لئے تھا. شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟”</p>
+<p>آپ نے کیا کیا ہے؟ “وہ انڈے ایک کیک کے لئے تھا۔ کیک میری بہن کی شادی کے لئے تھا۔ شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟”</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
 
-<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا. ایک نے کہا، “ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے .والی چھڑی ہے.” ووسی نے اپنی سفر جاری رکھی</p>
+<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا۔ ایک نے کہا، “ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے ۔والی چھڑی ہے۔” ووسی نے اپنی سفر جاری رکھی</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
 
-<p>جس طرح سے انہوں نے دو گھر سے ایک گھر تعمیر کی. “کیا ہم اس مضبوط چھڑی کو استعمال کرسکتے ہیں؟” لیکن چھڑی تعمیر کرنے کے لئے کافی مضبوط نہیں تھا، اور اس نے توڑ دیا.</p>
+<p>جس طرح سے انہوں نے دو گھر سے ایک گھر تعمیر کی۔ “کیا ہم اس مضبوط چھڑی کو استعمال کرسکتے ہیں؟” لیکن چھڑی تعمیر کرنے کے لئے کافی مضبوط نہیں تھا، اور اس نے توڑ دیا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
 
-<p>آپ نے کیا کیا ہے؟ “یہ چھڑی میری بہن کے لئے تحفہ تھی. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟”</p>
+<p>آپ نے کیا کیا ہے؟ “یہ چھڑی میری بہن کے لئے تحفہ تھی۔ پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا۔ کیک میری بہن کی شادی کے لئے تھا۔ اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے۔ میری بہن کیا کرے گی؟”</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
 
-<p>چھڑی کو توڑنے کے لئے عمارت سازوں کو معاف کر دیا گیا تھا. ایک نے کہا، “ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے کچھ بھیچ ہے.” اور اسی طرح ووسی نے اپنی سفر جاری رکھی.</p>
+<p>چھڑی کو توڑنے کے لئے عمارت سازوں کو معاف کر دیا گیا تھا۔ ایک نے کہا، “ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے کچھ بھیچ ہے۔” اور اسی طرح ووسی نے اپنی سفر جاری رکھی۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
 
-<p>راستے کے ساتھ، ووسی نے ایک کسان اور ایک گائے سے ملاقات کی. گائے سے پوچھا “کیا سوادج اسچ، میرے پاس نبل ہوسکتا ہے؟” لیکن گوچ بہت سوادج تھا کہ گائے نے اسے کھایا تھا!</p>
+<p>راستے کے ساتھ، ووسی نے ایک کسان اور ایک گائے سے ملاقات کی۔ گائے سے پوچھا “کیا سوادج اسچ، میرے پاس نبل ہوسکتا ہے؟” لیکن گوچ بہت سوادج تھا کہ گائے نے اسے کھایا تھا!</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
 
-<p>آپ نے کیا کیا ہے؟ “یہ کہانی میری بہن کے لئے تحفہ تھا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟”</p>
+<p>آپ نے کیا کیا ہے؟ “یہ کہانی میری بہن کے لئے تحفہ تھا۔ بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا۔ پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا۔ کیک میری بہن کی شادی کے لئے تھا۔ اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے۔ میری بہن کیا کرے گی؟”</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
 
-<p>گائے افسوس تھا وہ لالچی تھی. کسان نے اتفاق کیا کہ گائے اس کی بہن کے لئے تحفہ کے طور پر ووسی کے ساتھ جا سکتے ہیں. اور اسی طرح ووسی پر لگایا گیا.</p>
+<p>گائے افسوس تھا وہ لالچی تھی۔ کسان نے اتفاق کیا کہ گائے اس کی بہن کے لئے تحفہ کے طور پر ووسی کے ساتھ جا سکتے ہیں۔ اور اسی طرح ووسی پر لگایا گیا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
 
-<p>لیکن گائے واپس آنے والے وقت میں کسان کو بھاگ گیا. اور ووسی نے اپنے سفر پر کھو دیا. وہ اپنی بہن کی شادی کے لئے بہت دیر ہو چکی تھی. مہمان پہلے ہی کھا رہے تھے.</p>
+<p>لیکن گائے واپس آنے والے وقت میں کسان کو بھاگ گیا۔ اور ووسی نے اپنے سفر پر کھو دیا۔ وہ اپنی بہن کی شادی کے لئے بہت دیر ہو چکی تھی۔ مہمان پہلے ہی کھا رہے تھے۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
 
-<p>“میں کیا کروں گا؟” ووسی نے روکا. “جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے.”</p>
+<p>“میں کیا کروں گا؟” ووسی نے روکا۔ “جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا۔ بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا۔ پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا۔ کیک شادی کے لئے تھا۔ اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے۔”</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
 
-<p>ووسی کی بہن تھوڑی دیر کے بارے میں سوچتے تھے، پھر اس نے کہا، “وسو میرے بھائی، میں تحائف کے بارے میں واقعی پروا نہیں کرتا. مجھے کیک کے بارے میں بھی پرواہ نہیں ہے! ہم سب یہاں ایک ساتھ ہیں، میں خوش ہوں. اب اپنے زبردست کپڑے رکھو اور اس دن جشن منائیں! “اور اسی طرح ووسی نے کیا.</p>
+<p>ووسی کی بہن تھوڑی دیر کے بارے میں سوچتے تھے، پھر اس نے کہا، “وسو میرے بھائی، میں تحائف کے بارے میں واقعی پروا نہیں کرتا۔ مجھے کیک کے بارے میں بھی پرواہ نہیں ہے! ہم سب یہاں ایک ساتھ ہیں، میں خوش ہوں۔ اب اپنے زبردست کپڑے رکھو اور اس دن جشن منائیں! “اور اسی طرح ووسی نے کیا۔</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
