--- a/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا_slides.html
+++ b/stories/ur/0291_کیا-وسی-کی-بہن-نے-کہا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/02.jpg" /></p>
-<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، &quot;ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو. وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں&quot;.</p>
+<p>ابتدائی ایک صبح ووسی کے نانی نے اسے بلایا، &quot;ووسی، آپ کو اپنے والدین کو یہ انڈے لے لو۔ وہ اپنی بہن کی شادی کے لئے بڑے کیک بنانا چاہتے ہیں&quot;۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/03.jpg" /></p>
-<p>اپنے والدین کے راستے پر، ووسی نے دو لڑکوں سے پھل اٹھایا. ایک لڑکا نے انڈونی کو ووسی سے پکڑ لیا اور ایک درخت پر گولی مار دی. انڈے ٹوٹ گیا.</p>
+<p>اپنے والدین کے راستے پر، ووسی نے دو لڑکوں سے پھل اٹھایا۔ ایک لڑکا نے انڈونی کو ووسی سے پکڑ لیا اور ایک درخت پر گولی مار دی۔ انڈے ٹوٹ گیا۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/04.jpg" /></p>
-<p>آپ نے کیا کیا ہے؟ &quot;وہ انڈے ایک کیک کے لئے تھا. کیک میری بہن کی شادی کے لئے تھا. شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟&quot;</p>
+<p>آپ نے کیا کیا ہے؟ &quot;وہ انڈے ایک کیک کے لئے تھا۔ کیک میری بہن کی شادی کے لئے تھا۔ شادی کیک نہیں ہے تو میری بہن کا کیا کہنا ہوگا؟&quot;</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/05.jpg" /></p>
-<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا. ایک نے کہا، &quot;ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے .والی چھڑی ہے.&quot; ووسی نے اپنی سفر جاری رکھی</p>
+<p>ووسی کو چڑھنے کے لئے لڑکوں کو معاف کر دیا گیا۔ ایک نے کہا، &quot;ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے ایک چلنے ۔والی چھڑی ہے۔&quot; ووسی نے اپنی سفر جاری رکھی</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/06.jpg" /></p>
-<p>جس طرح سے انہوں نے دو گھر سے ایک گھر تعمیر کی. &quot;کیا ہم اس مضبوط چھڑی کو استعمال کرسکتے ہیں؟&quot; لیکن چھڑی تعمیر کرنے کے لئے کافی مضبوط نہیں تھا، اور اس نے توڑ دیا.</p>
+<p>جس طرح سے انہوں نے دو گھر سے ایک گھر تعمیر کی۔ &quot;کیا ہم اس مضبوط چھڑی کو استعمال کرسکتے ہیں؟&quot; لیکن چھڑی تعمیر کرنے کے لئے کافی مضبوط نہیں تھا، اور اس نے توڑ دیا۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/07.jpg" /></p>
-<p>آپ نے کیا کیا ہے؟ &quot;یہ چھڑی میری بہن کے لئے تحفہ تھی. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟&quot;</p>
+<p>آپ نے کیا کیا ہے؟ &quot;یہ چھڑی میری بہن کے لئے تحفہ تھی۔ پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا۔ کیک میری بہن کی شادی کے لئے تھا۔ اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے۔ میری بہن کیا کرے گی؟&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/08.jpg" /></p>
-<p>چھڑی کو توڑنے کے لئے عمارت سازوں کو معاف کر دیا گیا تھا. ایک نے کہا، &quot;ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے کچھ بھیچ ہے.&quot; اور اسی طرح ووسی نے اپنی سفر جاری رکھی.</p>
+<p>چھڑی کو توڑنے کے لئے عمارت سازوں کو معاف کر دیا گیا تھا۔ ایک نے کہا، &quot;ہم کیک کے ساتھ مدد نہیں کرسکتے ہیں، لیکن آپ کی بہن کے لئے کچھ بھیچ ہے۔&quot; اور اسی طرح ووسی نے اپنی سفر جاری رکھی۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/09.jpg" /></p>
-<p>راستے کے ساتھ، ووسی نے ایک کسان اور ایک گائے سے ملاقات کی. گائے سے پوچھا &quot;کیا سوادج اسچ، میرے پاس نبل ہوسکتا ہے؟&quot; لیکن گوچ بہت سوادج تھا کہ گائے نے اسے کھایا تھا!</p>
+<p>راستے کے ساتھ، ووسی نے ایک کسان اور ایک گائے سے ملاقات کی۔ گائے سے پوچھا &quot;کیا سوادج اسچ، میرے پاس نبل ہوسکتا ہے؟&quot; لیکن گوچ بہت سوادج تھا کہ گائے نے اسے کھایا تھا!</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/10.jpg" /></p>
-<p>آپ نے کیا کیا ہے؟ &quot;یہ کہانی میری بہن کے لئے تحفہ تھا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا. کیک میری بہن کی شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے. میری بہن کیا کرے گی؟&quot;</p>
+<p>آپ نے کیا کیا ہے؟ &quot;یہ کہانی میری بہن کے لئے تحفہ تھا۔ بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا۔ پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے اپنی بہن کے کیک کے لئے انڈے کو توڑا۔ کیک میری بہن کی شادی کے لئے تھا۔ اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے۔ میری بہن کیا کرے گی؟&quot;</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/11.jpg" /></p>
-<p>گائے افسوس تھا وہ لالچی تھی. کسان نے اتفاق کیا کہ گائے اس کی بہن کے لئے تحفہ کے طور پر ووسی کے ساتھ جا سکتے ہیں. اور اسی طرح ووسی پر لگایا گیا.</p>
+<p>گائے افسوس تھا وہ لالچی تھی۔ کسان نے اتفاق کیا کہ گائے اس کی بہن کے لئے تحفہ کے طور پر ووسی کے ساتھ جا سکتے ہیں۔ اور اسی طرح ووسی پر لگایا گیا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/12.jpg" /></p>
-<p>لیکن گائے واپس آنے والے وقت میں کسان کو بھاگ گیا. اور ووسی نے اپنے سفر پر کھو دیا. وہ اپنی بہن کی شادی کے لئے بہت دیر ہو چکی تھی. مہمان پہلے ہی کھا رہے تھے.</p>
+<p>لیکن گائے واپس آنے والے وقت میں کسان کو بھاگ گیا۔ اور ووسی نے اپنے سفر پر کھو دیا۔ وہ اپنی بہن کی شادی کے لئے بہت دیر ہو چکی تھی۔ مہمان پہلے ہی کھا رہے تھے۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/13.jpg" /></p>
-<p>&quot;میں کیا کروں گا؟&quot; ووسی نے روکا. &quot;جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا. بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا. پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا. کیک شادی کے لئے تھا. اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے.&quot;</p>
+<p>&quot;میں کیا کروں گا؟&quot; ووسی نے روکا۔ &quot;جو گائے بھاگ گیا وہ ایک تحفہ تھا، جس کے نتیجے میں عمارتوں نے مجھے دیا۔ بلڈروں نے مجھے اسچھا دیا کیونکہ انہوں نے چھڑیوں کو پھل چنے سے پھینک دیا۔ پھل چنے نے مجھے چھڑی دی کیونکہ انہوں نے کیک کے لئے انڈے کو توڑا۔ کیک شادی کے لئے تھا۔ اب کوئی انڈے، کیک نہیں، اور کوئی تحفہ نہیں ہے۔&quot;</p>
 <center>
 <strong>12</strong>
 </center>
@@ -205,7 +205,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0291/14.jpg" /></p>
-<p>ووسی کی بہن تھوڑی دیر کے بارے میں سوچتے تھے، پھر اس نے کہا، &quot;وسو میرے بھائی، میں تحائف کے بارے میں واقعی پروا نہیں کرتا. مجھے کیک کے بارے میں بھی پرواہ نہیں ہے! ہم سب یہاں ایک ساتھ ہیں، میں خوش ہوں. اب اپنے زبردست کپڑے رکھو اور اس دن جشن منائیں! &quot;اور اسی طرح ووسی نے کیا.</p>
+<p>ووسی کی بہن تھوڑی دیر کے بارے میں سوچتے تھے، پھر اس نے کہا، &quot;وسو میرے بھائی، میں تحائف کے بارے میں واقعی پروا نہیں کرتا۔ مجھے کیک کے بارے میں بھی پرواہ نہیں ہے! ہم سب یہاں ایک ساتھ ہیں، میں خوش ہوں۔ اب اپنے زبردست کپڑے رکھو اور اس دن جشن منائیں! &quot;اور اسی طرح ووسی نے کیا۔</p>
 <center>
 <strong>13</strong>
 </center>
