--- a/stories/ur/0294_دادی-کے-کیلے_slides.html
+++ b/stories/ur/0294_دادی-کے-کیلے_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/02.jpg" /></p>
-<p>دادا کا باغ حیرت انگیز تھا، سورج، باجرا اور کاساوا سے بھرا ہوا تھا. لیکن سب سے بہتر کیلے تھے. اگرچہ دادی بہت سے پوتے تھے، میں نے خفیہ طور پر جانتا تھا کہ میں اس کا پسندیدہ تھا. اس نے مجھے اکثر اپنے گھر میں مدعو کیا. اس نے مجھے کچھ راز بھی بتایا. لیکن وہ ایک راز تھا جس نے میرے ساتھ اشتراک نہیں کیا تھا: وہ کہاں کیلے پکڑا.</p>
+<p>دادا کا باغ حیرت انگیز تھا، سورج، باجرا اور کاساوا سے بھرا ہوا تھا۔ لیکن سب سے بہتر کیلے تھے۔ اگرچہ دادی بہت سے پوتے تھے، میں نے خفیہ طور پر جانتا تھا کہ میں اس کا پسندیدہ تھا۔ اس نے مجھے اکثر اپنے گھر میں مدعو کیا۔ اس نے مجھے کچھ راز بھی بتایا۔ لیکن وہ ایک راز تھا جس نے میرے ساتھ اشتراک نہیں کیا تھا: وہ کہاں کیلے پکڑا۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/03.jpg" /></p>
-<p>ایک دن میں نے دادی کے گھر کے باہر سورج میں رکھی ایک بڑے پٹا ٹوکری دیکھا. جب میں نے پوچھا کہ یہ کیا تھا، صرف ایک ہی جواب تھا، &quot;یہ میرا جادو ٹوکری ہے.&quot; ٹوکری کے پیچھے، وہاں کئی کیلے کے پتے تھے کہ دادی سے وقت گزر گیا. میں جاننا چاہتا تھا. میں نے پوچھا &quot;دادا کیا ہیں، دادی؟&quot; صرف ایک ہی جواب تھا، &quot;وہ میری جادو پتی ہیں.&quot;</p>
+<p>ایک دن میں نے دادی کے گھر کے باہر سورج میں رکھی ایک بڑے پٹا ٹوکری دیکھا۔ جب میں نے پوچھا کہ یہ کیا تھا، صرف ایک ہی جواب تھا، &quot;یہ میرا جادو ٹوکری ہے۔&quot; ٹوکری کے پیچھے، وہاں کئی کیلے کے پتے تھے کہ دادی سے وقت گزر گیا۔ میں جاننا چاہتا تھا۔ میں نے پوچھا &quot;دادا کیا ہیں، دادی؟&quot; صرف ایک ہی جواب تھا، &quot;وہ میری جادو پتی ہیں۔&quot;</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/04.jpg" /></p>
-<p>یہ دادی، کیلے، کیلے کی پتیوں اور بڑی اسکی ٹوکری بہت دلچسپ لگ رہی تھی. لیکن دادی نے میری ماں کو ایک غلطی پر بھیجا. &quot;دادی، برائے مہربانی، مجھے دیکھتے ہیں جیسے آپ تیار کریں ...&quot; &quot;ضد نہ کرو، بچہ، جیسا کہ آپ کو کہا جاتا ہے،&quot; وہ زور دیتے ہیں. میں چل رہا تھا.</p>
+<p>یہ دادی، کیلے، کیلے کی پتیوں اور بڑی اسکی ٹوکری بہت دلچسپ لگ رہی تھی۔ لیکن دادی نے میری ماں کو ایک غلطی پر بھیجا۔ &quot;دادی، برائے مہربانی، مجھے دیکھتے ہیں جیسے آپ تیار کریں ۔۔۔&quot; &quot;ضد نہ کرو، بچہ، جیسا کہ آپ کو کہا جاتا ہے،&quot; وہ زور دیتے ہیں۔ میں چل رہا تھا۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/05.jpg" /></p>
-<p>جب میں واپس آیا تو دادی باہر بیٹھا تھا لیکن نہ ہی ٹوکری اور کیلے کے ساتھ. &quot;دادی، کہاں ٹوکری ہے، تمام کیلے کہاں ہیں، اور کہاں ...&quot; لیکن صرف ایک ہی جواب تھا، &quot;وہ میری جادو جگہ میں ہیں.&quot; ​​یہ بہت مایوس کن تھا!</p>
+<p>جب میں واپس آیا تو دادی باہر بیٹھا تھا لیکن نہ ہی ٹوکری اور کیلے کے ساتھ۔ &quot;دادی، کہاں ٹوکری ہے، تمام کیلے کہاں ہیں، اور کہاں ۔۔۔&quot; لیکن صرف ایک ہی جواب تھا، &quot;وہ میری جادو جگہ میں ہیں۔&quot; ​​یہ بہت مایوس کن تھا!</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/06.jpg" /></p>
-<p>دو دن بعد، دادی نے مجھے اپنے بیڈروم سے اس کی چھڑی چھڑی لینے کے لئے بھیجا. جیسے ہی میں نے دروازے کھول دیا، میں نے کیلے پکانے کی مضبوط بو کی طرف سے خیر مقدم کیا. اندرونی کمرہ میں دادی کی بڑی جادو اسٹور کی ٹوکری تھی. یہ ایک پرانی کمبل کی طرف سے پوشیدہ تھا. میں نے اسے اٹھایا اور اس کی شاندار بوسہ لگا دی.</p>
+<p>دو دن بعد، دادی نے مجھے اپنے بیڈروم سے اس کی چھڑی چھڑی لینے کے لئے بھیجا۔ جیسے ہی میں نے دروازے کھول دیا، میں نے کیلے پکانے کی مضبوط بو کی طرف سے خیر مقدم کیا۔ اندرونی کمرہ میں دادی کی بڑی جادو اسٹور کی ٹوکری تھی۔ یہ ایک پرانی کمبل کی طرف سے پوشیدہ تھا۔ میں نے اسے اٹھایا اور اس کی شاندار بوسہ لگا دی۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/07.jpg" /></p>
-<p>جب دادا نے کہا، دادی کی آواز نے مجھ پر زور دیا، &quot;تم کیا کر رہے ہو؟ جلدی جلدی کرو اور مجھے چھڑی لائیں. &quot;میں نے اس کی چھڑی چھڑی سے جلدی سے باہر نکالا. دادی نے پوچھا &quot;کیا تم مسکرا رہے ہو؟&quot; اس کے سوال نے مجھے احساس کیا کہ میں اب بھی اس کے جادو جگہ کی تلاش میں مسکرا رہا تھا.</p>
+<p>جب دادا نے کہا، دادی کی آواز نے مجھ پر زور دیا، &quot;تم کیا کر رہے ہو؟ جلدی جلدی کرو اور مجھے چھڑی لائیں۔ &quot;میں نے اس کی چھڑی چھڑی سے جلدی سے باہر نکالا۔ دادی نے پوچھا &quot;کیا تم مسکرا رہے ہو؟&quot; اس کے سوال نے مجھے احساس کیا کہ میں اب بھی اس کے جادو جگہ کی تلاش میں مسکرا رہا تھا۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/08.jpg" /></p>
-<p>مندرجہ ذیل دن جب دادی میرے ماں سے ملنے آئے تو، میں نے ایک بار پھر کیلے کو چیک کرنے کے لئے اپنے گھر پہنچ گئے. بہت پکا ہوا کا ایک گروپ تھا. میں نے ایک اٹھایا اور اسے اپنی پوشاک میں چھپایا. پھر ٹوکری کو ڈھکنے کے بعد، میں گھر کے پیچھے گیا اور جلدی کھایا. یہ سب سے پیاری کیلے تھا جو میں نے کبھی چکھا تھا.</p>
+<p>مندرجہ ذیل دن جب دادی میرے ماں سے ملنے آئے تو، میں نے ایک بار پھر کیلے کو چیک کرنے کے لئے اپنے گھر پہنچ گئے۔ بہت پکا ہوا کا ایک گروپ تھا۔ میں نے ایک اٹھایا اور اسے اپنی پوشاک میں چھپایا۔ پھر ٹوکری کو ڈھکنے کے بعد، میں گھر کے پیچھے گیا اور جلدی کھایا۔ یہ سب سے پیاری کیلے تھا جو میں نے کبھی چکھا تھا۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/09.jpg" /></p>
-<p>مندرجہ ذیل دن، جب دادی باغ میں سبزیوں کا انتخاب کرتے تھے تو میں نے کیلے میں کھینچ کر کھینچ لیا. تقریبا تمام پکا ہوا تھا. میں چار کا ایک گروپ لینے میں مدد نہیں کر سکا. جیسا کہ میں نے دروازے کی طرف اشارہ کیا، میں نے دادی ماں باہر کھینچ کر سنا. میں نے صرف اپنے کپڑے کے نیچے کیلے کو چھپانے میں مدد کی اور اس سے پہلے چلے گئے.</p>
+<p>مندرجہ ذیل دن، جب دادی باغ میں سبزیوں کا انتخاب کرتے تھے تو میں نے کیلے میں کھینچ کر کھینچ لیا۔ تقریبا تمام پکا ہوا تھا۔ میں چار کا ایک گروپ لینے میں مدد نہیں کر سکا۔ جیسا کہ میں نے دروازے کی طرف اشارہ کیا، میں نے دادی ماں باہر کھینچ کر سنا۔ میں نے صرف اپنے کپڑے کے نیچے کیلے کو چھپانے میں مدد کی اور اس سے پہلے چلے گئے۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/10.jpg" /></p>
-<p>مندرجہ ذیل دن مارکیٹ کا دن تھا. دادی جلد اٹھی. اس نے مارکیٹ میں فروخت کرنے کے لئے ہمیشہ پائپ کیلے اور کیساوا لیا. میں نے اس دن اس کا دورہ کرنے کے لئے جلدی نہیں کیا. لیکن میں طویل عرصے تک اس سے بچ نہیں سکتا تھا.</p>
+<p>مندرجہ ذیل دن مارکیٹ کا دن تھا۔ دادی جلد اٹھی۔ اس نے مارکیٹ میں فروخت کرنے کے لئے ہمیشہ پائپ کیلے اور کیساوا لیا۔ میں نے اس دن اس کا دورہ کرنے کے لئے جلدی نہیں کیا۔ لیکن میں طویل عرصے تک اس سے بچ نہیں سکتا تھا۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0294/11.jpg" /></p>
-<p>اس شام کے بعد مجھے اپنی ماں اور باپ اور دادی کی طرف سے بلایا گیا تھا. مجھے پتہ تھا کیوں. اس رات جب میں سو گیا تو مجھے پتہ تھا کہ میں کبھی بھی چوری نہیں کر سکتا، دادی سے نہیں، میرے والدین سے نہیں، اور یقینی طور پر کسی اور سے نہیں.</p>
+<p>اس شام کے بعد مجھے اپنی ماں اور باپ اور دادی کی طرف سے بلایا گیا تھا۔ مجھے پتہ تھا کیوں۔ اس رات جب میں سو گیا تو مجھے پتہ تھا کہ میں کبھی بھی چوری نہیں کر سکتا، دادی سے نہیں، میرے والدین سے نہیں، اور یقینی طور پر کسی اور سے نہیں۔</p>
 <center>
 <strong>10</strong>
 </center>
