--- a/stories/ur/0296_ٹام-کیلے-بیچنے-والا_slides.html
+++ b/stories/ur/0296_ٹام-کیلے-بیچنے-والا_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/02.jpg" /></p>
-<p>ٹام پکانا کیلے کی ایک ٹرے رکھتا ہے.</p>
+<p>ٹام پکانا کیلے کی ایک ٹرے رکھتا ہے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/03.jpg" /></p>
-<p>ٹام مارکیٹ کیلے کو فروخت کرنے کے لئے جاتا ہے.</p>
+<p>ٹام مارکیٹ کیلے کو فروخت کرنے کے لئے جاتا ہے۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/04.jpg" /></p>
-<p>مارکیٹ میں لوگ پھل خرید رہے ہیں.</p>
+<p>مارکیٹ میں لوگ پھل خرید رہے ہیں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/05.jpg" /></p>
-<p>لیکن کوئی بھی ٹام کے کیلے نہیں خرید رہا ہے. وہ خواتین سے پھل خریدنے کی ترجیح دیتے ہیں.</p>
+<p>لیکن کوئی بھی ٹام کے کیلے نہیں خرید رہا ہے۔ وہ خواتین سے پھل خریدنے کی ترجیح دیتے ہیں۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/06.jpg" /></p>
-<p>لوگوں کا کہنا ہے کہ &quot;ہماری کمیونٹی میں، خواتین صرف پھل فروخت کرتی ہیں.&quot; &quot;یہ کس طرح آدمی ہے؟&quot; لوگ پوچھتے ہیں.</p>
+<p>لوگوں کا کہنا ہے کہ &quot;ہماری کمیونٹی میں، خواتین صرف پھل فروخت کرتی ہیں۔&quot; &quot;یہ کس طرح آدمی ہے؟&quot; لوگ پوچھتے ہیں۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/07.jpg" /></p>
-<p>لیکن ٹام ترک نہیں کرتا. وہ کہتے ہیں، &quot;میری کیلے خریدیں! میری میٹھی پکا کیلے خریدیں!&quot;</p>
+<p>لیکن ٹام ترک نہیں کرتا۔ وہ کہتے ہیں، &quot;میری کیلے خریدیں! میری میٹھی پکا کیلے خریدیں!&quot;</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/08.jpg" /></p>
-<p>ایک خاتون ٹرے سے کیلے کا ایک گروپ اٹھا لیتا ہے. وہ احتیاط سے کیلے کو دیکھتا ہے.</p>
+<p>ایک خاتون ٹرے سے کیلے کا ایک گروپ اٹھا لیتا ہے۔ وہ احتیاط سے کیلے کو دیکھتا ہے۔</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/09.jpg" /></p>
-<p>عورت کیلے خریدتی ہے.</p>
+<p>عورت کیلے خریدتی ہے۔</p>
 <center>
 <strong>8</strong>
 </center>
@@ -169,7 +169,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/10.jpg" /></p>
-<p>زیادہ لوگ اسٹال میں آتے ہیں. وہ ٹام کیلے خریدتے ہیں اور انہیں کھاتے ہیں.</p>
+<p>زیادہ لوگ اسٹال میں آتے ہیں۔ وہ ٹام کیلے خریدتے ہیں اور انہیں کھاتے ہیں۔</p>
 <center>
 <strong>9</strong>
 </center>
@@ -178,7 +178,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/11.jpg" /></p>
-<p>جلد ہی، ٹرے خالی ہے. ٹام اس رقم کا حساب کرتا ہے جسے وہ کمایا گیا تھا.</p>
+<p>جلد ہی، ٹرے خالی ہے۔ ٹام اس رقم کا حساب کرتا ہے جسے وہ کمایا گیا تھا۔</p>
 <center>
 <strong>10</strong>
 </center>
@@ -187,7 +187,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/12.jpg" /></p>
-<p>پھر ٹام صابن، چینی، اور روٹی خریدتا ہے. وہ چیزیں اپنی ٹرے میں رکھتی ہیں.</p>
+<p>پھر ٹام صابن، چینی، اور روٹی خریدتا ہے۔ وہ چیزیں اپنی ٹرے میں رکھتی ہیں۔</p>
 <center>
 <strong>11</strong>
 </center>
@@ -196,7 +196,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0296/13.jpg" /></p>
-<p>ٹام اس کے سر پر ٹرے کو توازن دیتا ہے اور گھر جاتا ہے.</p>
+<p>ٹام اس کے سر پر ٹرے کو توازن دیتا ہے اور گھر جاتا ہے۔</p>
 <center>
 <strong>12</strong>
 </center>
