--- a/stories/ur/0324_جس-دن-میں-نے-شہر-کے-لئے-گھر-چھوڑ-دیا.html
+++ b/stories/ur/0324_جس-دن-میں-نے-شہر-کے-لئے-گھر-چھوڑ-دیا.html
@@ -49,112 +49,112 @@ Lesley Koyi, Ursula Nafula<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/02.jpg" /></p>
 
-<p>میرے گاؤں میں چھوٹے بس سٹاپ لوگوں کے ساتھ مصروف تھے اور بسیں بسیں تھیں. زمین پر بھی زیادہ چیزیں لوڈ کرنے کے لئے تھے. ٹاؤن ان ناموں پر چل رہے تھے جہاں ان کی بسیں جا رہی تھیں.</p>
+<p>میرے گاؤں میں چھوٹے بس سٹاپ لوگوں کے ساتھ مصروف تھے اور بسیں بسیں تھیں۔ زمین پر بھی زیادہ چیزیں لوڈ کرنے کے لئے تھے۔ ٹاؤن ان ناموں پر چل رہے تھے جہاں ان کی بسیں جا رہی تھیں۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/03.jpg" /></p>
 
-<p>“شہر! شہر! مغرب جا رہا ہے! “میں نے ایک آواز پر زور دیا. یہ بس میں پکڑنے کی ضرورت تھی.</p>
+<p>“شہر! شہر! مغرب جا رہا ہے! “میں نے ایک آواز پر زور دیا۔ یہ بس میں پکڑنے کی ضرورت تھی۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/04.jpg" /></p>
 
-<p>شہر بس تقریبا مکمل تھا، لیکن زیادہ تر لوگ ابھی بھی آگے بڑھ رہے تھے. کچھ نے اپنے سامان بس کے نیچے پیکا. دوسروں کے اندر اندر ریک پر ڈال دیا.</p>
+<p>شہر بس تقریبا مکمل تھا، لیکن زیادہ تر لوگ ابھی بھی آگے بڑھ رہے تھے۔ کچھ نے اپنے سامان بس کے نیچے پیکا۔ دوسروں کے اندر اندر ریک پر ڈال دیا۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/05.jpg" /></p>
 
-<p>نئے مسافروں نے اپنے ٹکٹوں کو دھوکہ دیا کیونکہ وہ بھیڑ بس میں بیٹھے کہیں کہیں. طویل عرصے تک نوجوان بچوں کے ساتھ خواتین نے انہیں آرام دہ بنا دیا.</p>
+<p>نئے مسافروں نے اپنے ٹکٹوں کو دھوکہ دیا کیونکہ وہ بھیڑ بس میں بیٹھے کہیں کہیں۔ طویل عرصے تک نوجوان بچوں کے ساتھ خواتین نے انہیں آرام دہ بنا دیا۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/06.jpg" /></p>
 
-<p>میں ایک ونڈو کے قریب میں نکالا. جو شخص مجھ کے ساتھ بیٹھی ہے وہ سبز پلاسٹک بیگ میں مضبوطی رکھتا ہے. انہوں نے پرانے سینڈل پہنے ہوئے، ایک کوٹ باہر پہنے ہوئے، اور اس نے غصہ دیکھا.</p>
+<p>میں ایک ونڈو کے قریب میں نکالا۔ جو شخص مجھ کے ساتھ بیٹھی ہے وہ سبز پلاسٹک بیگ میں مضبوطی رکھتا ہے۔ انہوں نے پرانے سینڈل پہنے ہوئے، ایک کوٹ باہر پہنے ہوئے، اور اس نے غصہ دیکھا۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/07.jpg" /></p>
 
-<p>میں نے بس سے باہر دیکھا اور احساس ہوا کہ میں اپنے گاؤں چھوڑ کر جا رہا ہوں، جس جگہ میں بڑا ہوا تھا. میں بڑا شہر جا رہا تھا.</p>
+<p>میں نے بس سے باہر دیکھا اور احساس ہوا کہ میں اپنے گاؤں چھوڑ کر جا رہا ہوں، جس جگہ میں بڑا ہوا تھا۔ میں بڑا شہر جا رہا تھا۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/08.jpg" /></p>
 
-<p>لوڈنگ مکمل ہوگئی اور تمام مسافروں کو بیٹھا گیا. ہاکرز نے ابھی تک اپنے سامان کو مسافروں کو فروخت کرنے کے لئے بس میں راستہ دھکا دیا. ہر ایک فروخت کے لئے دستیاب کیا ناموں کے نام پر چل رہا تھا. الفاظ نے مجھ سے مذاق لگایا.</p>
+<p>لوڈنگ مکمل ہوگئی اور تمام مسافروں کو بیٹھا گیا۔ ہاکرز نے ابھی تک اپنے سامان کو مسافروں کو فروخت کرنے کے لئے بس میں راستہ دھکا دیا۔ ہر ایک فروخت کے لئے دستیاب کیا ناموں کے نام پر چل رہا تھا۔ الفاظ نے مجھ سے مذاق لگایا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/09.jpg" /></p>
 
-<p>چند مسافروں نے مشروبات پائی، دوسروں نے چھوٹے نمکین خریدا اور چکر کرنا شروع کردیا. جنہوں نے میرے جیسے کچھ پیسہ نہیں تھے، ابھی دیکھا تھا.</p>
+<p>چند مسافروں نے مشروبات پائی، دوسروں نے چھوٹے نمکین خریدا اور چکر کرنا شروع کردیا۔ جنہوں نے میرے جیسے کچھ پیسہ نہیں تھے، ابھی دیکھا تھا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/10.jpg" /></p>
 
-<p>یہ سرگرمیاں بس کے ہڑتال کی طرف سے مداخلت کی گئی تھیں، یہ ایک نشانی ہے جو ہم چھوڑنے کے لئے تیار تھے. طوفان نے ہاکروں پر زور دیا کہ وہ باہر نکلیں.</p>
+<p>یہ سرگرمیاں بس کے ہڑتال کی طرف سے مداخلت کی گئی تھیں، یہ ایک نشانی ہے جو ہم چھوڑنے کے لئے تیار تھے۔ طوفان نے ہاکروں پر زور دیا کہ وہ باہر نکلیں۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/11.jpg" /></p>
 
-<p>ہاکرز ایک دوسرے کو دھکیلنے کے لئے بس سے باہر نکلنے کا راستہ بناتے ہیں. بعض نے مسافروں کو واپس تبدیل کردیا. دوسروں نے مزید اشیاء فروخت کرنے کے آخری منٹ کی کوشش کی.</p>
+<p>ہاکرز ایک دوسرے کو دھکیلنے کے لئے بس سے باہر نکلنے کا راستہ بناتے ہیں۔ بعض نے مسافروں کو واپس تبدیل کردیا۔ دوسروں نے مزید اشیاء فروخت کرنے کے آخری منٹ کی کوشش کی۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/12.jpg" /></p>
 
-<p>جیسے ہی بس بس سٹاپ چھوڑ دیا، میں نے ونڈو سے باہر نکالا. میں نے حیرت کیا کہ اگر میں دوبارہ اپنے گاؤں میں واپس آؤں گا.</p>
+<p>جیسے ہی بس بس سٹاپ چھوڑ دیا، میں نے ونڈو سے باہر نکالا۔ میں نے حیرت کیا کہ اگر میں دوبارہ اپنے گاؤں میں واپس آؤں گا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/13.jpg" /></p>
 
-<p>سفر کے سفر کے دوران، بس کے اندر بہت گرم ہوا. میں نے اپنی آنکھوں کو نیند کی امید بند کر دی.</p>
+<p>سفر کے سفر کے دوران، بس کے اندر بہت گرم ہوا۔ میں نے اپنی آنکھوں کو نیند کی امید بند کر دی۔</p>
 
 <div class="pagenum">12</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/14.jpg" /></p>
 
-<p>لیکن میرا دماغ گھر واپس آگیا. کیا میری ماں محفوظ ہو گی کیا میرا خرگوش کسی بھی پیسہ وصول کرے گا؟ کیا میرا بھائی میرا درخت کے بیجوں کو پانی میں یاد رکھے گا؟</p>
+<p>لیکن میرا دماغ گھر واپس آگیا۔ کیا میری ماں محفوظ ہو گی کیا میرا خرگوش کسی بھی پیسہ وصول کرے گا؟ کیا میرا بھائی میرا درخت کے بیجوں کو پانی میں یاد رکھے گا؟</p>
 
 <div class="pagenum">13</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/15.jpg" /></p>
 
-<p>راستے میں، میں اس جگہ کا نام یاد کرتا ہوں جہاں میرے چاچا بڑے شہر میں رہتے تھے. جب میں سو گیا تو میں ابھی بھی اس سے گونگا رہا تھا.</p>
+<p>راستے میں، میں اس جگہ کا نام یاد کرتا ہوں جہاں میرے چاچا بڑے شہر میں رہتے تھے۔ جب میں سو گیا تو میں ابھی بھی اس سے گونگا رہا تھا۔</p>
 
 <div class="pagenum">14</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/16.jpg" /></p>
 
-<p>نو گھنٹوں کے بعد میں نے زور سے زور دیا کہ میں مسافروں کو اپنے گاؤں میں واپس جا ؤں. میں نے اپنا چھوٹا سا بیگ پکڑ لیا اور بس سے چھلانگ لگایا.</p>
+<p>نو گھنٹوں کے بعد میں نے زور سے زور دیا کہ میں مسافروں کو اپنے گاؤں میں واپس جا ؤں۔ میں نے اپنا چھوٹا سا بیگ پکڑ لیا اور بس سے چھلانگ لگایا۔</p>
 
 <div class="pagenum">15</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0324/17.jpg" /></p>
 
-<p>واپسی بس تیزی سے بھر رہا تھا. جلد ہی یہ مشرقی راستہ واپس کرے گا. میرے لئے سب سے اہم چیز، میرے چاچا کے گھر کی تلاش شروع کرنا تھا.</p>
+<p>واپسی بس تیزی سے بھر رہا تھا۔ جلد ہی یہ مشرقی راستہ واپس کرے گا۔ میرے لئے سب سے اہم چیز، میرے چاچا کے گھر کی تلاش شروع کرنا تھا۔</p>
 
 <div class="pagenum">16</div>
 <p></div><div class="pagebreak"></p>
