--- a/stories/ur/0327_جانوروں-کی-گنتی.html
+++ b/stories/ur/0327_جانوروں-کی-گنتی.html
@@ -49,56 +49,56 @@ Zanele Buthelezi, Thembani Dladla, Clare Verbeek<br>اردو</div><div class="pa
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
 
-<p>ایک ہاتھی پانی پینے جا رہا ہے.</p>
+<p>ایک ہاتھی پانی پینے جا رہا ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
 
-<p>دو جراثیم پانی پینے جا رہے ہیں.</p>
+<p>دو زرافے پانی پینے جا رہے ہیں۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
 
-<p>تین بفی اور چار پرندوں کو بھی پانی پینے جا رہا ہے.</p>
+<p>تین بھینسیں اور چار پرندے بھی پانی پینے جا رہے ہیں۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
 
-<p>پانی کے لئے پانچ پنکھ اور چھ جنگلی سورج چل رہے ہیں.</p>
+<p>پانچ امپالا اور چھ جنگلی سورپانی کی طرف چل کے جا رہے ہیں۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
 
-<p>سات جریوں پانی کے لئے چل رہے ہیں.</p>
+<p>سات زیبرے پانی کے لئے دوڑے جا رہے ہیں۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
 
-<p>آٹھ میڑک اور نو مچھلی پانی میں تیراکی کر رہے ہیں.</p>
+<p>آٹھ مینڈک اور نو مچھلیاں پانی میں تیراکی کر رہی ہیں۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
 
-<p>ایک شعر ہے. وہ بھی پینا چاہتا ہے. شیر سے کون ڈرتا ہے؟</p>
+<p>ایک شیردھاڑ رھا ہے۔ وہ بھی پانی پینا چاہتا ہے۔ شیر سے کون ڈرتا ہے؟</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
 
-<p>ایک ہاتھی شیر کے ساتھ پانی پی رہا ہے.</p>
+<p>ایک ہاتھی شیر کے ساتھ پانی پی رہا ہے۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
