--- a/stories/ur/0327_جانوروں-کی-گنتی_slides.html
+++ b/stories/ur/0327_جانوروں-کی-گنتی_slides.html
@@ -97,7 +97,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/02.jpg" /></p>
-<p>ایک ہاتھی پانی پینے جا رہا ہے.</p>
+<p>ایک ہاتھی پانی پینے جا رہا ہے۔</p>
 <center>
 <strong>1</strong>
 </center>
@@ -106,7 +106,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/03.jpg" /></p>
-<p>دو جراثیم پانی پینے جا رہے ہیں.</p>
+<p>دو زرافے پانی پینے جا رہے ہیں۔</p>
 <center>
 <strong>2</strong>
 </center>
@@ -115,7 +115,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/04.jpg" /></p>
-<p>تین بفی اور چار پرندوں کو بھی پانی پینے جا رہا ہے.</p>
+<p>تین بھینسیں اور چار پرندے بھی پانی پینے جا رہے ہیں۔</p>
 <center>
 <strong>3</strong>
 </center>
@@ -124,7 +124,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/05.jpg" /></p>
-<p>پانی کے لئے پانچ پنکھ اور چھ جنگلی سورج چل رہے ہیں.</p>
+<p>پانچ امپالا اور چھ جنگلی سورپانی کی طرف چل کے جا رہے ہیں۔</p>
 <center>
 <strong>4</strong>
 </center>
@@ -133,7 +133,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/06.jpg" /></p>
-<p>سات جریوں پانی کے لئے چل رہے ہیں.</p>
+<p>سات زیبرے پانی کے لئے دوڑے جا رہے ہیں۔</p>
 <center>
 <strong>5</strong>
 </center>
@@ -142,7 +142,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/07.jpg" /></p>
-<p>آٹھ میڑک اور نو مچھلی پانی میں تیراکی کر رہے ہیں.</p>
+<p>آٹھ مینڈک اور نو مچھلیاں پانی میں تیراکی کر رہی ہیں۔</p>
 <center>
 <strong>6</strong>
 </center>
@@ -151,7 +151,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/08.jpg" /></p>
-<p>ایک شعر ہے. وہ بھی پینا چاہتا ہے. شیر سے کون ڈرتا ہے؟</p>
+<p>ایک شیردھاڑ رھا ہے۔ وہ بھی پانی پینا چاہتا ہے۔ شیر سے کون ڈرتا ہے؟</p>
 <center>
 <strong>7</strong>
 </center>
@@ -160,7 +160,7 @@
 <section class="slide level1">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0327/09.jpg" /></p>
-<p>ایک ہاتھی شیر کے ساتھ پانی پی رہا ہے.</p>
+<p>ایک ہاتھی شیر کے ساتھ پانی پی رہا ہے۔</p>
 <center>
 <strong>8</strong>
 </center>
