--- a/stories/ur/0337_موم-کے-بچوں.html
+++ b/stories/ur/0337_موم-کے-بچوں.html
@@ -49,77 +49,77 @@ Southern African Folktale<br>اردو</div><div class="pagebreak">
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/02.jpg" /></p>
 
-<p>ایک دفعہ ایک بار، ایک خوش خاندان ہے.</p>
+<p>ایک دفعہ ایک بار، ایک خوش خاندان ہے۔</p>
 
 <div class="pagenum">1</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/03.jpg" /></p>
 
-<p>وہ ایک دوسرے کے ساتھ کبھی نہیں لڑا. انہوں نے گھروں اور کھیتوں میں اپنے والدین کی مدد کی.</p>
+<p>وہ ایک دوسرے کے ساتھ کبھی نہیں لڑا۔ انہوں نے گھروں اور کھیتوں میں اپنے والدین کی مدد کی۔</p>
 
 <div class="pagenum">2</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/04.jpg" /></p>
 
-<p>لیکن انہیں آگ کے قریب جانے کی اجازت نہیں تھی.</p>
+<p>لیکن انہیں آگ کے قریب جانے کی اجازت نہیں تھی۔</p>
 
 <div class="pagenum">3</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/05.jpg" /></p>
 
-<p>انہیں رات کے دوران ان کے تمام کام کرنا پڑا تھا. کیونکہ وہ موم سے بنا رہے تھے.</p>
+<p>انہیں رات کے دوران ان کے تمام کام کرنا پڑا تھا۔ کیونکہ وہ موم سے بنا رہے تھے۔</p>
 
 <div class="pagenum">4</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/06.jpg" /></p>
 
-<p>لیکن ایک لڑکے نے سورج کی روشنی میں باہر جانے کی کوشش کی.</p>
+<p>لیکن ایک لڑکے نے سورج کی روشنی میں باہر جانے کی کوشش کی۔</p>
 
 <div class="pagenum">5</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/07.jpg" /></p>
 
-<p>ایک دن طویل عرصے سے بہت مضبوط تھا. اس کے بھائی نے انہیں خبردار کیا …</p>
+<p>ایک دن طویل عرصے سے بہت مضبوط تھا۔ اس کے بھائی نے انہیں خبردار کیا ۔۔۔</p>
 
 <div class="pagenum">6</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/08.jpg" /></p>
 
-<p>لیکن بہت دیر ہو چکی تھی! وہ گرم سورج میں پگھلا ہوا.</p>
+<p>لیکن بہت دیر ہو چکی تھی! وہ گرم سورج میں پگھلا ہوا۔</p>
 
 <div class="pagenum">7</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/09.jpg" /></p>
 
-<p>موم بچوں کو ان کے بھائی پگھلنے کو دیکھنے کے لئے اتنا اداس تھا.</p>
+<p>موم بچوں کو ان کے بھائی پگھلنے کو دیکھنے کے لئے اتنا اداس تھا۔</p>
 
 <div class="pagenum">8</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/10.jpg" /></p>
 
-<p>لیکن انہوں نے ایک منصوبہ بنایا. انہوں نے پگھل موم کی چربی کو ایک پرندوں میں تبدیل کیا.</p>
+<p>لیکن انہوں نے ایک منصوبہ بنایا۔ انہوں نے پگھل موم کی چربی کو ایک پرندوں میں تبدیل کیا۔</p>
 
 <div class="pagenum">9</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/11.jpg" /></p>
 
-<p>انہوں نے اپنے برے بھائی کو ایک اعلی پہاڑ تک لے لیا.</p>
+<p>انہوں نے اپنے برے بھائی کو ایک اعلی پہاڑ تک لے لیا۔</p>
 
 <div class="pagenum">10</div>
 <p></div><div class="pagebreak"></p>
 
 <p><img src="https://raw.githubusercontent.com/global-asp/asp-imagebank/master/medium/0337/12.jpg" /></p>
 
-<p>اور سورج گلاب کے طور پر، وہ صبح کی روشنی میں گانا گزر گیا.</p>
+<p>اور سورج گلاب کے طور پر، وہ صبح کی روشنی میں گانا گزر گیا۔</p>
 
 <div class="pagenum">11</div>
 <p></div><div class="pagebreak"></p>
